--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,29 +1,18 @@
 ---
-title: 英军情五处警告议会：工党金主华裔女律师疑为中共间谍
+title: 房地产巨无霸又双叕见闪崩
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1858621/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1858703/)
 
-翻译：zzballack
-上传：追着曙光跑
+**撰稿人：东南**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Picture1-6.jpg)**图片来源网络**
+**昨天地产巨无霸融创中国股价突然暴跌****22%****，创造公司自****2010****年上市以来近****12****年最大单日跌幅。****1****月****13****日早间公司抛出一份配股融资公告，拟以每股****10****港元配售****4.52****亿股股份，融资****45.2****亿港元，其中一半用来还债。此次配股为了保持吸引力，比前一交易日收盘价折让****15%****，融创中国近两年本已下跌近****80%****，此基础上再深度折让，****10****港元一股的配股价基本可以说是****“****打骨折****”****。**
 
-据英国《每日邮报》（Daily Mail）1月13日报道，英国军情五处（MI5）今天向国会议员们发送了一封电子邮件警告说，一名与前部长有联系的工党捐助者是一名中共间谍。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/WhatsApp-Image-2022-01-14-at-17.18.11.jpeg)图片来源：网络
-MI5警告说，长期在英国伦敦经营律师业务的李贞驹（Christine Ching Kui Lee）“为中共统战部从事政治干预活动，与国会议员等相关政治实体接触。她与英国政界人士有‘广泛接触’，为中共与现任议员和有意竞选成为国会议员的人‘建立了联系’，她向政界人士的捐款资金来自在中国和香港的非英国人。任何与她接触的人都应该‘注意她的隶属关系’及其‘推进中共议程的活动’。”
+**就在****2021****年****11****月，融创中国刚刚通过配股发行****3.35****亿股，募资约****50****亿港元。间隔不到两个月再次低位配股，公司到底是有多缺钱？ 孙宏斌掌舵的融创中国，****2021****年实现近****6000****亿元的合同销售额，仅次于碧桂园和万科，跻身行业前三。值得关注的是，就在两个月前的****2021****年****11****月****13****日，融创中国首次配售****3.35****亿股公司股份，每股价格****15.18****港元，募资约****50.85****亿港元。而本次配售价为每股股份****10****港元，较上次配售价格下降了****34.12%****。密集低价配股融资，市场担忧融创中国资金链。就在****1****月****12****日，有消息称融创集团旗下多家公司部分股权被法院冻结。融创相关人士则表示，法院冻结资产是因为，受到监管账户监管加强的影响，公司部分项目与业务伙伴在商业合作上产生了小纠纷。 **
 
-李贞驹的律所Christine Lee & Co Solicitors在伦敦、伯明翰和北京设有办事处，她是中共驻伦敦大使馆的首席法律顾问。除此之外，李贞驹还身兼多种职位：英国最大的华人律师行董事长、中共侨联特聘海外法律顾问、英国议会跨党派中国小组秘书长等等。
+**好熟悉的暴雷节奏又扑面而来了，这眼看着还有半个来月就要过年了，还能让中国老百姓过个安定年吗？相较其他民族而言我们华人不管是富人还是穷人都会把自己的钱压在房子上，恒大的事还没有个结果，照这样的发展继续下去融创变成“恒二”相信很多人已经不会再怀疑，回头想想就像这种的龙头的房企都一直在不停的暴雷，这样的企业还会有机构当大韭菜去给他们融资吗？没有新的融资进入的话，那可以想象接下来的地产企业一定会像多米诺骨牌一样一个个的倒下。出来混迟早要还的。中共国的地产行业最后必然将一地鸡毛！**
 
-李贞驹向前工党党魁杰里米·科尔宾 (Jeremy Corbyn)盟友巴里·加德纳（Barry Gardiner）捐赠了50多万英镑，其中约20万英镑用于支付加德纳其中两名国会助手的薪资。她的儿子丹尼尔·威尔克斯(Daniel Wilkes)曾在加德纳议员的办公室工作，这意味着他有特权可以持员工证进入议会大楼(Parliamentary Estate)。加德纳议员一直支持中共更多地参与英国核工业的企图，包括欣克利角（Hinkley Point）发电厂。
-
-据报道，李贞驹还向工党的其他部门捐赠了数十万英镑，她的公司在2005年向自由民主党捐赠了5000英镑，并在2013年向现任党魁、时任能源大臣的爱德·戴维 (Ed Davey)捐赠了5000英镑。她与保守党也有联系。10多年前，当中共跟英国的关系处于“黄金时代”时，李贞驹一度被英国官员奉为座上宾。例如，当中共代表团和政要访问英国时，她的身影经常出现在英国议会。2006年，李贞驹发起了一个所谓的“英国华人参政计划”，称让华人的声音得到英国社会重视。该计划得到英国政界的关注，甚至赢得了唐宁街的夸奖。李贞驹曾在2019年获得时任英国首相特雷莎·梅（Theresa May）颁发的“社群之光”（Points Of Light）奖章，以表彰她身为社群志工的成就。五年前，人们首次对她的资助提出质疑，但没有采取任何行动。
-
-英国保守党议员和前任党魁邓肯·史密斯（Sir George Iain Duncan Smith）爵士1月13日在议会下院就军情五处的警告提问。他说，这是“一个严重关切的问题”，呼吁将李贞驹驱逐出境，并要求政府向下院作出解释。
-
-英国内政大臣普丽蒂·帕特尔 (Priti Patel)说，一个“代表中共故意从事政治干预活动的人把目标对准了议员，这是令人极为关切的，但英国已经制定了识别外国干预的措施。”
-
-英国官员的一个担忧是，目前没有法律应对干预。但他们相信公开事实是防控未来风险的最佳途径，正如现在军情五处所作的一样。
-
-信息来源：[MI5 issues urgent warning to Commons about Chinese lawyer trying to corrupt UK politicians: London-based solicitor has donated £500,000 to Corbynite Labour MP and her son worked in his office – until he quit today](https://www.dailymail.co.uk/news/article-10398665/MI5-send-urgent-email-MPs-warning-Chinese-woman.html)
-
+文章参考：[闪崩！房企巨无霸突然暴跌22%…](https://www.163.com/dy/article/GTK13CPA0530NLC9.html)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
