--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,41 +1,33 @@
 ---
-title: 用易经原文解析毛泽东这个名字 ——绝非润泽东方
+title: 曾、习逐鹿中原
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1858615/)
+`银河勇气之星` [轉載自GNews](https://gnews.org/zh-hans/1858691/)
 
-撰稿—玄鸟
-校对/上传—无明逆流
+By：银河勇气星｜楚天秋
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截屏2022-01-14-17.15.03.png)图源：网路
+古代的中国也就是以河南为主的中原地区，如今地图上那块巴掌大的地方，历史上烽烟四起，英雄辈出，所谓“得中原者得天下”，这里不免留下很多朝代更迭的痕迹。其文明的鼎盛时期是北宋，一百多年里，除了占据古代文学小半边天的宋词，还留下了很多故事，成为后世小说创作的源泉之一。只是河南的气候并不十分调和，旱涝不均，黄河泥沙俱下，冬消夏涨，冬季河床露底、干涸现天，时而有之，夏季浊水横流、毁堤成灾，也不在少数。但造成大灾大难，肯定不是天灾而是人祸。民国时期的花园口决堤事件，导致几百万人流离失所、死伤无数、灾民遍地。而中共制造的以郑州为中心，遍布河南省广大地区的水灾，老百姓连迁徙的自由都没有，死得无声无息，活得死气沉沉，对比之下，不得不说中共之祸甚于国民政府。
 
-毛泽东（繁体字毛澤東），字润之（原作“咏芝”，后毛本人自作主张改为“润之”）。墙内媒体，通常以润泽东方，来解析毛泽东这个名字。笔者不才，在读《易经》的时候，偶然发现这个名字的真实含义。。。
+2021年对于郑州来说，真可谓多灾多难。郑州处在中原腹地，虽然是交通枢纽，但并不十分引人注意。就像一个经常可以看到的老熟人，各方面都平平无奇，庸庸碌碌，人们转头就会忘掉他。中共似乎和郑州过不去，泄洪成灾之后，还不忘来一波疫情封城，刚消停几个月，老百姓渐渐忘了一些伤痛，又来一波疫情，而且还是全省范围的，如同水灾。真是一波未平一波又起，河南老乡到哪说理去呢！不知道是老天睁眼，还是事有凑巧，就在这波疫情刚刚起步阶段，许昌警方突然发了一则刑事拘留的通告，关于新冠病毒核算测试的事情，可以说没有小事，因为关系到亿万人，牵一发而动全身。试想一下，中共释放新冠病毒两年以来，有多少人做过核算测试，有多少地方因为测试阳性而封楼、封区、封城，又有多少人因为“阳性”，大难临头，家破人亡。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Wh12.02.04-PM.jpeg)图片来源：网络
+不由得让老百姓浮想联翩，这个所谓的金域公司，究竟在哪些地方检测过，在检测过程中做了什么手脚。这对于许昌警方来说，更是一个“奇迹”，事关不知道多少人生活和生命的大案，这要是坐实了、办好了，那就一步登天了。小小一个地区级别、小有名气（曹操曾迫汉献帝迁都于此）的许昌，接了个“通天大案”。金域公司的背后是钟南山父子，钟南山的背后是帮它挂牌子的总加速师。如果此案成功告破，在法治国家，加速师最少引咎辞职。在美欧，加速师辞职后，沿街乞讨没人给饭，饿死街头。在日本得剖腹谢罪，在韩国铁定吃牢饭。不过还是先停止幻想，这是中共国，上述一切不会发生。毛魔虐死几千万百姓，也寿终正寝了，中共评价三七开（三分过、七分功），还“瑕不掩瑜”呢！
 
-在揭示那个名字的真实含义之前，咱们先作一番铺垫工作，先讲述一下与毛泽东有关的一个神秘数字“二十八”。
+还是来尝试分析一下，事情中的几个主要角色，再说其它。首先是金域公司，“坑”级背书的网红家族“钟氏禽兽”，可不是善类。仿佛一只藏獒，只有它咬别人的份儿，啥时候变成了被咬的对象了呢！粗略想想都知道，金域公司绝对不是第一次作案，应该说一直在作案，整个医疗体系都在有意无意地为非作歹，草菅人命，何况“金域”。过去两年没见哪个公司被某地警方“刑事”呀!不管是新冠疫苗生产公司，还是核酸检测公司，都顺利得很，股票大涨，赚得盆满钵满，悠哉游哉。到处追着老百姓打疫苗，不打疫苗各种威胁，也没被立案过。按在地上做核酸，在各种东西上检测核酸，可以说除了天外来物，别的任凭是什么，都能检测出“阳性”，质疑的人很多，从来也没被追究过啥。一度给老百姓的错觉：可能中共国实际统治集团是“新冠防疫小组”，任何和疫情相关的事情，警察都没插过手.
 
-1.毛泽东，繁体字毛澤東，繁体字的总笔画数，正好二十八画。而“二十八画生”，也正好是毛泽东的一个化名。
+那么是不是许昌警方有什么过人之处呢？北、上、广、深，武汉、西安，都不行，就属许昌警察牛气，这看来明显不合理。如果想查案，以现在的技术能力，都不在话下，老百姓在网上抱怨几句，马上就有警察敲门，更别说在现实环境里作案了，只有想不想抓的问题，不存在是否抓得到的疑虑。那为什么偏偏是许昌，郑州不是更直接，金域分公司驻地就在郑州。到目前为止，除了最高检察院，没有别的部门声援或者转载许昌警方的公告，加速师掌控的CCTV对此案更加是只字未提。从最近对孙立军案的公开来看，有点对台戏的味道。联系郭先生说的中共党内高人曾庆红，是“司马懿”的不二人选，再看许昌就有点意思了。
 
-2.毛泽东生于1893年。1921年，毛泽东加入了刚刚成立的共产党。那一年，毛泽东正好二十八周岁。也是在这一年，毛泽东和杨开慧结婚。
+中共内斗愈演愈烈，“喝咖啡的”和“吃大蒜的”终究谈不拢了。海派、习派摆开了棋局，逐鹿中原。面食为主的河南老百姓成了棋子，海派用许昌警方为“炮”起手，先走一步杀招，以金域公司背后的“禽兽父子”为“卒”，隔“山”打“猪”，直逼加速师，可谓“轰天一炮”。许昌是当初曹魏政权孕育之地，司马家族蛰伏之所，看起来这个博古通今，天文地理，阴阳风水，无所不知的全能型“棋手”，就是曾庆红。接下来还会有什么，会不会有古都洛阳的消息，静待爆料革命解密。
 
-3.1949年，共产党篡政成功，那一年，毛泽东正好五十六周岁。五十六是两个二十八的加和。
+* * *
 
-4.1976年，毛泽东离世，这一年，毛泽东周岁83岁，虚岁84岁。（按中国古代的习俗，人死是按虚岁论的）。八十四是三个二十八的加和。
+作者：楚天秋
+发布：骄子
 
-5.共产党的共字拆开，是“廿+八”，廿发音是nian，含义是二十，廿八也就是二十八的意思。
-其余还有很多，笔者在此就不一一列举了！
+[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)，欢迎各位战友加入。欢迎订阅我们的我们的G-TV官方频道[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)、[银河农场–勇气星球](https://gtv.org/user/5f0d36870cac397fcf00154c)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/345-3.jpg)
 
-铺垫工作做完，咱们进入正题，翻开《易经》第二十八卦（又一个二十八呦），大过卦原文如下： 大过。栋桡。利有攸往，亨。
-象曰：泽灭木，大过。君子以独立不惧，遁世无闷。
+ 
 
-笔者正是在读到“泽灭木”三个字的时候，觉得十分别扭，不禁发问：泽怎么会灭木呢？泽不是利于木的生长吗？。。。
-但经过反复的推敲后，认定易经原文没问题！但随之，一个颠覆性的结论涌入脑海，同时笔者也被震惊得无以复加：按照中华文化的阴阳五行理论，东方与木是对应的，是可以相互替换的（这是一个非常简单的基础知识，如下图）。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1060.png)图片来源：网络
-
-那么，如果把易经原文“泽灭木”中的“木”替换成“东”的话，不就成了“泽灭东”。。。
-
-再回想CCP篡政以来，以毛泽东为灵魂人物的共产党的所作所为，真是毁尽了东方的天、东方的地、东方的人。。。
-泽灭东方，这才是那个名字的真实含义！！！
-
+ 
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
