--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,36 +1,23 @@
 ---
-title: 中共武警“反恐”将领任驻港部队司令 香港复制新疆模式
+title: 秘翻在线： 郭文贵先生爆料被验证 马来西亚媒体报道孙力军及一马发展公司（1MDB）案件
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1858543/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1858667/)
 
-**作者:****  **青衣
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-84.png)
-（图片来自网络）
+**撰稿：葛大饼**
 
-据《美国之音》1月13日报道，中共武警部队原副参谋长彭京堂被中央军委主席习近平任命为解放军驻港部队司令员。这是第一次由武警将领担任驻港解放军司令。彭京堂以反恐经验著称。有分析认为，日后驻港部队的功能会从宣示主权变成维稳，不排除反恐突击部队在香港复制的可能。
+**责编：人间四月**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screenshot-2022-01-14-174117.jpg)
+2022年1月14日，马来西亚当地华文报纸《中国报》报道了中共国公安部原副部长孙力军被调查，并牵扯一马发展公司（1MDB）的案件。
 
-据报道，解放军驻港部队在周日（1月9日）发布了彭京堂出任司令员的消息。香港行政长官林郑月娥也于周一在礼宾府欢迎彭京堂来港履新。
+美国司法部在2021年6月公布了大陪审团对刘特佐等人的指控，指控他们在中共的支持下从2017年前后通过后门渠道游说华府，试图对白宫和美国司法部施加影响。
 
-公开资料显示，彭京堂曾任解放军济南军区司令部军训部部长以及武警新疆总队参谋长，于2018年7月晋升少将警衔。以往驻港部队历任司令员都是来自各个军区，由解放军少将或中将出任，而此次则是首次由武警将领担任驻港部队司令员。
+这份起诉书披露，刘特佐和前美国说唱歌手米歇尔、前共和党全国委员会副财务主席埃布罗迪，长期政治顾问和捐赠人戴维斯等人合谋，在刘特佐和孙力军的指示下，施压美国司法部撤销涉及刘特佐等人的贪污调查和没收诉讼，并企图将郭文贵先生遣返回中共国。新中国联邦Gnews对该起诉书也曾做过不少相关报道。
 
-台湾国防安全研究院国安所副研究员侍建宇对《美国之音》表示，他对于有关安排并不感到意外。
+1MDB案件曝光后，刘特佐行踪成谜，有媒体传闻他曾待过香港，澳门，中国等多个国家和地区。特别该事件对当地政坛影响巨大的马来西亚，这次也毫不避讳地把孙力军和1MDB案件联系起来，大肆报道孙力军被公诉的新闻，其罪名包括涉嫌受贿，操控证卷市场和非法持有枪支等。可见东南亚国家也开始醒悟，不再是孙力军孟建柱等上海帮势力可以控制的铁板一块。
 
-侍建宇指出，在2019年反送中示威浪潮时期，中共就想要派遣武警部队进入香港“维稳”。只是后来由于受到国际社会的压力及各方的质疑，才没有明目张胆地把武警部队送进香港。但其实武警部队早已纳入了香港部队的编制里，所以此次任命并不令人感到惊讶。
+中共在全世界的蓝金黄，影响和干扰着他国政治，早在四年前郭先生就爆料，刘特佐一直躲在中共国享受着常委级待遇，因为他是孟建柱的私生子，孙力军和孟建柱都是上海帮的杀手，如今孟建柱被软禁，孙力军被调查只是共产党绞肉机体制下的牺牲品，任何人都逃不过被绞的命运！
 
-此外，有分析人士认为，以往驻港部队一直扮演对外宣示中共国主权的角色，但反送中示威浪潮改变了中共政府的部署，“维稳”将成为驻港部队的新角色。
-
-新疆一直是中共所谓“反恐、防暴”的重点地区，选派曾任新疆武警总队参谋长的彭京堂到香港出任驻港部队司令员，显然是为了更好地发挥他在新疆的“维稳”经验，体现出中共稳定压倒一切的策略，为了维稳不惜一切，特别是在手段的运用上。
-
-彭京堂在出任新疆武警总队参谋长期间，还同时担任新疆“反恐”前线总指挥，曾亲历多场“反恐”实战，其旗下的 “山鹰”突击队更被称为解放军顶尖战斗部队。派这样一位凶狠人物到香港维稳，可以预见，新疆模式将在香港复制，香港将陷入更加黑暗之境地。
-
-新闻链接：
-
-
-
-> 反恐将领彭京堂任驻港解放军司令 新疆精英突击队或在港复制？ [https://t.co/NiS2cO998U](https://t.co/NiS2cO998U)
-> — 美国之音中文网 (@VOAChinese) [January 13, 2022](https://twitter.com/VOAChinese/status/1481592631616413700?ref_src=twsrc%5Etfw)
-
-
+**[新闻来源](https://www.chinapress.com.my/20220114/%e4%b8%80%e9%a9%ac%e5%8f%91%e5%b1%95%e5%85%ac%e5%8f%b8%e8%b4%aa%e6%b1%a1%e4%b8%91%e9%97%bb-%e6%b6%89%e5%8f%8a%e4%b8%ad%e5%9b%bd%e6%94%bf%e5%ba%9c%e9%ab%98%e5%ae%98/)**
 
  
 
