--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,38 +1,42 @@
 ---
-title: 奥米克戎爆发证实疫苗强制计划无效
+title: 东北广西甘肃90%活的人畜不分几千万杨改兰何谈卖国叛国
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1858531/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1858649/)
 
-作者：银河勇气星 – 骄子 / MOS 柳是多水土透
-![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
-1月10日，相关媒体报道显示，美国联邦法院正在复核拜登政府推行的中共病毒疫苗强制接种令，并计划对此进行聚焦于行政问题上的口头辩论。
+视频链接：[2022年1月12日 文贵大直播- G|TV](https://gtv.org/video/id=61df44f3a6dfdd6031535439)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/8-9.jpg)
+**郭文贵先生：**你看中国东北、去广西、甘肃90（%）的人活的人畜不分，啥时候让你宣过誓？你卖啥去啊？杨改兰女士，她卖个牛毛都卖不着，她只能把孩子头砍了，她只能把她自杀，她一生只有一个权利——自杀的权利，而且自杀还是错了，最后所谓她的国家说，你自杀是因为你精神有毛病，杨改兰的事件，是中国人最好的样板。
 
-据悉，美国职业安全与健康管理局于2021年11月发布了联邦政府要求大企业强制员工接种中共病毒疫苗的政策。当时，该政令的依据为，联邦政府声称接种疫苗可有效防止中共病毒的感染及传播。
+你知道中国有多少个杨改兰？我头两天跟那个李克强的原秘书我跟他说，他说，文贵啊！当年你一开始说杨改兰对我之震撼，他说我这个哥们不白交，他说就你这个说法，我跟着老板去过甘肃多次，河南还有他老家，中国现在就今天，就是说这几个月前说的话他是，中国最起码几千万个杨改兰。
 
-然而，奥密克戎变种病毒目前正在大规模爆发，这使法院先前对于强制疫苗政令的评估已然无效。数据表明，奥密克戎在疫苗接种人群中大范围传染，同时，疫苗非但不能有效防护接种者，甚至会使接种人群更易感染该变种。
+他说可悲的事情，他们永远不会被人知道，他自杀他砍死100个孩子也没人知道，他只是偶然的被那个混蛋的宣传媒体拿来，用她的死来让别人不死的时候被你给逮住啦。
 
-报道提及，如果没有任何证据能够表明中共病毒疫苗可以有效阻止中共病毒的传播，那么联邦政府的疫苗强制令就相当于违背了法律、法理和公共利益，对此，美国最高法院或将因此撤回对该强制疫苗令的授权。
+悲剧就在这儿呢！你的死都被拿来利用，结果让我们知道了，中国有多少…现在几千万杨改兰，谁要敢说中国没有几千万杨改兰，我R你八辈祖宗！
 
-参考链接：
+你让联合国去查一查，我们今天面对几千万杨改兰的时候，还说我们是叛国、卖国，那么刚才问的问题，你懂啥叫叛国卖国吗？
 
-- [Omicron Makes Biden’s Vaccine Mandates Obsolete](https://www.wsj.com/amp/articles/omicron-makes-bidens-vaccine-mandates-obsolete-covid-healthcare-osha-evidence-supreme-court-11641760009)
+编辑整理：海贼王M.D.LUFFY；
 
+G-News发布：海贼王M.D.LUFFY；
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们——**[**日本银河系农场Discord群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
 
-总编：Zion文恩 / Irene木木
-编辑：Irene木木
-校正/发稿：海阔天空1
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：日本银河系农场。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
