--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,38 +1,26 @@
 ---
-title: 基恩将军分析中共为何出兵哈萨克斯坦
+title: 由于奥米炕疫情爆发新冠病毒药片出现短缺
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1858528/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1858594/)
 
-作者：日本方舟农场 – Andy5
-![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
-1月11日，美国四星将军杰克·基恩在接受福克斯主持人玛丽亚采访时谈到，哈萨克斯坦局势让人意外的是，中共一改几十年按兵不动的态度，宣布派执法部队进入哈国。
+翻译：  Evalu
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片3-24.png)
+图片来源： http://news.youth.cn/
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/11-5.jpg)
+美联社1月13日报道，随着美国全新推出两种针对新冠病毒的药片，照理来说应该是抗击疫情的有力武器，但在美国由于供应短缺，在本轮抗击奥米炕疫情中并没有起到什么效果。
 
-基恩将军分析中共出兵有两个目的。第一，保证在哈萨克斯坦的经济利益，第二，同时打击在紧邻新疆的哈萨克斯坦的穆斯林，而这些都是中共有意影响中亚的表现。
+其部分原因是产品生产速度有限，需要5-8个月形成大规模生产。预计在接下来几个月的供应将会大幅改善，目前医生都在开处方，不仅因为奥米克戎病例数激增，而且原有的两种抗体治疗对奥米炕效果不好。
 
-将军还指出，哈萨克斯坦事件发生的同时，中共将前武警新疆总队参谋长彭京堂，调任驻港部队司令员，透露了中共进一步镇压香港、夺走香港法治和民主的决心，也表明在香港发生的一切镇压措施将原封不动地被搬往内地，镇压一切反对中共政府的声音与行为。以上均表明中共在外交政策上出现了重大转向。
+一月份是极困难的一个月，因为每天有一百多万新病例，虽然极大多数没有大问题，但对高危人群需要用有效药物。
 
-玛丽亚总结道，中共在香港，哈国及新疆所采取的行动，接下来也将在西藏及台湾等地发生，也将使世界更清楚地看到中共的野心和邪恶。
+辉瑞公司的新药名为帕克斯洛韦德，被认为比默克公司的药效果更好，但该公司生产速度有限，到本月底只能提供25万例疗程的剂量。默克公司的新药名为默纽派洛韦德，该产品的产量多一些，但效果比辉瑞的差，而且对胎儿有可能造成先天缺陷，因此只是最后的选择。
 
-参考链接：
+直到周日，有近12万8千美国人因新冠住院，超过了去年一月份的高峰期12万5千人住院，但与去年相比，较少病人需要进重症监护室。
 
-- [20220111Keane將軍接受Maria採訪](https://www.gettr.com/post/pnwcmpf6b8)
+##### **新闻来源： **[COVID-19 pill rollout stymied by shortages as omicron rages](https://apnews.com/article/coronavirus-pandemic-science-business-health-pandemics-b2d1051842df779dfa6122f824bd0377)
 
+# ** **
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
-
-总编：Ivy001
-编辑：Kathy文艺
-校正/发稿：海阔天空1
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
