--- a/gnews/47.md
+++ b/gnews/47.md
@@ -1,27 +1,36 @@
 ---
-title: 【中日财经爆】中共国就业数据造假 失业数据被掩盖
+title: 英军情五处指证华裔律师为中共统战部从事政治干扰活动
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858185/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1858273/)
 
-整理编辑：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/01/65.jpg)[图片来源](http://www.stdaily.com/index/kejixinwen/2021-10/20/content_1227091.shtml)
-中共病毒疫情冲击之下下，中共官方公布的失业率却一直在5%左右稳定不变，但其他替代指标和报告都表明，中共国失业情况比官方数据糟糕得多。分析指出，大陆劳动市场的结构性问题已恶化，苦日子已经来了。
+#### **撰稿：日本东京方舟农场  葛大饼**
 
-据报导，中共当局公布的2021年12月就业数据，城市失业率为5%，略优于疫情前的水准。但此调查数据只针对城镇户籍人口，事实上农村失业问题比城镇显著；官方数据也未纳入退出劳动力市场超过3个月的失业人数，加上中共国已经对数十万人进行了隔离，而一次隔离数周，不会被计入失业人口。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/3DA5A027-5220-4DC0-8810-7C0C2CED5106.jpeg)（图片来自skynews）
 
-《经济日报》香港特派员李春，在去年12月专栏文章中预测，中共国2022年从事「双零」工作的人数可能超过3亿人。「双零」是指「灵活就业」和「零工经济」，分别对应就业数据表中没有统计进去的就业和兼职或自由职业者构成的自雇主就业。分析认为，中共官方数据仍在竭力掩盖劳动力市场的真实痛苦。
+英国军情五处的一份安全警告指证华裔律师克里斯提娜·李（Christine Lee）代表中共统战部从事政治干扰活动。该警告通知已分发给国会议员及情报界同行，同时还提供了克里斯提娜·李的照片。
 
-另外，2年内数百万农民工人数的相对减少，可能会造成数千亿元的收入损失。一些市场人士认为，劳动人口外流的情况比官方数据显示的还严重。其次，经济下滑及疫情冲击下，服务业陷入困境、制造业出现萎缩，中共就业形势不乐观。
+这份安全警告通知指出，中共统战部 “正在寻求通过与各政治派别中已确定及有抱负的议员建立联系，以暗中干预英国政治”，并 “培养与有影响力人物的关系”。据调查，克里斯提娜·李的政治捐款总额为675586英镑，其中584177英镑为 “实物捐赠”，且几乎全部捐给了工党或布伦特北区议员以及前前线议员巴里·加德纳（Barry Gardiner）。
 
-经济学家表示，从疲软的消费支出到严格的「清零」控制政策，再到中共对教育和房地产行业的监管打击，中共国的劳动力市场正面临巨大压力，而官方数据掩盖了大陆人失业的真实痛苦，近期讨论失业问题的人愈来愈多，普遍都担心苦日子来了。
+据报道，议长办公室已将这一安全警告通知以电子邮件方式发送给国会议员们传阅。英国当局指控克里斯提娜·李代表在香港和中共国的外国公民为在职和有抱负的议员提供资金捐助及提供其他便利。
 
-消息来源:
+议员邓肯·史密斯（Duncan Smith）对此表示，国会议长先生已经与军情五处联系过，可以确定的是，有一个中共背景的特工在议会里。军情五处担心各党派的政治家可能已经成为了中共特工行动中的目标。
 
-[中共掩盖失业真相人民喊苦](https://tw.news.yahoo.com/%E4%B8%AD%E5%85%B1%E6%8E%A9%E8%93%8B%E5%A4%B1%E6%A5%AD%E7%9C%9F%E7%9B%B8-%E4%BA%BA%E6%B0%91%E5%96%8A%E8%8B%A6-160000906.html)
+内政部长普里蒂·帕特尔（Priti Patel）表示，在必要时，英国政府将会采取相应行动来减轻来自中共的威胁。 不过，据报道，目前克里斯提娜·李并没有被起诉。
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+英国情报界对中共间谍活动的担忧与日俱增。去年年底，军情六处负责人理查德·摩尔（Richard Moore）就曾表示，中共的间谍活动已成为该国对外情报机构的 “最大优先事项”。
+
+据悉，2020年，英国曾悄悄地驱逐了三名据称是冒充记者的中共国间谍。军情五处给出的结论是：这三人是为中共国家安全部（MSS）工作。
+
+*参考链接：[MI5 accuses lawyer of trying to influence politicians on behalf of China](https://www.theguardian.com/uk-news/2022/jan/13/chinese-national-trying-to-improperly-influence-politicians-says-mi5)*
+
+* * *
+
+*素材采编：葛大饼*
+
+*编辑： 青衣青青*
+
+*发布：miumiu*
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
