--- a/gnews/51.md
+++ b/gnews/51.md
@@ -1,21 +1,23 @@
 ---
-title: 联合国秘书长将出席北京冬奥开幕式,旨在促进世界和平
+title: 港闻速递｜英军情五处指控华人律师李贞驹是中共间谍 中港金主幕后操控
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858148/)
+`關注組` [轉載自GNews](https://gnews.org/zh-hans/1858216/)
 
-撰稿：东京樱花团/待命（文晓）
-![](https://assets.gnews.org/wp-content/uploads/2022/01/32-1.png)（图片源自本文链接）
-1月14日路透社消息：2月13日联合国秘书长安东尼奥-古特雷斯周四表示：出席2月份的北京冬奥会开幕式。想传递这样一个信息，即奥运会 “应有助于世界和平”。
+**撰文/ 港台前线关注组｜发布日期/ 14/1/2022**
+**更多资讯请关注官方盖特｜please follow our Gettr （[https://gettr.com/post/pl6w8he0b9](https://gettr.com/post/pl6w8he0b9))**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/英軍情五處指控華人律師李貞駒是中共間諜-中港金主幕後操控.jpg)
+英国《太阳报》周四(13日)报道，军情五处向英国国会发出罕有警示，指控华人律师李贞驹(Christine Lee)是中共间谍，利用捐款的方式，协助中共与议员建立关系，全面渗透国会及政界，意图干预英国内政。
 
-秘书长对记者团说：在目前的情况下，我打算不带任何政治色彩地出席开幕式，所传达的信息是，奥运会必须是为了世界和平。
+据调查指，李贞驹的背后金主，是来自中国大陆和香港的非英籍华人，目的是为了塑造有利中共议程推进的政治环境。
 
-美国、澳大利亚、英国等其它国家已经宣布对北京奥运会进行“”外交抵制”，拒绝派遣外交使团，以抗议新疆及其它地区的人权侵犯行为。
+是次丑闻牵涉在野两党，包括，自由民主党党魁 Ed Davey，十年收受5000万英镑捐款；工党议员Barry Gardiner，5年内收受42万镑的捐款，并聘请李贞驹儿子做助理等等。
 
-信息来源：[国連事務総長、北京五輪開会式に出席へ　「世界平和の一助に」（ロイター） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/e8c3255194f05125e34c8d78b94da50dc22ebd70)
+事件严重程度震惊英国政坛。国会下议院议长贺立绅（Sir Lindsay Hoyle）保守党前党魁施志安（Lain Duncan Smith)分别公开谴责，并要求政府向国会作解释。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+* * *
+
+来源｜[TheSun](https://www.thesun.co.uk/news/17317739/chinese-spy-mp-christine-lee-communist-agent/)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
