--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,18 +1,24 @@
 ---
-title: 房地产巨无霸又双叕见闪崩
+title: 美众议员对被强迫佩戴“中国制造”口罩表示不满
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1858703/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1858803/)
 
-**撰稿人：东南**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Picture1-6.jpg)**图片来源网络**
-**昨天地产巨无霸融创中国股价突然暴跌****22%****，创造公司自****2010****年上市以来近****12****年最大单日跌幅。****1****月****13****日早间公司抛出一份配股融资公告，拟以每股****10****港元配售****4.52****亿股股份，融资****45.2****亿港元，其中一半用来还债。此次配股为了保持吸引力，比前一交易日收盘价折让****15%****，融创中国近两年本已下跌近****80%****，此基础上再深度折让，****10****港元一股的配股价基本可以说是****“****打骨折****”****。**
+#### 翻译/撰稿：zzballack
 
-**就在****2021****年****11****月，融创中国刚刚通过配股发行****3.35****亿股，募资约****50****亿港元。间隔不到两个月再次低位配股，公司到底是有多缺钱？ 孙宏斌掌舵的融创中国，****2021****年实现近****6000****亿元的合同销售额，仅次于碧桂园和万科，跻身行业前三。值得关注的是，就在两个月前的****2021****年****11****月****13****日，融创中国首次配售****3.35****亿股公司股份，每股价格****15.18****港元，募资约****50.85****亿港元。而本次配售价为每股股份****10****港元，较上次配售价格下降了****34.12%****。密集低价配股融资，市场担忧融创中国资金链。就在****1****月****12****日，有消息称融创集团旗下多家公司部分股权被法院冻结。融创相关人士则表示，法院冻结资产是因为，受到监管账户监管加强的影响，公司部分项目与业务伙伴在商业合作上产生了小纠纷。 **
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-28.jpg)图片来源：推特
+据《布雷特巴特新闻网》1月13日报道，为了应对奥米炕变异株的快速传播，众议院医生要求议员们在进入国会之前必须佩戴N95或KN95口罩。KN95是与N95类似的口罩，然而“K”字母表示口罩是在中共国制造。据报道，每个议员办公室被分发了五个KN95口罩，口罩上印有“中国制造”的字样。
 
-**好熟悉的暴雷节奏又扑面而来了，这眼看着还有半个来月就要过年了，还能让中国老百姓过个安定年吗？相较其他民族而言我们华人不管是富人还是穷人都会把自己的钱压在房子上，恒大的事还没有个结果，照这样的发展继续下去融创变成“恒二”相信很多人已经不会再怀疑，回头想想就像这种的龙头的房企都一直在不停的暴雷，这样的企业还会有机构当大韭菜去给他们融资吗？没有新的融资进入的话，那可以想象接下来的地产企业一定会像多米诺骨牌一样一个个的倒下。出来混迟早要还的。中共国的地产行业最后必然将一地鸡毛！**
+国会的共和党议员们对众议院议长南希·佩洛西（Nancy Pelosi）分发KN95口罩的决定表示反对。
 
-文章参考：[闪崩！房企巨无霸突然暴跌22%…](https://www.163.com/dy/article/GTK13CPA0530NLC9.html)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
+众议员安迪·比格斯 (Andy Biggs)讽刺说：“民主党人发放的口罩竟是在病毒起源地制造的，这很合适。”
+
+来自北卡罗来纳州的众议员格雷格·墨菲（Greg Murphy）指责佩洛西没有认识到她的此项决策是愚蠢的。“我们正在与来自中共国的病毒作斗争，但议长却乐于公开支持一家中共国的制造商，将我们纳税人的钱送到海外，并在国会面前进一步宣传我们对中共国的依赖。要么佩洛西办公室没有认识到这是支持‘中国制造’的残酷讽刺，要么他们就根本不在乎此事。”
+
+众议员共和党的医生党团（Doctors Caucus）主席布拉德·温斯特鲁普（Brad Wenstrup）说：“美国不安全的供应链对我们国民的健康构成了更大的风险。我们在国会被要求佩戴的口罩竟是‘中国制造’的，这是我们无法在不依赖对手的情况下保护和治疗美国人的又一例子。这些中国产口罩进一步凸显了我们需要从中共那里撤资，我们的国家安全和我们的健康依赖于此。”
+
+新闻来源：[Members of Congress Forced to Wear Masks that Read ‘Made in China’](https://www.breitbart.com/politics/2022/01/13/congress-members-forced-wear-masks-china/)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
