--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,25 +1,36 @@
 ---
-title: 【中日财经爆】日本企业商品价格指数同比最大增幅 项目涵盖范围广
+title: 01/14每日播报｜美国最高法院阻止了针对大型企业的疫苗强制令
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858788/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1858872/)
 
-撰稿:东京樱花团/麗子
-![](https://assets.gnews.org/wp-content/uploads/2022/01/4-17.jpg)[图片源](https://mainichi.jp/articles/20211111/k00/00m/020/327000c)
-日本央行14日公布的2021年国内企业商品价格指数同比上涨4.8%，是1981年有可比数据以来最大的同比增幅。原油等资源价格飙升导致企业采购成本增加，利润受到挤压，所有影响将会转嫁到消费价格上，普通民众家庭负担急剧加重。
+**By:[秘翻新闻](https://gtv.org/video/id=61e13a98a6dfdd60315413f3)**
 
-企业商品价格指数显示了企业间交易的商品价格水平。过去，该指数的最大同比增幅是在2008年，当时由于投资资金的流入，油价飙升。当年指数为105.1，是1991年泡沫经济结束以来的最高水平。
+[**2022-01-1**4](https://gtv.org/broadcast/watch/61e13a98a6dfdd60315413f4)
 
-各项价格指数包括石油和煤炭产品上升27.8%，有色金属上升29.4%。海外市场资源价格的飙升和日元的疲软导致进口价格指数上升了22.7%。
+《华盛顿观察家报》1月13日报道，周四，美国最高法院阻止了拜登政府针对超过100名员工的大型企业疫苗强制命令或阳性检测的规定。但是，继续执行医护人员的疫苗强制令。
 
-企业商品价格一直保持在高位。同时发布的去年12月份国内企业商品价格指数同比上涨了8.5%，是有记录以来的第二高涨幅。在所调查的744项商品中，价格上升商品比价格下降多308项，与11月份相比增加32项。价格上涨已经开始涵盖更广，包括陶瓷石材产品以及信息通信设备。
+最高法院称，职业安全和健康管理局（OSHA）没有权力强制执行这项疫苗命令，应该由国会来决定，所以驳回了针对大企业员工的疫苗强制令。
 
-信息源:
+提起诉讼的共和党州政府和商业团体组成的联盟认为，联邦政府没有适当的权力在未经国会批准的情况下实施这些政策，这将导致广泛的人员短缺。
 
-[昨年の企業物価、過去最大の4.8%上昇　家計負担への懸念も](https://news.yahoo.co.jp/articles/96766c912bb67f8eba214d545f86291097cb2f02)
+在2021年11月，职业安全和健康管理局宣布，要求超过100名雇员的公司员工必须接种中共病毒疫苗或进行病毒阳性检测；未接种疫苗的员工必须在工作场所戴口罩。此规定将于1月4日生效，并于1月10日开始执行。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+报道指出，最高法院的保守派大法官以6：3的比例裁定阻止对大企业雇员的疫苗或检测规定。大法官们以5比4的比例裁定，由卫生和公共服务部执行的强制疫苗令将继续有效，要求接受医疗保险或医疗补助的医护人员全面接种疫苗。
+
+全国独立企业联合会执行主任卡伦·哈尼德表示，这次的决定对美国的这些企业来说是欢欣鼓舞的，他们自大流行开始以来，一直在努力使他们的生意回到正轨。
+
+联邦卫生官员表示，医疗保健人员将被要求在1月27日之前接种第一剂中共病毒疫苗，并且必须在2月28日之前根据“卫生与公众服务部”的授权全面接种疫苗。
+
+截至目前，美国司法部没有立即回应评论。
+
+秘翻主编  冰糖葫芦喵编译报道
+
+发布:星星
+
+* * *
+
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
