--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,33 +1,68 @@
 ---
-title: 曾、习逐鹿中原
+title: 重庆无山多河多奇珍异草是共产党的兵役地和粮食主产地
 ---
-`银河勇气之星` [轉載自GNews](https://gnews.org/zh-hans/1858691/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1858801/)
 
-By：银河勇气星｜楚天秋
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截屏2022-01-14-17.15.03.png)图源：网路
-古代的中国也就是以河南为主的中原地区，如今地图上那块巴掌大的地方，历史上烽烟四起，英雄辈出，所谓“得中原者得天下”，这里不免留下很多朝代更迭的痕迹。其文明的鼎盛时期是北宋，一百多年里，除了占据古代文学小半边天的宋词，还留下了很多故事，成为后世小说创作的源泉之一。只是河南的气候并不十分调和，旱涝不均，黄河泥沙俱下，冬消夏涨，冬季河床露底、干涸现天，时而有之，夏季浊水横流、毁堤成灾，也不在少数。但造成大灾大难，肯定不是天灾而是人祸。民国时期的花园口决堤事件，导致几百万人流离失所、死伤无数、灾民遍地。而中共制造的以郑州为中心，遍布河南省广大地区的水灾，老百姓连迁徙的自由都没有，死得无声无息，活得死气沉沉，对比之下，不得不说中共之祸甚于国民政府。
+G-TV视频链接：[https://gtv.org/video/id=61e0fc6f87664c47acd46a57](https://gtv.org/video/id=61e0fc6f87664c47acd46a57)
 
-2021年对于郑州来说，真可谓多灾多难。郑州处在中原腹地，虽然是交通枢纽，但并不十分引人注意。就像一个经常可以看到的老熟人，各方面都平平无奇，庸庸碌碌，人们转头就会忘掉他。中共似乎和郑州过不去，泄洪成灾之后，还不忘来一波疫情封城，刚消停几个月，老百姓渐渐忘了一些伤痛，又来一波疫情，而且还是全省范围的，如同水灾。真是一波未平一波又起，河南老乡到哪说理去呢！不知道是老天睁眼，还是事有凑巧，就在这波疫情刚刚起步阶段，许昌警方突然发了一则刑事拘留的通告，关于新冠病毒核算测试的事情，可以说没有小事，因为关系到亿万人，牵一发而动全身。试想一下，中共释放新冠病毒两年以来，有多少人做过核算测试，有多少地方因为测试阳性而封楼、封区、封城，又有多少人因为“阳性”，大难临头，家破人亡。
+**郭文贵先生：**为什么中国的历史上重大的政治时刻和人物总是和重庆扯不断的关系？大家要记住，重庆、天津、上海、武汉，就这样的地方，它发生的事情对中国的重要。那广州还算是一个吧。整个东北三省加一起，过去的5000年加一起都没它一年发生的事儿多，为啥呀？
 
-不由得让老百姓浮想联翩，这个所谓的金域公司，究竟在哪些地方检测过，在检测过程中做了什么手脚。这对于许昌警方来说，更是一个“奇迹”，事关不知道多少人生活和生命的大案，这要是坐实了、办好了，那就一步登天了。小小一个地区级别、小有名气（曹操曾迫汉献帝迁都于此）的许昌，接了个“通天大案”。金域公司的背后是钟南山父子，钟南山的背后是帮它挂牌子的总加速师。如果此案成功告破，在法治国家，加速师最少引咎辞职。在美欧，加速师辞职后，沿街乞讨没人给饭，饿死街头。在日本得剖腹谢罪，在韩国铁定吃牢饭。不过还是先停止幻想，这是中共国，上述一切不会发生。毛魔虐死几千万百姓，也寿终正寝了，中共评价三七开（三分过、七分功），还“瑕不掩瑜”呢！
+经济重要、军事重要、而且人才多、文化非常优秀。话又说回来了，你看昆仑山脉、喜马拉雅山脉往整个捋下来，一过来就到了九寨沟，就到了重庆。
 
-还是来尝试分析一下，事情中的几个主要角色，再说其它。首先是金域公司，“坑”级背书的网红家族“钟氏禽兽”，可不是善类。仿佛一只藏獒，只有它咬别人的份儿，啥时候变成了被咬的对象了呢！粗略想想都知道，金域公司绝对不是第一次作案，应该说一直在作案，整个医疗体系都在有意无意地为非作歹，草菅人命，何况“金域”。过去两年没见哪个公司被某地警方“刑事”呀!不管是新冠疫苗生产公司，还是核酸检测公司，都顺利得很，股票大涨，赚得盆满钵满，悠哉游哉。到处追着老百姓打疫苗，不打疫苗各种威胁，也没被立案过。按在地上做核酸，在各种东西上检测核酸，可以说除了天外来物，别的任凭是什么，都能检测出“阳性”，质疑的人很多，从来也没被追究过啥。一度给老百姓的错觉：可能中共国实际统治集团是“新冠防疫小组”，任何和疫情相关的事情，警察都没插过手.
+重庆没有什么山，重庆有什么？处女山、玉女山、玉女峰还有玉女湖。薄熙来、陈敏尔都去洗澡去，就是那所谓的“淫荡”之山，也可以称为叫阴山。东北有什么大山呢？你看东北那地方就出粮食，它也没有出什么了不起的人物，是不是。
 
-那么是不是许昌警方有什么过人之处呢？北、上、广、深，武汉、西安，都不行，就属许昌警察牛气，这看来明显不合理。如果想查案，以现在的技术能力，都不在话下，老百姓在网上抱怨几句，马上就有警察敲门，更别说在现实环境里作案了，只有想不想抓的问题，不存在是否抓得到的疑虑。那为什么偏偏是许昌，郑州不是更直接，金域分公司驻地就在郑州。到目前为止，除了最高检察院，没有别的部门声援或者转载许昌警方的公告，加速师掌控的CCTV对此案更加是只字未提。从最近对孙立军案的公开来看，有点对台戏的味道。联系郭先生说的中共党内高人曾庆红，是“司马懿”的不二人选，再看许昌就有点意思了。
+我是从东北出生，混到了南方去，还擦点儿边儿。东北你看看就一个火山叫长白山，但是在昆仑山上有多少，你知道有多少火山吗？你知道有多少火山吗？小飞侠你能告诉我？不知道吧兄弟呀，所以你老问问题。
 
-中共内斗愈演愈烈，“喝咖啡的”和“吃大蒜的”终究谈不拢了。海派、习派摆开了棋局，逐鹿中原。面食为主的河南老百姓成了棋子，海派用许昌警方为“炮”起手，先走一步杀招，以金域公司背后的“禽兽父子”为“卒”，隔“山”打“猪”，直逼加速师，可谓“轰天一炮”。许昌是当初曹魏政权孕育之地，司马家族蛰伏之所，看起来这个博古通今，天文地理，阴阳风水，无所不知的全能型“棋手”，就是曾庆红。接下来还会有什么，会不会有古都洛阳的消息，静待爆料革命解密。
+我告诉你在整个昆仑山脉，你在飞机上你看，你才知道中国这个国土是很神奇的。它有几十处火山，隐藏着上百处的火山，它一九五几年火山才刚刚停。你没想到昆仑山脉，昆仑山脉有火山大动作。
 
-* * *
+昆仑山脉现在根据科学，印度洋板块和南极板块和北边板块它一直在动、一直在撞。就是这地球里边包着的另外一个星球，从地球撞出去另外一个叫月球。月球现在跟地球之间就是差一点儿，这个地球就完了。
 
-作者：楚天秋
-发布：骄子
+海水过去比这个是高的，现在降下来了。它撞出了海洋 、撞出了山坡、撞出了山脉、撞出了人类。然后另外一个星球被吸到地球的里边了、芯里了。 咱今天挖的铁、矿、锌都那里边儿来的，包括火山爆发也是那个星球来的。
 
-[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)，欢迎各位战友加入。欢迎订阅我们的我们的G-TV官方频道[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)、[银河农场–勇气星球](https://gtv.org/user/5f0d36870cac397fcf00154c)
-![](https://assets.gnews.org/wp-content/uploads/2021/12/345-3.jpg)
+然后地球“梆”又撞出来一个月球，月球又跟它形成了这种对立。如果月球一转过来，地球完蛋了，你看这个神秘的力量。这个“爹亲娘亲不如党亲”共产党它有多无耻，它想代表这种神秘的力量。
 
- 
+然后创造出四季，本来人类是没有、地球上没有四季的。在这个时候你要看到昆仑山下边儿是火山，这几个火山是什么？七个最大的火山后边儿，又是七个啊，不是我编的啊，你自己查去。七个最大的火山随时会爆发。
 
- 
+这时候到了重庆你会发现什么吗？ 重庆里边有树，树里边有玉女峰。重庆里边的人非常辛苦，从过去的三国、春秋都是必争之地，争的是什么？争的是粮食。重庆人是中国人当中最辛苦，兵役、粮仓、必争必杀之地，几次绝。
+
+近代的张献忠竟然能把四川人杀掉了百分之八、九十。光女人的脚丫子剁成了一座山。99%的财富全拿走了，几乎是绝迹。历史上被杀到是绝迹的，四川是最多次。就像是欧洲马耳他，马耳他是三次人被杀光，一个不留。
+
+就这个岛就叫马耳他国家，中国就叫四川，就叫重庆。西边西藏、昆仑山脉，再往那边儿去，整个到印度那边儿去，它非常神奇。你在看那个墨脱，墨脱市就是蓝莲花，就是莲花之地呀。
+
+墨脱就是莲花之地、佛祖仙境、奇珍异草。在重庆有很多这种奇珍异草的仙境，有很多山上的池，池中峰，峰中的树，还有很多神秘的地方。但是它没有大山，它只有河流。
+
+这个地方生产太多的粮食和农业，说白了是共产党那个地方出兵役，整个是为党、为皇帝献命地方、兵役的地方，然后是粮食生产的地方。现在中国最早的打工妹当中在深圳。
+
+但是打工妹里边最辛苦、死最多的打工仔、打工妹来自四川。四川人真的很了不起，我对四川人是四川的女性我高看好几眼。在历史上 四川的女性是最可信任的。而且四川在我们人类、中国的历史上扮演了极为重要的作用。
+
+字幕来源：[2022年1月9日 文贵大直播 全文字版](https://gnews.org/zh-hans/1842354/)
+
+编辑整理：Jacques；
+
+字幕文件制作：小满；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
