--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,49 +1,28 @@
 ---
-title: 江泽民朱镕基家族盗卖领土掌控和田玉价UBS摩根为其洗钱
+title: 爆料革命的歌在国内军队的影响力之大（一）
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1858690/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1858799/)
 
-视频链接：[2022年1月12日 文贵大直播- G|TV](https://gtv.org/video/id=61df44f3a6dfdd6031535439)
+整理：雅典娜速记组
+编辑：tianzhihuan
 
-**郭文贵先生：**那么2002年的塔吉克斯坦这个土地交易背后是谁知道吗？去查查朱镕基跟他谈的啥？我郭文贵敢在世界的任何一个法庭告诉你，朱镕基、江泽民家族在那里拿到了天大的钱，到今天还在收钱。
+讲到德国纳粹的曼斯坦因将军，我要告诉大家我们的歌在国内军队里边影响巨大。这个唐平妹妹、Q妹搞这个歌还有威廉王整的有点像军歌，我最近才发现。你知道国内某军队有多少人因为咱们的歌被抓了吗？就因为听我们的摇滚《酒灭中共》、《沧海一声啸》有十几个人被抓。
 
-中国老百姓的无知是全人类我没有见过的。他们敢把国家的土地就这么卖出去，在那儿收着矿，而且协议很简单，永久这个公司拥有这个地方矿的开发权。
+唐平说你没发现你那个调调像这个军歌吗？ 哎呀我说这个摇滚之娘唐平，然后我就开始听几遍，还真的像。
 
-昆仑玉，就是所谓的和田玉，你们这些傻子们！你见过真的是几吨重的和田玉吗？跟你说你可能不相信，那个价格全都是江、曾、朱之控制，比特币为啥是共产党搞起来的？就是江家搞起来的，他要把钱洗…不是洗白了要洗雪白呀！
+所以今天在这里，我想大家讲的时候，你不要低估了这个音乐的力量，它太大了，音乐的力量。共产党的军人冒死耳听，而且我告诉你隆美尔在希特勒时代这么牛的一个人，他自杀前就是哼着小调服氯化钾自杀，他要哼着调调死。音乐的魅力就这么大，曼斯坦因得癌症在监狱里关了八九年，天天上堂受审，审着审着，旁边人全死了，没了啊。
 
-为什么UBS成为中国第一个，外资允许的百分之百的这个执照？为什么摩根要拿证卷公司？都是王岐山、江家的，他洗钱需要工具啊，它需要水、需要池子、他洗完放哪去。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/爆料革命的歌在国内军队的影响力之大.001.jpeg)
 
-我告诉大家如果你不懂得什么叫叛国和卖国你这一辈子被骂叛国、卖国你就太冤了，你有资格叛国吗？有资格卖国吗？你就算个屁，是吧！你算个屁。
 
-就当时我在里边儿的时候，当时那个郑州裕达就是说我是美国的派来的特务，跟一个好莱坞的女人结婚了，然后就监视郑州的时候，我被找去了，他们说，郭文贵人家说你是叛国，我说是吗！我说你说我叛哪个国了？他说你真以为你叛国？你有资格叛国吗，？那叛国是共产党员在叛国，轮到你来说叛国了吗？
+发布：tianzhihuan
 
-就连一个郑州的一个所谓金水区的检察官、反贪局的副局长，都敢说我这话。后来这哥们儿被枪毙了，被被注射毒针死了，你可以查查去，一个人贪污两个多亿当年。
-
-所以兄弟姐妹们！你再看一看为啥我讲昆仑山脉？为什么讲帕米尔高原？为什么讲整个的西藏、喜马拉雅？喜马拉雅山上的秘密、西藏的矿藏、西藏的奇才异宝都去哪儿了？
-
-光在西藏，用当时的曾庆红的秘书说，我在西藏搜罗搜罗我分分钟搜罗个一百个亿、两百亿，分分钟啊！一个秘书都这么说，今天青青草原你坐这儿你还灭共呢，你连知道共产党邪恶的0.001（%）都没有。
-
-编辑整理：海贼王M.D.LUFFY；
-
-G-News发布：海贼王M.D.LUFFY；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们——**[**日本银河系农场Discord群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：日本银河系农场。
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
