--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,22 +1,25 @@
 ---
-title: 美国最高法院否决拜登强制疫苗令
+title: 【中日财经爆】日本企业商品价格指数同比最大增幅 项目涵盖范围广
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1858689/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858788/)
 
-撰稿：文西Eric
-![](https://assets.gnews.org/wp-content/uploads/2022/01/141.jpg)图片来源于网络
-据路透社报道：美国最高法院本周四否决了拜登总统对大型企业的新冠疫苗接种或测试授权，保守派法官认为这一政策对许多美国人的生命和健康造成了不适当的影响，同时认可了联邦对医疗机构的单独疫苗要求。
+撰稿:东京樱花团/麗子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/4-17.jpg)[图片源](https://mainichi.jp/articles/20211111/k00/00m/020/327000c)
+日本央行14日公布的2021年国内企业商品价格指数同比上涨4.8%，是1981年有可比数据以来最大的同比增幅。原油等资源价格飙升导致企业采购成本增加，利润受到挤压，所有影响将会转嫁到消费价格上，普通民众家庭负担急剧加重。
 
-法院以6:3的比例作出裁决，六位保守派法官占多数，三位自由派法官反对阻止对大型企业的规定——这项政策适用于8000多万名雇员。
+企业商品价格指数显示了企业间交易的商品价格水平。过去，该指数的最大同比增幅是在2008年，当时由于投资资金的流入，油价飙升。当年指数为105.1，是1991年泡沫经济结束以来的最高水平。
 
-法院在上周五听取了关于两个联邦机构在11月发布的旨在提高美国疫苗接种率并使工作场所和医疗环境更加安全的临时任务的法律争论后采取了行动。这两起案件考验了总统应对不断扩大的公共卫生危机的权力，这一危机已经导致超过84.5万美国人死亡。
+各项价格指数包括石油和煤炭产品上升27.8%，有色金属上升29.4%。海外市场资源价格的飙升和日元的疲软导致进口价格指数上升了22.7%。
 
-美国最高法院的这一法令，预计会带动其他西方国家效仿取消疫苗强制令，也再次验证七哥的情报准确性！
+企业商品价格一直保持在高位。同时发布的去年12月份国内企业商品价格指数同比上涨了8.5%，是有记录以来的第二高涨幅。在所调查的744项商品中，价格上升商品比价格下降多308项，与11月份相比增加32项。价格上涨已经开始涵盖更广，包括陶瓷石材产品以及信息通信设备。
 
-新闻来源：[Reuters](https://www.reuters.com/world/us/us-supreme-court-blocks-biden-vaccine-or-test-policy-large-businesses-2022-01-13/)
+信息源:
 
-*发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+[昨年の企業物価、過去最大の4.8%上昇　家計負担への懸念も](https://news.yahoo.co.jp/articles/96766c912bb67f8eba214d545f86291097cb2f02)
+
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
