--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,26 +1,23 @@
 ---
-title: “韭菜”护“镰刀”现象的根
+title: 冲绳政策研究专家警告，冲绳是中共重点渗透地区
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1858682/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858778/)
 
-澳喜文飞
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Picture1-7.png)图片为自主编辑
-我所说的“韭菜”护“镰刀”的现象就是我们常常面对的而又百思不得其解的——穷苦草根在言论上（至少是表面上言论）处处拥戴中共，处处为中共的所谓成就自嗨，即使这一些成就与他们没有毛关系；比如说：高楼大厦、政府的高级楼堂馆所、没有发动机的大飞机、冒黑烟的航母、还有常常会掉下来的长征火箭、落后20年的光刻机；细想一下这一些他们嘴里得强国的标志，似乎与他们的衣食住行没有任何关联，甚至还是用了他们的血汗换来的税金换取的，但是他们还是那么自豪！
+撰稿：东京樱花团/百花李香
+![](https://assets.gnews.org/wp-content/uploads/2022/01/3-26.png)图片来源本文网站
+1月14日八重山日报报道，1月8日，日本冲绳政策研究论坛的仲村觉理事长举行了主题为“迈向冲绳回归日本50周年“的研讨会。河添恵子女士发表演讲，讨论了法国一家智囊团去年发布的一份报告，该报告指出中共国正在鼓励冲绳和其它地方的独立运动。
 
-今天我们就来讨论一下他们的思想根源，他们为什么那么嗨（自豪）？
+中共国的大学和智囊团一直在推动与冲绳独立倡导者的学术交流，媒体也多次报道，质疑日本对冲绳的领土主权。“琉球独立运动，美国军事基地反对运动，反对修改宪法第九条和反对强化日本自卫队的部分人士，都得到中共国的支持。“
 
-他们是既得利益者吗？不是！他们大多是黎民百姓，顶多有一两套还在供房贷的房子，他们没有钱送孩子出国留学，他们可能还没出过国，哪怕是港澳新马泰（有报告显示，中共国只有一亿人有过出境记录），但是在他们的语境中他们又那么轻视一起外国！
+冲绳被中共作为重点工作地区，来自中共国家机关，如统战部、国家安全部和中国人民解放军总参谋部的人员，正在以私营公司雇员和学者的身份在活动。
 
-他们信仰共产主义？如果是那我会为他们无知的信仰敬礼的！其实他们不信也不懂！更没有读过共产党宣言（党不认为他配！）。
+信息源：
 
-他们既不得益，又不持信仰，但是他们处处拥护着割他们韭菜的镰刀！
+[「沖縄は中国工作の重要な現場。要員が民間企業の従業員や学者の身分で活動」　日本沖縄政策研究フォーラム　仲村氏、危機訴え](https://news.yahoo.co.jp/articles/87385d90434b9f689bd172a0d113c496cc952e82#:~:text=%E3%80%)
 
-我思来想去似乎找到了他们的思想根源！那就是“黑社会英雄主义”！
-
-黑社会里他们没有正邪之分，谁能霸到地盘谁就是老大！老大越狠就越多小弟追随！老大越猛老弟就越有自豪感，他们的自信心也随之而来，他们以他们老大的“强大”而自豪，我称之为黑社会英雄主义。
-
-现在就不难理解韭菜们为割他们镰刀呐喊了吧！为中共呐喊的粉红们根本不信仰共产主义，他们只是为他们的老大“强大”而自豪吧！只要老大不强了，他们也就散了！ 有新中国联邦在，他们的老大“强大”不了几天了！他们也快散了.
-![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
