--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,23 +1,45 @@
 ---
-title: 批评中共政权的美参议员投资中共公司阿里巴巴
+title: 中共视昆仑山和喜马拉雅山为天地之神视南普陀为人间道
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1858661/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1858755/)
 
-#### 翻译/撰稿：zzballack
+G-TV视频链接：[https://gtv.org/video/id=61e0fb7b87664c47acd469f9](https://gtv.org/video/id=61e0fb7b87664c47acd469f9)
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-2-12.jpg)
-据每日传讯 (Daily Caller) 1月13日报道，美国共和党参议员汤米·图柏维尔 (Tommy Tuberville)对中共和在中共国做生意的公司持批评态度。但根据他在1月12日提交的财务披露文件，他最近购买和出售了中共电子商务巨头—阿里巴巴的股票和期权。
+**郭文贵先生：**我告诉你，全人类最牛的水，如果佳佳、小王子、小飞象、小飞侠，你们想生宝宝生得好，又没打疫苗，未来先喝点儿帕米尔高原的水，那真是万年的水呀，它是印度洋被挡下来的水，在整个石头里边儿留下来的，和大西洋的水整个未蒸发留下来的，在沉寂之后，从下面再挖掘的水，那真的是万年的水呀！
 
-图柏维尔的财务记录显示，他和其妻子在2021年12月三次购买了阿里巴巴的股票，价值高达25万美元。在同一个月，他出售了10万美元的阿里巴巴股票。他与阿里巴巴的交易活动至少可以追溯到2021年的夏天。
+七哥在盘古的时候，是天天用帕米尔高原的水煮饭吃的，所以说七哥不可能是郭3秒，怎么的也得郭3.5秒，因为是帕米尔高原的水，那真的就像今天吃青蒿素的感觉似的。
 
-CNBC报道说汤米·图柏维尔是国会中对中共最严厉的批评者之一。这位参议员在2021年5月提出一项法案，寻求禁止将节俭储蓄计划（TSP）的资金投资于中共公司。TSP是数百万军警人员和文职雇员使用的退休基金计划。他在介绍该法案时说：“我们已经看到中共国公司一次又一次地不按规则行事，盗窃知识产权，无视基本的监管标准，牺牲投资者利益。美国人需要了解中共是如何攻击我们的，不仅仅是用导弹和军事力量，而是用精密的计划来降伏美国人的精神。”
+你到新疆以后，你知道新疆的灾难在哪里呀？新疆的大自然里边儿藏的物资和密码，包括昆仑山脉的北侧2577公里，从南到北，就西南到东北。共产党是不可能让出西藏的，是不可能让出新疆的，所以很多人说要搞西藏独立，新疆独立，我可以告诉你除非你把中国全灭了，是不可能让你独立的。
 
-据CNBC报道，阿里巴巴的联合创始人马云自20世纪80年代以来一直是中共党员。
+这个没有它的水、没有它的山，它的灵都没了。而共产党深为迷信的，它是昆仑山和喜马拉雅山这是它的所谓的阴阳，是它的天地之神。然后它认为人间道就是普陀。普陀是什么？在哪里？就是今天的南普陀山——舟山。
 
-图柏维尔的发言人回应说：“图伯维尔参议员的投资组合项目长期以来一直由财务顾问管理，他没有日常参与其中。”
+字幕来源：[2022年1月9日 文贵大直播 全文字版](https://gnews.org/zh-hans/1842354/)
 
-新闻来源：[Republican Senator Critical Of China Buys Up To $250,000 Of Alibaba Stock](https://dailycaller.com/2022/01/13/tommy-tuberville-alibaba-stock-china/)
+编辑整理：Jacques；
+
+字幕文件制作：小满；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
