--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,41 +1,53 @@
 ---
-title: 东北广西甘肃90%活的人畜不分几千万杨改兰何谈卖国叛国
+title: 丑闻缠身的左媒CNN收视率暴跌90%
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1858649/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1858718/)
 
-视频链接：[2022年1月12日 文贵大直播- G|TV](https://gtv.org/video/id=61df44f3a6dfdd6031535439)
+**翻译：Lulumi**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/屏幕截图-2022-01-14-103939.jpg)图片来源:nypost.com
+根据尼尔森收视率显示，杰夫·扎克领导的CNN在1月3日这周的平均收视率只有54.8万，与2021年同一周的近270万收视率相比，有了很大的下降。
 
-**郭文贵先生：**你看中国东北、去广西、甘肃90（%）的人活的人畜不分，啥时候让你宣过誓？你卖啥去啊？杨改兰女士，她卖个牛毛都卖不着，她只能把孩子头砍了，她只能把她自杀，她一生只有一个权利——自杀的权利，而且自杀还是错了，最后所谓她的国家说，你自杀是因为你精神有毛病，杨改兰的事件，是中国人最好的样板。
+去年的收视率受益于左翼媒体对1月6日美国国会大厦袭击事件的报道，导致CNN创下了自特德·特纳1980年创办该新闻机构以来收视率最高的一天。
 
-你知道中国有多少个杨改兰？我头两天跟那个李克强的原秘书我跟他说，他说，文贵啊！当年你一开始说杨改兰对我之震撼，他说我这个哥们不白交，他说就你这个说法，我跟着老板去过甘肃多次，河南还有他老家，中国现在就今天，就是说这几个月前说的话他是，中国最起码几千万个杨改兰。
+但在袭击事件一周年之际，观众转向了CNN的右翼竞争对手福克斯新闻，福克斯新闻对该事件的报道在收视率上名列前茅。
 
-他说可悲的事情，他们永远不会被人知道，他自杀他砍死100个孩子也没人知道，他只是偶然的被那个混蛋的宣传媒体拿来，用她的死来让别人不死的时候被你给逮住啦。
+CNN一直受到一连串丑闻的困扰，最引人注目的是其黄金时段明星主播克里斯·库莫被解雇，因为他被发现秘密协助其陷入困境的哥哥、前纽约州长安德鲁·库莫的性骚扰指控辩护，导致其辞职。
 
-悲剧就在这儿呢！你的死都被拿来利用，结果让我们知道了，中国有多少…现在几千万杨改兰，谁要敢说中国没有几千万杨改兰，我R你八辈祖宗！
+![](https://assets.gnews.org/wp-content/uploads/2022/01/屏幕截图-2022-01-14-103753.jpg)CNN世界总部，CNN的收视率在新年的第一周就出现下滑。
 
-你让联合国去查一查，我们今天面对几千万杨改兰的时候，还说我们是叛国、卖国，那么刚才问的问题，你懂啥叫叛国卖国吗？
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1064.png)前CNN主播克里斯·库莫
 
-编辑整理：海贼王M.D.LUFFY；
+CNN的长期老板扎克上个月因该电视台的低收视率和处理有关网络明星库莫和唐·莱蒙的丑闻而受到抨击。
 
-G-News发布：海贼王M.D.LUFFY；
+莱蒙是库莫被解雇前的晚上10点节目主持人，他面临着自己的道德丑闻。这位黄金时段的主播因报道朱西·斯莫利特的审判受到批评，因为这位演员在法庭上作证说，主持人通过短信告知他，芝加哥警方不相信他是种族主义仇视同性恋者袭击的受害者。
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们——**[**日本银河系农场Discord群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+莱蒙还被一名汉普顿的酒保起诉，他声称这位同性恋主播，在2018年揉搓自己的生殖器，然后把手指塞到他脸上。
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+莱蒙否认了该酒保的指控。
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1067.png)CNN黄金时段主播唐·莱蒙去年面临自己的丑闻，包括向《帝国》演员朱西·斯莫利特透露警方对其袭击的调查。
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+据《野兽日报》报道，CNN的收视率下降是在该电视台有史以来收视率第二高的一年之后发生的。尽管有创纪录的一年，但在2021年下半年，网络收视率呈下降趋势。根据尼尔森的数据，虽然CNN在黄金时段晚上8点到11点之间努力抢夺观众，但仍然有83%的同比下降。 在2021年的第一周，它的黄金时段总观众人数为420万，上周只有70.5万。
 
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+在今年的第一周，CNN的总观众人数录得同比下降80%。
 
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1069.png)CNN的老板杰夫·扎克在处理这个陷入困境的CNN最近的丑闻方面面临批评。
 
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+它还失去了其关键人群中89%的黄金时段观众和91%的18至49岁的观众。
 
-推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+CNN没有回应评论请求。
 
-G-TV：日本银河系农场。
+新闻来源 :[nypost.com][Scandal-ridden CNN sees ratings dive by 90% after 2021 coverage](https://nypost.com/2022/01/12/cnn-sees-ratings-dive-by-90-from-2021-coverage/)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-1.jpeg)
+
+
+
 
  
 
