--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,31 +1,31 @@
 ---
-title: 澳大利亚第二次撤销德约科维奇的签证
+title: 西亚足球联赛再次有球员突发倒地
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1858629/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1858705/)
 
-#### 撰稿：彩虹
+作者 台湾宝岛农场 Y.M.O
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-180.jpeg)
+在2022年卡塔尔星级联赛赖扬主场战胜沃克拉的比赛中，效力于沃克拉的马里国脚奥斯马内·库利巴利为了防守哈梅斯·罗德里格斯禁区外的吊射回追至本方球门内，不过在皮球飞出横梁后库利巴利却突然倒地，场上众人第一时间以为库利巴利是无接触受伤，但是发现库利巴利在球门内抽搐。就在场上其他人都不知所措时，哈梅斯·罗德里格斯第一个反应过来并且迅速冲上前对库利巴利进行施救，调整了后者的头部姿势，帮助其改善呼吸状况。随后医护人员及时入场救治，成功救回一命。当时赖扬1:0领先沃克拉，但在库利巴利倒下后由于情况的严重性和危险性双方球队均同意停止比赛，并保留剩余时间和比分。过几天双方重新将比赛踢完，赖扬3:0获胜。
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-27.jpg)图片来源：milehighgears
-1月14日，BBC报道澳大利亚移民部长行使了自由裁量权（personal power of cancellation），再次取消了诺瓦克·德约科维奇（Novak Djokovic）的签证。
+后来经沃克拉的队医确认，库利巴利在比赛中突发心脏病，如果当时急救不及时世界足坛将会再多出一场悲剧。目前库利巴利已经被送到哈马德医院留院治疗。近一两年足球运动员由于心脏问题被迫下场，以及突然倒地甚至死亡的人数史无前例地激增，维基百科已经停止更新了在比赛中死亡的足球运动员人数。欧洲杯上丹麦国脚埃里克森就出现了类似的状况，好在同样及时进行急救处置才逃过一劫。加盟巴萨的阿奎罗在比赛中因为胸口不适从而进行了详细的检查，最终他被告知职业生涯无法再继续下去，只能选择在33岁的年纪退役，十分让人遗憾。另外包括曼联中卫林德洛夫和那不勒斯中场泽林斯基也在比赛中由于呼吸困难而被换下，世界顶级比赛中都已经出现这么多状况更不用说基数更大的低级别比赛了。
 
-根据以往的报道，事件的起因是德约科维奇虽然因为曾经感染过新冠病毒而获得了新冠疫苗豁免权，但是澳大利亚边防部（Australian Border Force）认为德约科维奇未能提供合适的证据以符合澳大利亚的入境要求，甚至要取消他的签证。
+这还算是比较好的结果，因为他们目前都还活着，即使是今后无法再踢球，在生死面前都变得不值一提，但不是所有的球员都能被保住性命。12月22日阿曼马斯咯特俱乐部后卫哈立德·拉卡迪在赛前热身时突然倒地，最终不幸去世年仅29岁。埃及球员艾哈迈德·阿明、阿尔及利亚球员索菲安·卢卡、克罗地亚球员马林·卡西奇、危地马拉球员马科斯·梅纳尔多也都在由于心脏及呼吸问题不幸去世的名单之列。
 
-1月10日，根据《澳洲新闻网》和《天空新闻台》的报道，联邦巡回法庭和家庭法庭已经撤销了对德约科维奇取消签证的决定，意味着他将参加澳大利亚公开赛。
+我在叙述哈立德·拉卡迪突然倒地身亡的文章中提到过运动员由于心脏问题离开球场的可能性就应该为0的。即使级别再低但足球运动员的健康检查也比我们普通人要严密得多，如果说不从事特定职业的普通人如果出现心脏问题尚且还算说得通，那就算从胜利的角度来看球队也不可能让有着健康隐患的球员留在场上然后自己面临少一名主力球员的窘境。但是这种违背常理的状况现在就这么发生了，只能说背后的力量隐藏很深且十分庞大。而在这些异常事件停止之前我们也要一遍遍地提出问题，宣传真相。
 
-但是，1月14日，周五晚上，在墨尔本，澳大利亚移民部长亚历克斯·霍克（Alex Hawke）根据《移民法》的个人权力取消了德约科维奇的签证，他在一份声明中说：“今天我行使了我的权力……以健康和良好秩序为由取消了诺瓦克·德约科维奇先生持有的签证，理由是这样做符合公众利益”。
+P.S.倒地的球员为马里国脚奥斯马内·库利巴利，不是那不勒斯的主力后卫卡列杜·库利巴利。
 
-报道说，这意味着德约科维奇可能面临三年内不得获得新的澳大利亚签证的禁令。同时，移民部长霍克的决定也意味着德约科维奇现在就面临被驱逐出境。而这位男子网球头号选手原定参加下周一（17号）开始的澳大利亚公开赛
+新闻链接
 
-当然，这位34岁的塞尔维亚人仍然可以发起另一项法律挑战，以继续留在澳大利亚。
+[https://www.dailymail.co.uk/sport/football/article-10396275/James-Rodriguez-performs-life-saving-opponent-Ousmane-Coulibaly-suffers-cardiac-arrest.html](https://www.dailymail.co.uk/sport/football/article-10396275/James-Rodriguez-performs-life-saving-opponent-Ousmane-Coulibaly-suffers-cardiac-arrest.html)
 
-根据报道，此前，德约科维奇回应了关于他在旅行表上做了虚假申报的指责，该指责称他在抵达澳大利亚之前的14天内没有旅行，而事实上他曾去过西班牙。
+* * *
 
-他说这个错误是由他的经纪人犯下的，称其为“人为错误”，并补充说这是“非故意的”。他还承认，在对中共病毒（Covid-19）检测呈阳性后，他会见了一名记者并进行了拍照。
-
-**新闻来源**
-
-[Novak Djokovic: Australia cancels tennis star’s visa](https://www.bbc.co.uk/news/world-australia-59991762)
+***更多资讯***
+[台湾农场精彩文章](https://gnews.org/zh-hant/author/taiwangnews/)
+[台湾农场精彩直播影片](https://gtv.org/user/5f60d588245d3c0579acdbec)
+[订阅台湾宝岛农场官方YOUTUBE频道](https://www.youtube.com/channel/UCXlInG8cGCHSN5y54zcgoOw/videos)
+[点击此处加入「台湾宝岛农场」Discord伺服器](https://discord.gg/zE5xTQzArt)
 
  
 
