--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,42 +1,42 @@
 ---
-title: 最迷信的共产党对这个国家是从天到地从心到生殖器控制
+title: 霍利要求扎克伯格对支持未成年人毒品交易作出回应
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1858777/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1858868/)
 
-G-TV视频链接：[https://gtv.org/video/id=61e0fc2587664c47acd46a3e](https://gtv.org/video/id=61e0fc2587664c47acd46a3e)
+翻译：wenwu
 
-**郭文贵先生：**大家讲这个的时候你再想想南普陀会议为什么选在南普陀，千年的普陀寺，普陀寺里面最关键地点在哪里？普陀寺里面有几个山的洞，曾庆红每年都去的。曾庆红每年的冬天就在福建过，福建在哪里？在厦门，厦门在哪里？中国的东南方。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1074.png)图片来源 ：foxnews.com
 
-所以说刚才讲的时候叫什么？南龙、中龙、北龙，南干、中干、北干，是吧？巽山、艮山，是吧，震山，巽、艮、震，是不是？这是南、北、中，蓿艮震就把中国山脉全管，你刚才说的那些山都没有用的，那都是凑合上去的，你把巽、艮、兑，是吧，你把整个巽艮震，艮兑坤八卦这些全搞出来，你就知道中国的所有的《山海经》讲的什么，《三心通论》讲了什么。共产党是全人类最迷信的，它让你不迷信。而共产党整个对这个国家的控制是从天到地、从心到生殖器。
+参议员乔什·霍利（Josh Hawley）周三（12日）致函Meta（前脸书）首席执行官马克·扎克伯格，要求就最近的一份报告作出答复，该报告发现Instagram允许未成年用户搜索非法毒品，其算法帮助他们与毒贩联系。
 
-字幕来源：[2022年1月9日 文贵大直播 全文字版](https://gnews.org/zh-hans/1842354/)
+根据技术透明项目（TTP）的调查，该项目为13至17岁的假想未成年人创建了几个Instagram账户，Meta公司拥有的照片共享平台允许他们在两次点击中到达销售Xanax等毒品的账户。该报告将此与退出该应用程序所需的五次点击进行了对比。
 
-编辑整理：Jacques；
+该报告还解释了该应用程序的自动功能如何不仅未能阻止未成年人搜索毒品销售账户，甚至还加速了这一过程。尽管该公司的社区准则禁止购买或销售非医疗或医药药品，但这还是发生了。
 
-字幕文件制作：小满；
+“报告的结论是可怕的，特别是当我们的国家面临着历史性的药物过量大流行，以及中共病毒（冠状病毒）大流行和对其错误的疫情缓解措施所催生的青少年心理健康的惊人恶化，”霍利写道，他继续引用了2020年5月至2021年4月期间10万例药物过量死亡。
 
-视频制作及上传：Cindy；
+“任何公司都会帮助和怂恿这种死亡和绝望的流行病，这是不合情理的。不幸的是，鉴于Instagram公然无视其年轻用户的心理健康，TPP的调查结果并不令人震惊，”他继续说。
 
-G-News发布：小满；
+霍利要求扎克伯格解释 Instagram 采取了哪些措施来执行其反对销售非法和处方药的社区准则，还要求提供 Instagram 删除此类账户的协议的具体细节。霍利还询问 Instagram是否与执法部门合作打击此类行为。
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1076.png)图片来源 ：foxnews.com
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+霍利要求扎克伯格在1月31日前回答他的问题。Meta没有及时回应福克斯新闻的评论请求。
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+在报道了 Instagram 对年轻人心理健康的负面影响后，霍利在9月提出立法，要求社交媒体公司为其产品对儿童的伤害承担责任。
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+根据皮尤研究中心（Pew Research survey）去年4月公布的一项调查，大约有四分之一的美国人使用 Instagram，而使用脸书（Facebook）的美国人大约有七分之一。在18至29岁的年轻成人用户中，大多数（81%）说他们使用 Instagram。
 
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+据《华尔街日报》援引Facebook的文件报道，该应用超过40%的用户在22岁以下，每天约有2200万青少年使用该应用。
 
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+新闻来源：[foxnews.com] [Hawley demands Zuckerberg answer for ‘horrifying’ report aboutInstagram and underage drug use](https://www.foxnews.com/politics/hawley-demands-zuckerberg-answer-horrifying-report-instagram-underage-drug-use) | 发布时间：2022年01月13日
 
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+* * *
 
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-1.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
