--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,34 +1,52 @@
 ---
-title: 2021年朝鲜网络犯罪盗窃加密货币达到顶峰
+title: “穿西装的精神病人”正逍遥法外！ 为什么？（1/2）
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1858616/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1858696/)
 
-#### 撰稿：彩虹
+翻译： Jenny Ball
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-26.jpg)图片来源：Stedmood
-1月13日，《国会山报》报道，根据周四发布的一份报告，朝鲜黑客在2021年盗取了近4亿美元的加密货币，达到其网络犯罪活动的顶峰。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1062.png)图片来源:childrenshealthdefense.org
 
-软件公司Chainanlysis(区块链分析公司)创立于2014年，总部位于美国纽约州纽约市，是一家为全球政府、加密货币交易所、国际执法机构、银行和企业提供区块链数据和分析软件，以帮助他们遵守合规要求、评估风险并识别非法活动的公司。
+在今天的美国，如果你毒杀你的妻子以赚取 150,000 美元的人寿保险金，你可能最终会入狱——但如果你毒杀数十万人，这样，你就可以拿到数百万美元的薪水 ，你可以买一艘新游艇。
 
-根据Chinalysis的研究，朝鲜黑客已经有能力通过对加密货币平台的七次攻击中窃取到约4亿美元，从而在2020年到2021年，使得他们从这些攻击中获得的价值增长了40%。
+阿尔弗雷德·鲁夫（Alfred Ruf）毒死了他的妻子，这是他骗取人寿保险致富的计划。 格雷戈里·丹尼斯（Gregory“Brent”Dennis）博士也做了同样的谋杀，他正在等待 200 万美元的保险赔付。约书亚·亨萨克（Joshua Hunsucker）毒害了他的妻子，仅得到了 250,000 美元的人寿保险金，因为其中 80,000 美元用于购买了一艘游艇。大卫·佩蒂斯（David L. Pettis）毒害了他的妻子也得到了150,000 美元。
 
-根据该公司的研究，这些攻击主要影响了投资公司和集中式交易所。黑客使用的方法包括“网络钓鱼诱饵、代码漏洞、恶意软件和高级社交工程陷阱”，以便从平台上获取资金，并将其放入所谓的热钱包（Hot Wallet）。
+我不知道毒杀我父亲和我兄的人的名字，他们上周四都去世了，但我知道那些人在哪里工作，以及他们为什么这样做：就像鲁夫、丹尼斯、亨萨克和佩蒂斯一样，当他们将石棉卖给我父亲的雇主，并让我的兄弟沉迷于烟草时，他们是故意的，他们明知会导致死亡，他们故意那样做的。
 
-2021年，以太坊（Ethereum）占了朝鲜网络犯罪分子所盗资金的大部分，为58%。
+石棉（1）行业早在 1890 年代就知道，并在 1940 年代得到明确证实，他们的产品会导致间皮瘤，这导致特别残酷地杀死我父亲的肺癌。
 
-Chainalysis说：“一旦朝鲜获得了这些资金的保管权，他们就开始了谨慎的洗钱过程，以掩盖和兑现”。
+（注释1: 石棉纤维吸入人体会沉积在肺部，造成肺部疾病。人如果暴露于石棉粉尘可导致肺癌，胃肠部癌，胸膜或腹膜的间皮癌以及石棉沉着病—石棉肺。国际癌症研究中心已肯定石棉为**致癌**物。）
 
-然而，黑客们似乎对他们偷来的所有加密货币的洗钱速度很慢。该公司的分析发现，大约有1.7亿美元的加密货币未经清洗，其中约3500万美元是通过2020年和2021年进行的黑客攻击偷窃到的。
+**但是即使在今天，他们的高管也在试图逃避责任**：强生公司正在玩破产游戏，以避免为他们的石棉滑石粉引起的癌症买单，甚至没有一个高管丝毫担心会因为所有这些行为造成人们死亡而入狱。
 
-正如Chainalysis在其报告中所说，朝鲜最近网络偷窃行动“呈现了一个大规模支持加密货币犯罪的国家形象。朝鲜政府通过系统且复杂的黑客活动，无论是通过拉撒路集团 (Lazarus Group)还是其他犯罪集团，在2021年已经将朝鲜政府塑造成为了加密货币行业的大规模持续威胁”。
+1994 年，烟草业的最高 CEO 在国会议员面前撒谎，同时，烟草业在我有生之年每年杀死超过 400,000 名美国人。
 
-文章报道，去年，司法部指控三名朝鲜人，分别是全昌赫（Jon Chang Hyok）、金日（Kim Il）和朴金赫（Park Jin Hyok），从美国相关组织窃取了13亿美元的现金和加密货币。据称，这三名黑客参与了2014年的黑客行动，但截至1月份，他们仍被认为是在逃状态。
+和那四个杀妻案一样，都是为了钱，但是比那四个人想象的要多得多的钱。
 
-**新闻来源**
+那四个杀妻犯都在监狱里了。但今天仍在推广烟草，并使用破产法来避免为石棉死亡买单的决策者们，却仍正在他们的豪宅和游艇上，享受着人们在这种流行病中遭难。
 
-[North Korean hackers stole almost $400M in cryptocurrency, report says](https://thehill.com/policy/cybersecurity/589661-north-korean-hackers-stole-almost-400m-in-cryptocurrency-report-says)
+**而这只是表面问题。**
 
+仅仅在过去的几周里，气候变化驱动的天气导致数百名美国人丧生，数千人无家可归，而化石燃料行业的人在 50 年前就知道，由于他们出售产品，才让这种天气会发生。还是为了钱。
+
+然后是美国的“健康保险”行业，与世界上任何其他行业不同，每年都有数以万计的美国人因债务（目前超过 1 万亿美元）毁掉他们的生活，或者，在他们生病时禁止向他们提供服务：因为没有保险，他们买不起。
+
+自从我们建国以来，美国的资本主义一直在以“保护穿着西装的精神病患者” 冷酷杀手的方式发挥着作用。但自从大烟草公司在 1990 年代被淘汰以来，情况变得更加糟糕。
+
+在 1980 年代，里根放松了对储蓄和贷款行业的管制——可以预见的是，在几年之内，少数高管使自己成为了千万富翁，而美国各地成千上万的家庭被消灭了。司法部介入，并起诉了 1100 名银行家，839 人被定罪，超过 100 人入狱。
+
+当所谓的“互联网泡沫”在世纪之交爆发时，来自安然、世通、奎斯特和泰科等公司的数十名高管被起诉、定罪和监禁。直到 2005 年，我们仍然偶尔将高管送进监狱。
+
+但是现在不再有高管坐牢了。文章后半部分看为什么。
+
+新闻来源:[childrenshealthdefense.org][‘Psychopaths in Suits’ Are Getting Away With Murder. Why?](https://childrenshealthdefense.org/defender/psychopaths-getting-away-with-murder/?utm_source=salsa&amp;eType=EmailBlastContent&amp;eId=d8800cb1-6ca8-45e1-9766-b37231ff4113)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-1.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
