--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,25 +1,49 @@
 ---
-title: 由于奥米炕疫情爆发新冠病毒药片出现短缺
+title: 江泽民朱镕基家族盗卖领土掌控和田玉价UBS摩根为其洗钱
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1858594/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1858690/)
 
-翻译：  Evalu
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片3-24.png)
-图片来源： http://news.youth.cn/
+视频链接：[2022年1月12日 文贵大直播- G|TV](https://gtv.org/video/id=61df44f3a6dfdd6031535439)
 
-美联社1月13日报道，随着美国全新推出两种针对新冠病毒的药片，照理来说应该是抗击疫情的有力武器，但在美国由于供应短缺，在本轮抗击奥米炕疫情中并没有起到什么效果。
+**郭文贵先生：**那么2002年的塔吉克斯坦这个土地交易背后是谁知道吗？去查查朱镕基跟他谈的啥？我郭文贵敢在世界的任何一个法庭告诉你，朱镕基、江泽民家族在那里拿到了天大的钱，到今天还在收钱。
 
-其部分原因是产品生产速度有限，需要5-8个月形成大规模生产。预计在接下来几个月的供应将会大幅改善，目前医生都在开处方，不仅因为奥米克戎病例数激增，而且原有的两种抗体治疗对奥米炕效果不好。
+中国老百姓的无知是全人类我没有见过的。他们敢把国家的土地就这么卖出去，在那儿收着矿，而且协议很简单，永久这个公司拥有这个地方矿的开发权。
 
-一月份是极困难的一个月，因为每天有一百多万新病例，虽然极大多数没有大问题，但对高危人群需要用有效药物。
+昆仑玉，就是所谓的和田玉，你们这些傻子们！你见过真的是几吨重的和田玉吗？跟你说你可能不相信，那个价格全都是江、曾、朱之控制，比特币为啥是共产党搞起来的？就是江家搞起来的，他要把钱洗…不是洗白了要洗雪白呀！
 
-辉瑞公司的新药名为帕克斯洛韦德，被认为比默克公司的药效果更好，但该公司生产速度有限，到本月底只能提供25万例疗程的剂量。默克公司的新药名为默纽派洛韦德，该产品的产量多一些，但效果比辉瑞的差，而且对胎儿有可能造成先天缺陷，因此只是最后的选择。
+为什么UBS成为中国第一个，外资允许的百分之百的这个执照？为什么摩根要拿证卷公司？都是王岐山、江家的，他洗钱需要工具啊，它需要水、需要池子、他洗完放哪去。
 
-直到周日，有近12万8千美国人因新冠住院，超过了去年一月份的高峰期12万5千人住院，但与去年相比，较少病人需要进重症监护室。
+我告诉大家如果你不懂得什么叫叛国和卖国你这一辈子被骂叛国、卖国你就太冤了，你有资格叛国吗？有资格卖国吗？你就算个屁，是吧！你算个屁。
 
-##### **新闻来源： **[COVID-19 pill rollout stymied by shortages as omicron rages](https://apnews.com/article/coronavirus-pandemic-science-business-health-pandemics-b2d1051842df779dfa6122f824bd0377)
+就当时我在里边儿的时候，当时那个郑州裕达就是说我是美国的派来的特务，跟一个好莱坞的女人结婚了，然后就监视郑州的时候，我被找去了，他们说，郭文贵人家说你是叛国，我说是吗！我说你说我叛哪个国了？他说你真以为你叛国？你有资格叛国吗，？那叛国是共产党员在叛国，轮到你来说叛国了吗？
 
-# ** **
+就连一个郑州的一个所谓金水区的检察官、反贪局的副局长，都敢说我这话。后来这哥们儿被枪毙了，被被注射毒针死了，你可以查查去，一个人贪污两个多亿当年。
+
+所以兄弟姐妹们！你再看一看为啥我讲昆仑山脉？为什么讲帕米尔高原？为什么讲整个的西藏、喜马拉雅？喜马拉雅山上的秘密、西藏的矿藏、西藏的奇才异宝都去哪儿了？
+
+光在西藏，用当时的曾庆红的秘书说，我在西藏搜罗搜罗我分分钟搜罗个一百个亿、两百亿，分分钟啊！一个秘书都这么说，今天青青草原你坐这儿你还灭共呢，你连知道共产党邪恶的0.001（%）都没有。
+
+编辑整理：海贼王M.D.LUFFY；
+
+G-News发布：海贼王M.D.LUFFY；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们——**[**日本银河系农场Discord群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：日本银河系农场。
 
  
 
