--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,37 +1,26 @@
 ---
-title: 大直播后记：世界上没有比中国人更可怜的
+title: “韭菜”护“镰刀”现象的根
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1858582/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1858682/)
 
-##### 整理：雅典娜速记组
-编辑：Mttfly
+澳喜文飞
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Picture1-7.png)图片为自主编辑
+我所说的“韭菜”护“镰刀”的现象就是我们常常面对的而又百思不得其解的——穷苦草根在言论上（至少是表面上言论）处处拥戴中共，处处为中共的所谓成就自嗨，即使这一些成就与他们没有毛关系；比如说：高楼大厦、政府的高级楼堂馆所、没有发动机的大飞机、冒黑烟的航母、还有常常会掉下来的长征火箭、落后20年的光刻机；细想一下这一些他们嘴里得强国的标志，似乎与他们的衣食住行没有任何关联，甚至还是用了他们的血汗换来的税金换取的，但是他们还是那么自豪！
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/ffebbf.png)图片来源：sohu
+今天我们就来讨论一下他们的思想根源，他们为什么那么嗨（自豪）？
 
+他们是既得利益者吗？不是！他们大多是黎民百姓，顶多有一两套还在供房贷的房子，他们没有钱送孩子出国留学，他们可能还没出过国，哪怕是港澳新马泰（有报告显示，中共国只有一亿人有过出境记录），但是在他们的语境中他们又那么轻视一起外国！
 
-#### **2022年1月12日大直播**
+他们信仰共产主义？如果是那我会为他们无知的信仰敬礼的！其实他们不信也不懂！更没有读过共产党宣言（党不认为他配！）。
 
-什么叫社会主义？有关系才有主义。什么叫社会主义？有权力才有主义。什么叫共产主义？死越来越多的人把财富集中在几个人身上，享受一切的，爹亲娘亲不如党亲，那就叫共产主义。
+他们既不得益，又不持信仰，但是他们处处拥护着割他们韭菜的镰刀！
 
-你问这个问题太天真，你是站在日本问中共的问题，不太傻了嘛？你自己穿上西装问猪圈里的猪，你怎么吃猪食的？猪会告诉你说我就是猪。我发现你不是猪，你是郭文贵，你只是穿了个猪皮而已。是吗，我这时候脱下猪皮，哎，我就是郭文贵，我是七哥。就是这么简单的事。
+我思来想去似乎找到了他们的思想根源！那就是“黑社会英雄主义”！
 
-我们战友所有对昆仑山，对这个喜马拉雅山的理解，最高境界的就是叶钊颖，因为她去过，上过山，这是最高境界，觉得雪山纯洁。战友们找了昆仑山，找出来一个解放军的一个正常的军事基地，你就以为解密了。你能知道几个峰你都不错，你想想多可悲呀。连哈萨克斯族的青青草原，她知道新疆啥呀？她在新疆享受什么样的新疆生活？他去过几次喀什？喝过多少次帕米尔高原的水？你真的以为你知道吗？你啥都不知道。
+黑社会里他们没有正邪之分，谁能霸到地盘谁就是老大！老大越狠就越多小弟追随！老大越猛老弟就越有自豪感，他们的自信心也随之而来，他们以他们老大的“强大”而自豪，我称之为黑社会英雄主义。
 
-这就是共产党，把所有的中国人圈在了一个圈里面。在家里边儿、在东北的炕上、在中国的小房子里边儿、在农民的地里边、在南方的所谓工厂里，让你终生只能眼观土地。然后你的腚就给共产党，还想干啥？没有比中国人更可怜的。
-
-就今天的阿富汗，我认为都比中国人的幸福。每时每刻我在说阿富汗饿死人是共产党的原因，但阿富汗人最起码他还有个宗教的选择。我们中国人没有比这更可怜的，这个羊群之可怜，你说中国人是羊的时候，太侮辱羊了！羊还能长出个毛，羊还能呼吸呼吸或者吃个健康的草，中国人吃啥？绝大多数都吃化学食品。你看到过日本人吃用中国的调料做的中国饭吗？你在日本见过吗？只要中国来的，日本人闻都不闻，扔得远远的。
-
-你觉得都是人类，还有比我们再可怜的吗？所以说到这的时候，风雨之中，对于共产党来说那是太正常不过的，无处不在的。 我们爆料革命到今天，我最大的感触就是我跟你们几个说话的时候，说实话我就跟石头说话的感觉一样。我过去这些年的痛苦，我到现在我还是那么痛苦。我从来不觉得有多少人能懂我，我跟你们说这种话发自内心的，那就像跟石头说话。就你问这个问题，就像石头在问我的话，我为什么叫石头？你本来就是石头，你为什么要叫石头？你本来就是石头。你应该问是谁让你变成的石头？
-
-*发布：Mttfly*
-**
-更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+现在就不难理解韭菜们为割他们镰刀呐喊了吧！为中共呐喊的粉红们根本不信仰共产主义，他们只是为他们的老大“强大”而自豪吧！只要老大不强了，他们也就散了！ 有新中国联邦在，他们的老大“强大”不了几天了！他们也快散了.
+![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
