--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,32 +1,118 @@
 ---
-title: 美国最高法院阻止了对企业的中共病毒疫苗强制令
+title: 医生告诉立法者：必须允许父母决定孩子是否接种 (2/2)
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1858559/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1858668/)
 
-编译：花岗岩
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片2-37.png)
-图片来源：网络截图
+编译： Jenny Ball
 
-据合众国际社1月13日报道，美国最高法院周四阻止了总统乔·拜登对大型私营企业的中共病毒疫苗或测试强制令，但允许对接受联邦资金设施的医护人员提出疫苗要求。高等法院以6-3票反对前者，布雷耶（Breyer）、索托马约尔（Sotomayor）和卡根（ Kagan）持反对意见。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image0-1-4.jpg)图片来源：Children’s Health Defense Team
 
-职业安全与健康管理局在11月发布的强制令要求拥有100名或以上员工的企业的工人接种疫苗或每周提交中共病毒的阴性测试。它还要求未接种疫苗的工人在室内必须戴上口罩，但对有宗教信仰的工人和在家工作的员工有例外。
+“不管他们是民主党人还是共和党人，只要是正常的父母，他们都担心这是否会强制要求他们的孩子注射，”昆特说。
 
-“尽管国会无可争议地赋予OSHA监管职业危险的权力，但它没有赋予该机构更广泛地监管公共健康的权力，”法院在其裁决中说。“要求8400万美国人接种疫苗，仅仅是因为他们为雇员超过100人的雇主工作而被选中，这当然属于后面的范畴，”它继续说。
+缅因州格林的马特·兰德里（Matt Landry）是 280 多名在三小时听证会上远程作证或写信的人之一。他告诉立法者，他“厌倦了这些违反人民意愿的注射，它们使人们生病、受伤或死亡。我看到它已经发生在我认识的人身上，这让我气愤至极。”
 
-在投票之前，倾向于保守的法官们表示，他们不相信总统乔·拜登有权责成OSHA对拥有100名或更多雇员的公司执行这一任务。
+反对该法案的缅因州州长珍妮特·米尔斯告诉缅因州新闻中心：
 
-不过，最高法院允许对接受医疗保险或医疗补助金的医疗机构实施类似的任务。对医护人员的疫苗强制令投票结果是5比4，托马斯（Thomas）、阿利托（Alito）、戈尔舒（Gorsuch）和巴雷特（Barrett）持反对意见，这意味着罗伯茨（Roberts）
+“现在是每位领导职位的人、每个公职人员、每个社区中担任领导角色的人行动的时候了，让人们了解这些疫苗的安全性和彻底测试的安全性，以及保持这些疫苗的重要性，会让你离开医院，让你远离重症监护室，让你免于死亡。”
 
-和卡瓦诺（Kavanaugh）与自由派大法官一起，允许HHS对医护人员的强制令成立。
+但纳斯告诉立法者，无论她怎么说这些疫苗的作用，**它们都不是“安全有效的**”。
 
-据白宫称，由医疗保险和医疗补助服务中心发布的医疗保健强制令适用于76000个设施的约1700万工人。
+纳斯写道：
 
-拜登在一份声明中批评了这项裁决，并呼吁各州和私人雇主要求工人接种疫苗。
+“‘安全有效’是 [U.S. FDA] 仅适用于许可药物和疫苗的“**艺术术语**”。美国目前所有可用的 COVID 疫苗，都是未经许可和实验性的，也就是研究性的。”
 
-新闻来源：1. [Supreme Court blocks COVID-19 mandate for businesses](https://www.upi.com/Top_News/US/2022/01/13/supreme-court-blocks-bidens-vaccine-mandate/5471642105616/)
+纳斯完整的证词如下：
 
-2. [Supreme Court Blocks Biden’s OSHA Vaxx Mandate](https://www.zerohedge.com/political/supreme-court-blocks-bidens-osha-vaxx-mandate)
+2022 年 1 月 11 日
 
+尊敬的主席、议员和参议员，
+
+我写信是为了支持 LD 867。为什么在进行充分、全面的安全性研究之前阻止 COVID 疫苗授权是该委员会和立法机构的正确决定，原因有很多。
+
+1. COVID疫苗是实验性的
+
+首先，让我说，无论对这些疫苗怎么描述，它们都不是“安全有效的”。“安全有效”是 FDA 的“艺术术语”，可能仅适用于获得许可的药物和疫苗。**美国目前所有可用的 ****COVID ****疫苗，都是未经许可和实验性的，也就是研究性的**。
+
+药物和疫苗要么是许可产品，要么是实验产品。在美国法律中，**它们之间没有灰色地带**。无论研究是否明确进行，实验产品的使用（包括那些获得紧急使用授权的产品），**都属于《纽伦堡法典》和美国监管实验药物的法律**。正如前 FDA 专员斯蒂芬·哈恩（Stephen Hahn）他自己指出的那样，“EUA 产品仍被认为是研究性的。”
+
+根据 21CFR D 子章第 312 部分：“实验是对药物的任何使用，但在医疗实践过程中使用已上市药物除外。”疫苗被 FDA 视为药物的一个子集。因此，根据定义，使用未经许可的紧急使用授权疫苗是**实验性的**。
+
+美国法律要求：接受实验产品的人，必须提供书面知情同意书。然而，在制定创建紧急使用授权 (EUA) 的 PREP 法案时，对于将使用 EUA 产品的紧急情况，这一要求略有放宽。使用 EUA 时所需的披露规定如下：（**请注意接受或拒绝的选项**）
+
+21. U.S. Code § 360bbb-3 – 紧急情况下使用医疗产品的授权 (ii) 旨在确保告知接受该产品的个人的适当条件 —
+
+(I) 局长已授权紧急使用该产品；
+
+(II) 此类使用的重大已知和潜在利益和风险，以及此类利益和风险未知的程度和期权；
+
+(III) 接受或拒绝给予产品的选择权、拒绝给予产品的后果（如果有的话）、可用的产品替代品及其益处和风险。
+
+所有莫德纳、强生公司和所有儿童期的辉瑞-生物科技疫苗都在 EUA 下使用。虽然辉瑞-生物科技成人疫苗应该以 Comirnaty 品牌获得许可，但事实上，**目前在美国使用的辉瑞成人疫苗也是 ****EUA ****产品****。**
+
+**2. **虽然 FDA 许可了 Comirnaty，这是唯一获批的 COVID 疫苗，**但在美国使用的都是紧急使用授权（实验）疫苗。**
+
+尽管有相反的说法，但许可和品牌的 Comirnaty 尚未在美国用于管理。目前可用的辉瑞-生物科技疫苗，是根据紧急使用授权的，**该授权为制造商、分销商、管理员、计划规划者，以及几乎所有参与疫苗接种过程的其他人**，提供了广泛的责任保护。另一方面，品牌产品目前受普通责任索赔的约束。
+
+在 FDA 向 Comirnaty 颁发许可证的整整三周后，隶属于 NIH 的国家医学图书馆发布了信息，**称辉瑞公司不打算在 ****EUA ****疫苗仍然可用的情况下，****在美国提供 ****Comirnaty**。
+
+辉瑞公司的 COVID-19疫苗获得 FDA BLA 许可
+
+辉瑞公司的 COVID-19 疫苗于 2021 年 8 月 23 日获得 FDA BLA 许可，用于 16 岁及以上的个人（COMIRNATY）。当时，FDA 发布了一份 BLA 包装插页，其中包括获批的新 COVID-19 疫苗商品名 COMIRNATY，并列出了 2 个新的 NDC（0069-1000-03、0069-1000-02）和带有新商品名的标签图像。
+
+目前，辉瑞不打算在未来几个月内生产任何带有这些新 NDC 和标签的产品，而 EUA 授权产品仍然可用并可供美国分销。因此，在辉瑞确定何时生产带有 BLA 标签的产品之前，CDC、AMA 和药物纲要，可能不会发布这些新代码。
+
+**FDA ****在获得疫苗许可的同一天，延长了疫苗的 ****EUA ****授权**。
+
+**FDA ****似乎已经同意白宫要求该疫苗获得许可**，以允许它被授权用于美国大部分人口。根据 EUA规定，潜在的接受者有权拒绝，不能强制执行。因此，颁发的许可证，允许政府告知公众疫苗已获得完全批准和许可。但事实上，公众无法获得许可疫苗。
+
+为什么要执行这个复杂的监管过程？在 EUA 下，辉瑞拥有几乎防弹的责任盾。根据 2021 年 9 月 23 日国会研究服务处 (CRS) 的说法，“法院已将 PREP 法案豁免描述为‘全面’。”CRS 解释说，“PREP **法案使受保护的人免于承担与相关损失相关的所有索赔的法律责任，涵盖的对策的管理或使用**。”
+
+3. FDA 指示辉瑞-生物科技，FDA 国会授权的数据库不足以评估心肌炎（和其他潜在的 COVID 疫苗副作用）的危险，因此 ，**辉瑞生物科技必须在未来六年内开展研究以评估这些风险**
+
+2021 年 8 月 23 日，FDA 向 Comirnaty 颁发许可证的当天，FDA 指示辉瑞-生物科技没有充分了解该产品的严重潜在风险，并要求制造商辉瑞和生物科技进行一系列研究评估这些潜在风险。这些研究将在两种产品上进行：**获得许可的 ****Comirnaty ****和 ****EUA ****辉瑞****–****生物科技疫苗。**请注意，它们包括对妊娠期安全性研究的要求，该研究要到 **2025 ****年** **12 ****月 ****31 ****日才能完成**。
+
+我直接从发送给辉瑞-生物科技的 FDA 批准信的第 6-11 页，复制了 FDA 关于以下这些必需的安全研究的部分内容。
+
+**4.WHO****不建议正常儿童接种****COVID****疫苗**
+
+WHO网站“谁应该接种疫苗”声明如下：
+
+与成年人相比，儿童和青少年的疾病往往较轻，因此，**除非他们属于严重 ****COVID-19 ****风险较高的群体**，为他们接种疫苗的紧迫性，低于老年人、患有慢性疾病的人和卫生工作者。
+
+需要更多关于在儿童中使用不同 COVID-19 疫苗的证据，**以便能够就为儿童接种 ****COVID-19 ****疫苗提出一般性建议**。
+
+WHO战略咨询专家组 (SAGE) 得出结论，辉瑞-生物科技疫苗适合 12 岁及以上人群使用。12 至 15 岁的高危儿童，可以与其他优先接种人群一起接种这种疫苗。针对儿童的疫苗试验正在进行中，当证据或流行病学情况需要改变政策时，WHO将更新其建议。
+
+如果WHO认为没有足够的证据支持对正常儿童进行一般疫苗接种，那么该委员会和缅因州立法机构为什么会不这么认为呢？
+
+总结：
+
+• 所有可用的COVID 疫苗都是实验产品。
+
+• 在法律上，接种者必须有权拒绝。
+
+• 授权否定拒绝权。
+
+• 有关疫苗的基本安全问题尚未解决，有些问题要到 2027 年才能得到解答。
+
+• WHO不建议为儿童接种广泛的 COVID 疫苗。
+
+• 应允许父母就其子女接种 COVID 疫苗的风险和益处做出个体化决定。
+
+• 不幸的是，在公众获得关于安全性和有效性的完整信息之前，没有人可以对 COVID 疫苗做出完全知情的决定，而这些信息现在不可用。仅这一事实就应该否定所有授权。
+
+非常感谢您的关注。
+
+梅丽尔·纳斯，医学博士
+
+**参考资料：**[childrenshealthdefense.org][Parents Must Be Allowed to Decide on COVID Vaccines for Kids, Physician Tells Maine Lawmakers](https://childrenshealthdefense.org/defender/meryl-nass-parents-decide-covid-vaccines-kids/?utm_source=salsa&amp;eType=EmailBlastContent&amp;eId=b5be3851-e217-4fa4-afa8-e0ddac5c9bfd)
+
+* * *
+
+*审核：文乐*
+*校对 : 信心满满*
+*发布：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-1.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
