--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,23 +1,56 @@
 ---
-title: 【中日财经爆】佳能珠海宣布停产
+title: 曾判定薄熙来不会再出重庆孙政才少见为妙陈敏尔必自毁
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858758/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1858845/)
 
-撰稿：东京樱花团/华夏伊人
-![](https://assets.gnews.org/wp-content/uploads/2022/01/12-6.jpg)[图片来源](https://m.jiemian.com/article/7010598.html)
-近日一则盖有佳能珠海有限公司公章的公告在网上流传，称“终止公司生产”。珠海市高新管理委员会工作人员表示，佳能珠海已向管委会报备了相关事宜，管委会有个部门已介入，督促企业依法依规保障员工权益。根据公告，因近年来全球照相机市场急剧萎缩，及中共病毒（新冠病毒Covid-19）长期肆虐，公司经营面临空前困难，总部不得不对集团整体经营架构进行调整，经慎重研究，做出艰难决定：终止公司生产。
+G-TV视频链接：[https://gtv.org/video/id=61e0fd1087664c47acd46a82](https://gtv.org/video/id=61e0fd1087664c47acd46a82)
 
-成立于1990年的佳能珠海，已经走过了32个春秋，数码相机记录了几代人的青春记忆。现在决定停产，也把几代人的青春记忆带走。
+**郭文贵先生：**那么这次重庆大爆炸的事，它没有任何我认为是偶然性和有任何是操纵性，不要把它政治化，不存在。但是大家都突然因为陈敏尔想到这么多，我为什么要谈重庆呢？
 
-是中共国的大环境变了，还是这些外资企业变了，亦或是人们的消费习惯变了，壮士断腕绝非企业本意，期待它的华丽转身。
+我们曾经都谈曾庆红，曾庆红这是我认为绝对中国活着的人当中、喘气儿的、包括老江，第一高人。十个习近平加上今天七个常委，再加上现在刚出来这五个人，他也不是曾庆红的对手。
 
-信息来源：
+就刚才讲的昆仑山脉、整个喜马拉雅的玉女峰、整个昆仑峰、喀孜玛峰（音）和整个喜马拉雅7770米的神峰、到整个重庆、到整个成都、到九寨沟、到长江、到黄河、到南普陀、到福建、到台湾。
 
-[32年的佳能珠海宣布停产：经营面临空前艰难](https://www.sohu.com/a/516497572_100117963)
+河流之间能顺手一抓，能把这河流的人脉，说在昆仑山脉居住着6亿，在西藏的水流居住着6亿人，周围大概有12亿人。 然后加上中国将近二十几亿人的分布，只有曾庆红能说出来，没有人能说出来的。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+谈《山海经》、谈整个说《三心通论》（疑：《三命通汇》为明朝万明英著，下同），老万、万心什么方了？写整个通论为什么写出来？哪行，哪不行？然后怎么生产出来所谓中国的这些《奇门遁甲》这些书，曾庆红几十年前给你搞的明明白白。
+
+曾庆红不会让人去重庆对陈敏尔动手 。曾庆红对陈敏尔说过一句话——陈敏尔最后一定自己把自己毁了。很早以前当时跟习在江浙时候，搞什么“习思语”的时候，不用在乎他。
+
+最早对薄熙来说过——薄熙来进了重庆不会再出来的。 孙政才多往曾家趴呀，结果曾就告诉他身边儿的人，当时陈鑫他的秘书说“此人没有未来，少见为妙”。 对王岐山说“既不要反，也不要近他”。
+
+孟建柱是江家的杀手，但是他对孟，和所有家人都说“孟这个人只能用，千万不能亲近”。对韩正是怎么说法？说“韩正这个人能帮则帮，但是千万不要用他”。就是能帮就帮，你成了我就帮，千万不要用你。
+
+曾庆红之奥深，这些都不能比。
+
+字幕来源：[2022年1月9日 文贵大直播 全文字版](https://gnews.org/zh-hans/1842354/)
+
+编辑整理：Jacques；
+
+字幕文件制作：小满；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
