--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,50 +1,43 @@
 ---
-title: 信用卡巨头Visa将为各国央行数字货币打造接口
+title: “金域”等中共国公司靠核酸检测究竟发了多少疫情财
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1858521/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1858586/)
 
-#### **【雅典娜观察】和您一起探究世界**
+**作者:****  **青衣
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片4-14.png)
+（图片来自 Kevin Frayer/Getty Images）
 
-整理报道：文扬
-编辑：文泓
+自中共病毒疫情爆发以来，中共国几乎人人都做过核酸检测，有些人甚至做过数十次之多。在中共的“清零”防疫政策之下，只要某地出现零星确诊个案，哪怕只有一例疑似病例，往往全员就要进行强制核酸检测，并且还要多轮检测。那么2021年，中共国人究竟做了多少次核酸检测？与核酸检测相关的企业又究竟赚了多少钱呢？
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Y9Z36OEZJZLZ5PJ4GY.png)图片来源：Pymnts.com
+据《希望之声》1月14日报道，近日，随着广州金域医学检验集团郑州区域负责人被河南省许昌市公安局立案调查，有关核酸检测的问题逐渐引起了人们的关注。
 
+每当中共国某地出现疫情，都要进行一轮又一轮的全员核酸检测。到底检测了多少人，中共官方公布的数据不足为信，而人们也很难统计。不过，从核酸生产企业的销量却能看出大致数量。
 
-**1****月13日，据雅虎新闻报道，信用卡巨头Visa周四宣布，它将通过与区块链软件公司共识系统（Consensys）合作，为各国中央银行数字货币(CBDC)建立一个接口，进一步扩展其加密货币服务。**
+“金域医学”原本不是一家出名的公司，但在1月12日，该公司郑州区域负责人因违反《传染病防治法》规定，“实施引起新冠病毒（中共病毒）感染肺炎传播或者有传播严重危险的行为”而被立案调查后，人们才发现，在南京、满洲里、西安、郑州这几波大的疫情中，“金域”都是主要参与者。
 
-**这家支付巨头的目标是创建一个“CBDC加密沙盒”，该沙盒将在春季推出，中央银行可以在使用共识系统的Quorum协议完成铸币后，尝试该技术应用。**
+金域公司在中共国国内有73家成员企业，分布极广。网友发现，金域医学成立之初，是钟南山担任院长的广州医学院（广州医科大学前身）的校办企业。2018年9月，金域医学还与广州呼吸健康研究院联合成立了“临床呼吸道病毒诊断与转化中心”，由钟南山亲自担任主任，同时他也是金域医学学术委员会主席。
 
-**这一合作关系是蓬勃发展的加密数字货币市场的最新进展，各国央行争相铸造自己的数字货币，成熟的金融公司也在涉足加密货币支付。**
+那么，与钟南山密切相关的这家公司共做了多少次核酸检测呢？2022年初，金域公司董事长梁耀铭在新年演讲中称，截至2021年11月，金域做过的新冠病毒（中共病毒）核酸检测已达2.2亿人份，居全球第一；单日检测总产能为130万管，也是全球第一。
 
-**“中央银行正在从研究转向真正想要拥有可以试验的有形产品，”Visa组织的加密业务负责人朱伊·谢菲尔德说。**
+在中共病毒疫情爆发后，中共国的第三方检测机构暴增。据中共卫健委官方统计，2020年3月，全国新冠病毒（中共病毒）核酸检测实验室有2081家，而到2021年3月就已发展到10260家。虽然没有公开数据显示金域所占的市场份额，但据业内人士估计，金域大概占了核酸检测的半壁江山。由此便可大致推测出中共国人一年里所做过的核酸检测总数起码在4亿次以上。
 
-**CBDC****可以运行分布式账本或区块链技术构建的协议。与比特币(BTC-USD)或以太坊(ETH-USD)等加密货币不同，CBDC协议始终是“许可的”，这意味着中央银行保持货币和治理控制。**
+事实上，2021年中共国的疫情远没有2020年严重，但核酸检测却更加频繁，金域的业绩也证明了这一点。2020年全年，这家公司才做过3200万次检测，但仅2021年1~4月就做了3000万次。
 
-**该合作关系为CBDC采用了“两级”分销模式。中央银行将在共识系统的Quorum上设计他们的数字货币，在那里他们将设定其货币和治理规则。然后，他们使用Visa的基础设施，通过商业银行等金融中介机构分发该货币。**
+那么，金域究竟赚了多少钱呢？据了解，虽然2020年金域的检测量为3200万次，但由于当时单价高，达到95元，所以检测收入达到30.41亿元；2021年虽检测量大，但因单价下降，因此截至今年三季度，金域的检测收入为33.6亿元。
 
-**自2019年以来，Visa一直涉足与加密货币相关的产品，利用其现有的支付网络作为建立购买加密货币的“入口”和将其转换回法定货币的“出口”的优势。**
+不仅金域，疫情以来众多核酸检测机构都大赚了一笔。2021年2月10日，中共国有56个检测试剂获得国家药监局批准，其中核酸检测26个，抗体检测27个，抗原检测3个。这些企业拚命投产，核酸检测试剂的日产能已经达到2500万人份。
 
-**它已经用一种稳定币进行交易结算，最近还开设了一个加密货币咨询服务，为探索自己的加密货币计划的银行提供服务。**
+与核酸检测相关的上市公司也和金域一样盈利暴增、股价暴涨。典型的如圣湘生物，2020年收入47亿元，同比增长12倍，但净利润却同比暴增65倍，达到26亿元，毛利率达82%，净利率55%。2021年上半年，该公司新冠（中共病毒）检测试剂发货量8884万人份，同比增长142%。2021年前三季度收入32.67亿元，净利润17.57亿元。
 
-**在过去一年半中，探索CBDC的国家数量增加了一倍多。根据大西洋理事会的CBDC追踪器，至少87个不同的国家（占全球国内生产总值的90%）正在以某种方式权衡（新的）金融技术。**
+这些核酸检测公司除了在中共国内大肆捞钱外，还积极寻求出口以获得更高利润。2020年底，中共国出口新冠（中共病毒）检测试剂10.8亿人份，出口金额约50亿美元。2021年的出口量应该更大，因为在海外获批的产品增加，产能扩张也更快。
 
-**目前，九家中央银行，包括尼日利亚、巴哈马和其他七个加勒比国家的中央银行，已经推出了CBDC。与此同时，中国准备在下个月2022年冬奥会期间向外国游客公布其试点数字人民币。**
+2021年3月，热景生物的两款产品在德国获批。这两款产品可以用于居家自主检测，并可在超市、药店和互联网上购买。消息一出，该公司股价爆涨。仅2021年前三季度，该公司就收入37.95亿元，净利14.74亿元。
 
-**与此同时，美联储等主要央行预计不会很快发行数字货币。在本周早些时候的再次确认听证会上，美联储主席鲍威尔表示，美联储期待已久的关于CBDC的文件将在“未来几周内”发布，但除此之外没有给出明确的时间表。**
+2021年11月，九安医疗的检测试剂获美国FDA批准应急使用权，股价因此连连上涨，被股民封为“九安大帝”。如今该公司的月产能已经达到1亿人份，且据称2022年初可达到2亿人份，产量惊人。
 
-**长期以来为美国财政部和美联储提供CBDC咨询的电子货币（eCurrency）公司的一位高管在10月份告诉雅虎财经，国会必须在美联储和美国财政部发行央行支持的代币之前给予授权。**
+由此可见，疫情之下，全世界的核酸检测需求激增，尤其是中共国人，被要求做那么多次核酸检测，而最终受益的都是这些“吃人血馒头”发疫情财的企业。
 
-**原文链接：**[**Visa,Consensys partner to build tech for central bank digital currencies (yahoo.com)**](https://news.yahoo.com/visa-consensys-partner-to-build-tech-for-central-bank-digital-currencies-050113963.html?guccounter=1)
-
-发布：tianzhihuan
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+新闻链接：[https://www.soundofhope.org/post/584244](https://www.soundofhope.org/post/584244)
 
  
 
