--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,64 +1,37 @@
 ---
-title: 南非高校强制接种疫苗迎来转机，将按普通流感治疗中共病毒
+title: 中共武警“反恐”将领任驻港部队司令 香港复制新疆模式
 ---
-`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1858497/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1858543/)
 
-作者：香草山健身部 – 正道新闻
-![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
-2021年10月8日，为了准备2022年新一年的开学季，南非政府部门——高等教育和培训健康与发展中心召集了南非26所大学的学生代表委员会、校长参加了一次闭门会议。会议主要的议题在于就大学强制性疫苗接种的监管问题进行咨询。
+**作者:****  **青衣
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-84.png)
+（图片来自网络）
 
-从会议纪要中，我们可以发现，与会的南非高校对于疫苗的态度大致上分为两种：第一种以开普敦大学为代表的“强制派”。他们主张，从2022年1月1日起，作为注册条件，所有教职员工和学生提供可接受的证明，证明他们已接种过中共疫苗。那些申请学习或就业的人，以及访客和服务提供商，将被要求接种疫苗。
+据《美国之音》1月13日报道，中共武警部队原副参谋长彭京堂被中央军委主席习近平任命为解放军驻港部队司令员。这是第一次由武警将领担任驻港解放军司令。彭京堂以反恐经验著称。有分析认为，日后驻港部队的功能会从宣示主权变成维稳，不排除反恐突击部队在香港复制的可能。
 
-![](https://researchresearch-news-wordpress-media-live.s3.eu-west-1.amazonaws.com/2021/10/no_vaccine_no_entry_sign-738x443.jpg)
+据报道，解放军驻港部队在周日（1月9日）发布了彭京堂出任司令员的消息。香港行政长官林郑月娥也于周一在礼宾府欢迎彭京堂来港履新。
 
-对此，金山大学大学、约翰内斯堡大学也表示出了相似的观点。金山大学大学负责人Shirona Patel 表示，他们正在就是否应该让选择不接种疫苗的学生进行日常健康检查、戴上 N95 口罩并自费每周进行中共病毒测试进行咨询。如果咨询通过，访问大学的人员也将照此标准执行。
+公开资料显示，彭京堂曾任解放军济南军区司令部军训部部长以及武警新疆总队参谋长，于2018年7月晋升少将警衔。以往驻港部队历任司令员都是来自各个军区，由解放军少将或中将出任，而此次则是首次由武警将领担任驻港部队司令员。
 
-相比之下，也有很多高校表示完全不同以强制接种疫苗的做法。
+台湾国防安全研究院国安所副研究员侍建宇对《美国之音》表示，他对于有关安排并不感到意外。
 
-比勒陀利亚大学副校长 Tawana Kupe 教授明确表示，我们并不热衷于强制接种疫苗。关于一般的强制性疫苗接种，我目前不赞成。我们应该给予鼓励、说服和同行讨论的机会，使人们能够做出接种疫苗的决定，而不是强迫。
+侍建宇指出，在2019年反送中示威浪潮时期，中共就想要派遣武警部队进入香港“维稳”。只是后来由于受到国际社会的压力及各方的质疑，才没有明目张胆地把武警部队送进香港。但其实武警部队早已纳入了香港部队的编制里，所以此次任命并不令人感到惊讶。
 
-夸祖鲁-纳塔尔大学发言人 Normah Zondo 说：大学期望员工和学生在自愿的基础上接种疫苗，这是基于他们对减轻传播和保护免受致命病毒的重要性的了解。
+此外，有分析人士认为，以往驻港部队一直扮演对外宣示中共国主权的角色，但反送中示威浪潮改变了中共政府的部署，“维稳”将成为驻港部队的新角色。
 
-虽然这次讨论没有出现一个大家都能接受的成果。但是政府借此机会了解到了各高校对待疫苗的态度。
+新疆一直是中共所谓“反恐、防暴”的重点地区，选派曾任新疆武警总队参谋长的彭京堂到香港出任驻港部队司令员，显然是为了更好地发挥他在新疆的“维稳”经验，体现出中共稳定压倒一切的策略，为了维稳不惜一切，特别是在手段的运用上。
 
-2021年11月23日，高等教育、科学和技术部长Blade Nzimande暗示，大学疫苗的要求会成为整个教育系统的要求。“南非大学已经为大学准备了指导方针，以在他们讨论强制疫苗接种时考虑和指导他们。”
+彭京堂在出任新疆武警总队参谋长期间，还同时担任新疆“反恐”前线总指挥，曾亲历多场“反恐”实战，其旗下的 “山鹰”突击队更被称为解放军顶尖战斗部队。派这样一位凶狠人物到香港维稳，可以预见，新疆模式将在香港复制，香港将陷入更加黑暗之境地。
 
-当部长发表意见的一周之后，12月1日，威特沃特斯兰德、斯泰伦博斯、西开普和自由州的大学已批准在 2022 学年实施某种形式的强制性疫苗接种。最初不同意强制接种疫苗的高校，也不得不做出让步。
+新闻链接：
 
-众所皆知的是PCR测试在中共病毒测试上非常的不准确，很难区分普通的流感病毒和中共病毒。即便如此，2022年1月13日，NEWS24报道，虽然南非夸祖鲁-纳塔尔省省内大学将不会要求教职员工和学生完全接种疫苗才能进入校舍，但是必须提供48小时内PCR测试结果。尽管，我们不必猜测夸祖鲁-纳塔尔省出台这项政策的目的，但是实际上，这种方式无疑会迫使学生更多的接受疫苗。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1059.png)
 
-2022年1月1日至24日，是南非高校注册日。如果截止到1月24日，南非绝大多数的高校仍然强制要求学生注射疫苗，结合正道新闻此前的报道，南非学生联盟将会采取一切手段抵制高校的疫苗强制令。此前学生联盟表示为此不排除司法起诉，罢课、游行等手段。
+> 反恐将领彭京堂任驻港解放军司令 新疆精英突击队或在港复制？ [https://t.co/NiS2cO998U](https://t.co/NiS2cO998U)
+> — 美国之音中文网 (@VOAChinese) [January 13, 2022](https://twitter.com/VOAChinese/status/1481592631616413700?ref_src=twsrc%5Etfw)
 
-似乎一场学生于高校之间的矛盾一触即发之时，南非国家卫生部门的代理总干事，Nicholas Crisp的发言可能会改变现在的学生于高校之间的对立局面。
 
-Nicholas Crisp在南非媒体eNCA采访时谈到，南非可能已准备好从将中共病毒由之前流行病转变为地方病，这意味着该病毒将得到与流感类似的治疗。一旦病毒的不再对人群起到致命性威胁之后，相关的疫苗政策，隔离政策也将会重新书写。此时南非高校与学生之间的矛盾也就迎刃而解。
 
-参考文献
-1. [南非学生联盟反击高校强制接种疫苗政策](https://gnews.org/zh-hans/1844329/)
-2. [eNCA on twitter](https://twitter.com/eNCA/status/1481495669407948802)
-3. [Jabs not mandatory at KZN varsities, but PCR tests required](https://www.news24.com/witness/news/kzn/jabs-not-mandatory-at-kzn-varsities-but-pcr-tests-required-20220113)
-4. [Who We Are](https://higherhealth.ac.za/about-us/who-we-are/)
-5. [Registration for the 2022 academic year opens on 4 January 2022](https://www.unisa.ac.za/sites/corporate/default/News-&amp;-Media/Calendar-&amp;-events/Events/Registration-for-the-2022-academic-year-opens-on-4-January-2022)
-6. [Five South African universities make Covid jabs mandatory](https://www.researchprofessionalnews.com/rr-news-africa-south-2021-12-five-south-african-universities-make-covid-jabs-mandatory/)
-
-![](https://cdn.discordapp.com/attachments/873743101305430037/926527191443972196/2c3ff12a-1aad-413c-bcbf-f68f4a054055.jpg)
-
-**校对/发稿：童谣**
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
