--- a/gnews/37.md
+++ b/gnews/37.md
@@ -1,41 +1,36 @@
 ---
-title: 有声&#124;摩西的启示——撂挑子，再担起来
+title: 英国一组织发布中共病毒疫苗致命性研究报告清单
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1858366/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1858530/)
 
-配音：香草山福音部 – Daxia
+作者：纽约香草山 – 侠肝义胆
+![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
+1月12日外媒报道，英国的“立即拯救我们”组织发布了一份证明中共病毒疫苗致命性的研究清单，包括在相关科学杂志上发表的1000多项疫苗研究。这些研究表明，中共病毒疫苗不仅危险，而且在预防病毒和拯救生命方面没有效果。目前民众被告知的关于中共病毒疫苗所谓的伟大功效都是谎言。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/9-5.jpg)
+
+目前发现的疫苗接种致命后果，包括凝血性心肌炎、心包炎、血栓症、血小板减少症、过敏性休克、贝尔氏麻痹症、吉兰巴雷综合症和癌症。所有这些致命后果都可在英国健康和安全机构关于中共病毒疫苗损害的数据中得到证实。
+
+该组织称，现在继续推动疫苗接种的政府公职人员所做的虚假宣传，明显是渎职犯罪。正是政府疯狂推广疫苗接种，导致了病毒感染和死亡在全球蔓延。
+
+参考链接：
+
+- [More than 1,000 published studies show covid jabs are dangerous](https://newstarget.com/2022-01-12-more-published-studies-show-dangers-covid-vaccines.html)
 
 
+![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
 
-
-
-圣经处处都是真实的人性。不管多么伟大的史诗般的人物，既有荣耀神的光芒，也有软弱和不自信，甚至背离神。都是在神的帮助下才能持守住，得成就。出埃及记中的摩西也是这样。摩西被神召唤的时候，已经80岁，是个耄耋老人了，他常说自己口笨拙舌。神让他带着百万以色列人出埃及*（编者按：圣经[《出埃及记》](https://wd.bible/exo.12.37.cunps)*[*12:37*](https://wd.bible/exo.12.37.cunps)*记载，步行男人约60万，推测总数应有二百万左右）*，谁能自信得起来呢！
-
-
-
-**文字版原文：[摩西的启示——撂挑子，再担起来](https://gnews.org/zh-hans/1850157/)**
-
-
-
-音频处理：喜山必胜Maverick
-发稿：雪梨
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-Jan.jpeg)
+总编：飞虹
+编辑：飞虹
+校正/发稿：海阔天空1
 
 **更多资讯，更多关注**
-
 [**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
-
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
-
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
