--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,29 +1,65 @@
 ---
-title: 军情五处警告议员们说：中共特工正在英国议会活动
+title: 【樱花深度报道】专家揭露：中国共产党正在推进通过隐秘战术削弱美国的进程（下）
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858757/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858827/)
 
-撰稿：东京樱花团/待命（文晓）
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-132.png)（图片源自本文链接）
-日本雅虎网站1月14日消息：CNN伦敦报道称13日，议会主要成员透露，英国情报部门军情五处警告说：中共特工正在展开旨在“颠覆”英议会程序的活动。
+编译：东京樱花团/Hopkins
 
-据英国执政的保守党前领导人伊恩-邓肯-史密斯说，军情五处向下议院议长林赛-霍伊尔发出了关于特工活动的警告。
+【摘要】BlackOps Partners首席执行官凯西·弗莱明（Casey Fleming）在文中表示，宣传批判种族理论、“撤资警察”运动、觉醒主义等社会运动，以及盗窃知识产权和贩毒等隐秘战术，被中共用于超限混合战以达到削弱美国的目的。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/70.jpg)（图片说明）2019 年 10 月 18 日，在中国浙江省杭州举行的国际人工制品博览会上，一名手持电话的男子走过中国公司字节跳动的应用程序 TikTok（当地称为抖音）的标志。（STR/文件/路透社）
+弗莱明指出，宗教战争是中共实施的另一种灰色地带方法。
 
-议会成员被告知，该特工在议会中很活跃，正在游说他们当中的一员。邓肯-史密斯先生强调，这是个值得严重关切的问题。
+“他们扼杀了中国的一切宗教信仰。基督教十字架已被禁止。他们关闭了教堂，关闭了清真寺。今天，同样的事情正在美国发生。”
 
-军情五处称，克里斯蒂娜-程魁利被认定正与中共中央统战部秘密合作，参与政治干预活动。对此， CNN已与中共驻英国大使馆取得联系，寻求真相。
+“这是正在美国街头和你客厅里发生的中国共产主义。我说的是批判性种族理论，我说的是黑人的命也是命（Black Lives Matter(BLM)），”弗莱明说。
 
-事件发生后，邓肯-史密斯先生要求议会考虑加强安全措施，并将该特工驱逐出境。但被告知此人不会被驱逐出境。他质问：对“外国独裁和卑鄙政权的特工”为何不能采取进一步的行动？
+“黑人非常重要。他们是令人难以置信的人，但他们在BLM运动中被劫持。许多黑人明白这一点，他们说：我们需要一个不同的平台，让所有美国人——不仅是黑人，而是所有美国人——到一个新的平台，让我们的国家从整个中国共产主义的渗透和颠覆中恢复过来。”
 
-邓肯-史密斯先生以强势反对中共而闻名，由于对维吾尔人遭遇的评论，他去年被中共政府制裁并被禁止进入中共国。中共国公司和公民也被禁止与他做生意。
+BLM是一个马克思主义组织。 BLM 联合创始人 Patrisse Cullors 在 2015 年接受 Real News Network 采访时表示，“我们确实有一个意识形态框架。我自己和 Alicia （Garza）尤其是训练有素的组织者。我们是训练有素的马克思主义者。” Alicia Garza 也是 BLM 的联合创始人。
 
-信息来源：[「中国政府の工作員が英議会で活動」、ＭＩ５が議員に警告（CNN.co.jp） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/c4addb63bb84237e168e76576a5f9564570db881)
+撤资警察运动和唤醒主义也是“中国共产主义的方法之一，一种无限制的混合战争方法，以削弱美国”。弗莱明说。
+
+**为什么人们应该重视**
+
+“最终目标是削弱美国，从而削弱我们的战斗意志，他们可以继续前进。他们不必发射一颗子弹。 ……这是用中国共产主义接管并取代全世界的民主和自由，”弗莱明说。
+
+弗莱明指出，美军无法通过不受限制的混合战来保护国家免受敌人的侵害。
+
+“[军方]仍在使用二战技术进行战斗。战争将涉及电子产品、机器人、人工智能（AI）、雷达干扰，所有这些类型的东西，”他说。
+
+“我们的军队不是为了保护我们的经济，也不是为了保护你们公司和你们公司的知识产权以及拥有你们知识产权的供应商。”
+
+这位专家说，为了防止中共赢得这场战争，需要首先阻止外国通过投资影响该国任何地方，无论是商业、学术界还是政府。他的公司 BlackOps Partners 在其网站上提供教育资源，以帮助人们了解风险。
+
+“当你听说一位前国会议员每年获得 50 万美元的报酬，用于游说 TikTok，或游说字节跳动，与美国国防部合作时，这就是很大的问题。”
+
+字节跳动是一家开发 TikTok 等移动应用的中国互联网技术公司。
+
+弗莱明说，许多主流媒体都受到了中共的妥协，并补充说，很多公司实际上撤回了他们批评中共的言论，例如。在中国发生种族灭绝的声明。
+
+“即使是著名的摩根大通首席执行官也不得不为发表的评论向中共道歉。”
+
+据彭博社报道，摩根大通首席执行官杰米戴蒙表示，他对自己在 11 月开的一个玩笑感到抱歉，他当时说他的银行将比中共更长寿。
+
+“我们正在战斗。这只是一场我们不熟悉的战斗，”弗莱明说。
+
+他说，人们的自由和价值观以及他们孩子的自由和价值观正日复一日地受到媒体、批判种族理论、撤资警察运动以及觉醒主义的侵蚀。
+
+人们应该关心它，因为他们的子孙“处于临界状态”，风险、战略和反情报高级顾问弗莱明说。
+
+“如果你由中国共产党管理，他们会像对待国内的人民一样规定你住在什么房子里，你的孩子将在哪个工厂工作，以及他们将每周 7 天、每天 12 小时生产什么产品。”
+
+（全文完）
+
+作者：Ella Kietlinska and Joshua Philipp
+
+信息来源：
+
+**[Chinese Communist Party Advances Agenda To Weaken US Through Stealth Tactics: Expert](https://www.zerohedge.com/markets/chinese-communist-party-advances-agenda-weaken-us-through-stealth-tactics-expert)**
 
 *校对：东京樱花团/喜马拉雅的微尘*
 *发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
-
-
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
