--- a/gnews/40.md
+++ b/gnews/40.md
@@ -1,53 +1,50 @@
 ---
-title: 新中国联邦扼住无良媒体的咽喉，力王狂澜扭转排华大势
+title: 信用卡巨头Visa将为各国央行数字货币打造接口
 ---
-`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/1858304/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1858521/)
 
-新西兰伊甸农场Gnews组 财经G乐部-亚伦
+#### **【雅典娜观察】和您一起探究世界**
 
-1月12日，郭文贵先生于GTV、Gettr大直播中再度提及Isobel Yeung（杨贝贝），称她是有计划地和中共合作，HBO、VICE和Q组织，都是中共五年前设下的致命局。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Wolverine.jpg)图片来源Gettr Wolverine
+整理报道：文扬
+编辑：文泓
 
-
-Isobel Yeung是四年前开始跟中共合作，从此踏上抹黑郭先生的不归路。一年前开始谋划此次采访，目的是把郭先生、新中国联邦定义为邪教组织，把所有海外的反共华人都定义为暴徒，而Q组织是通过散布虚假信息带把人向阴沟的铺垫。
-
-臭名昭著的Q组织一直在各类社交媒体里兴风作浪，善于把一件简单的事情复杂化，把不可能为之的行动变成必须执行的“正义”。如果当时新中国联邦不及时制止做正式切割，大部分战友会跟着Q组织走偏。
-
-事实上，Q组织100%是美国和共产党之间较量的一个平台，而且绝对是共产党控制的一个造谣平台，这一点毋庸置疑。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/银河系农场.jpg)图片来源Gettr 银河系农场
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Y9Z36OEZJZLZ5PJ4GY.png)图片来源：Pymnts.com
 
 
-Q组织跟HBO和Isobel Yeung一样，想把新中国联邦打造成邪教集团，传播假消息的造谣窝点，这也是中共的核心目的。因为HBO、VICE、包括Q组织，收了中共的黑金就要做事兑现。
+**1****月13日，据雅虎新闻报道，信用卡巨头Visa周四宣布，它将通过与区块链软件公司共识系统（Consensys）合作，为各国中央银行数字货币(CBDC)建立一个接口，进一步扩展其加密货币服务。**
 
-现在我们知道，他们背后的金主是江志成、吴征。这场四五年前便开始启动的媒体阴谋，招招致命、 步步惊心。
+**这家支付巨头的目标是创建一个“CBDC加密沙盒”，该沙盒将在春季推出，中央银行可以在使用共识系统的Quorum协议完成铸币后，尝试该技术应用。**
 
-**欧美排华、排亚裔情况已开始显现**
+**这一合作关系是蓬勃发展的加密数字货币市场的最新进展，各国央行争相铸造自己的数字货币，成熟的金融公司也在涉足加密货币支付。**
 
-在加拿大的商场里白人女士对着华裔狂吠，声称是华人把病毒带到世界；在新加坡的商场，有人用马来语骂华人就该被杀，是华人把病毒带到世界；在日本，有人狂骂华人快滚回去，是华人把病毒带到世界，日本人要报仇；在欧洲和美国的院校，已经开始在私下排斥中国学生，甚至是排斥亚洲学生。
+**“中央银行正在从研究转向真正想要拥有可以试验的有形产品，”Visa组织的加密业务负责人朱伊·谢菲尔德说。**
 
-一股当年印尼大排华前奏的味道，而且是世界性的。
+**CBDC****可以运行分布式账本或区块链技术构建的协议。与比特币(BTC-USD)或以太坊(ETH-USD)等加密货币不同，CBDC协议始终是“许可的”，这意味着中央银行保持货币和治理控制。**
 
-回看这个Isobel Yeung精心打造的栽赃视频视频，如果没有郭先生和爆料革命的提前预判，如果没有切实可行反击谎言的行动，针对华人的惨案会真的像野火烧山脉一样迅速蔓延。
+**该合作关系为CBDC采用了“两级”分销模式。中央银行将在共识系统的Quorum上设计他们的数字货币，在那里他们将设定其货币和治理规则。然后，他们使用Visa的基础设施，通过商业银行等金融中介机构分发该货币。**
 
-**Isobel Yeung才是邪教的传播者**
+**自2019年以来，Visa一直涉足与加密货币相关的产品，利用其现有的支付网络作为建立购买加密货币的“入口”和将其转换回法定货币的“出口”的优势。**
 
-邪教组织的六个特征：教主崇拜，精神控制，编造邪说，聚敛钱财，秘密结社，对抗社会。
+**它已经用一种稳定币进行交易结算，最近还开设了一个加密货币咨询服务，为探索自己的加密货币计划的银行提供服务。**
 
-Isobel Yeung才是邪教的传播者，通过洗脑主控，制造歪门邪说。VICE媒体悍然制造大型种族仇恨，属于反社会行为。
+**在过去一年半中，探索CBDC的国家数量增加了一倍多。根据大西洋理事会的CBDC追踪器，至少87个不同的国家（占全球国内生产总值的90%）正在以某种方式权衡（新的）金融技术。**
 
-**中共用思想毒瘤袭击美国**
+**目前，九家中央银行，包括尼日利亚、巴哈马和其他七个加勒比国家的中央银行，已经推出了CBDC。与此同时，中国准备在下个月2022年冬奥会期间向外国游客公布其试点数字人民币。**
 
-桥水基金公司的创始人Ray Dalio管理着上万亿美元的资产，他跟他儿子就是中国的白手套和吸血鬼。Ray Dalio对中国人的伤害不可想象，将来一定会受到美国的严厉审判。中共正在中国如火如荼地大搞共享财富的同时，现在他也要在美国搞共享财富。而共享财富的实质，就是利用共产主义把社会财富共产到几个家族去。
+**与此同时，美联储等主要央行预计不会很快发行数字货币。在本周早些时候的再次确认听证会上，美联储主席鲍威尔表示，美联储期待已久的关于CBDC的文件将在“未来几周内”发布，但除此之外没有给出明确的时间表。**
 
-**相关****Gnews****链接：**
+**长期以来为美国财政部和美联储提供CBDC咨询的电子货币（eCurrency）公司的一位高管在10月份告诉雅虎财经，国会必须在美联储和美国财政部发行央行支持的代币之前给予授权。**
 
-大料！Isobel Yeung的污蔑视频是北京欲取消中美贸易关税的阴谋
+**原文链接：**[**Visa,Consensys partner to build tech for central bank digital currencies (yahoo.com)**](https://news.yahoo.com/visa-consensys-partner-to-build-tech-for-central-bank-digital-currencies-050113963.html?guccounter=1)
 
+发布：tianzhihuan
 
-
-> [大料！Isobel Yeung的污蔑视频是北京欲取消中美贸易关税的阴谋](https://gnews.org/zh-hans/1781930/)
-
-
+**更多资讯，请关注：****
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
