--- a/gnews/42.md
+++ b/gnews/42.md
@@ -1,35 +1,40 @@
 ---
-title: 英军情五处指证华裔律师为中共统战部从事政治干扰活动
+title: 有声&#124;摩西的启示——撂挑子，再担起来
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1858273/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1858366/)
 
-#### **撰稿：日本东京方舟农场  葛大饼**
+配音：香草山福音部 – Daxia
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/3DA5A027-5220-4DC0-8810-7C0C2CED5106.jpeg)（图片来自skynews）
 
-英国军情五处的一份安全警告指证华裔律师克里斯提娜·李（Christine Lee）代表中共统战部从事政治干扰活动。该警告通知已分发给国会议员及情报界同行，同时还提供了克里斯提娜·李的照片。
 
-这份安全警告通知指出，中共统战部 “正在寻求通过与各政治派别中已确定及有抱负的议员建立联系，以暗中干预英国政治”，并 “培养与有影响力人物的关系”。据调查，克里斯提娜·李的政治捐款总额为675586英镑，其中584177英镑为 “实物捐赠”，且几乎全部捐给了工党或布伦特北区议员以及前前线议员巴里·加德纳（Barry Gardiner）。
 
-据报道，议长办公室已将这一安全警告通知以电子邮件方式发送给国会议员们传阅。英国当局指控克里斯提娜·李代表在香港和中共国的外国公民为在职和有抱负的议员提供资金捐助及提供其他便利。
 
-议员邓肯·史密斯（Duncan Smith）对此表示，国会议长先生已经与军情五处联系过，可以确定的是，有一个中共背景的特工在议会里。军情五处担心各党派的政治家可能已经成为了中共特工行动中的目标。
+圣经处处都是真实的人性。不管多么伟大的史诗般的人物，既有荣耀神的光芒，也有软弱和不自信，甚至背离神。都是在神的帮助下才能持守住，得成就。出埃及记中的摩西也是这样。摩西被神召唤的时候，已经80岁，是个耄耋老人了，他常说自己口笨拙舌。神让他带着百万以色列人出埃及*（编者按：圣经[《出埃及记》](https://wd.bible/exo.12.37.cunps)*[*12:37*](https://wd.bible/exo.12.37.cunps)*记载，步行男人约60万，推测总数应有二百万左右）*，谁能自信得起来呢！
 
-内政部长普里蒂·帕特尔（Priti Patel）表示，在必要时，英国政府将会采取相应行动来减轻来自中共的威胁。 不过，据报道，目前克里斯提娜·李并没有被起诉。
 
-英国情报界对中共间谍活动的担忧与日俱增。去年年底，军情六处负责人理查德·摩尔（Richard Moore）就曾表示，中共的间谍活动已成为该国对外情报机构的 “最大优先事项”。
 
-据悉，2020年，英国曾悄悄地驱逐了三名据称是冒充记者的中共国间谍。军情五处给出的结论是：这三人是为中共国家安全部（MSS）工作。
+**文字版原文：[摩西的启示——撂挑子，再担起来](https://gnews.org/zh-hans/1850157/)**
 
-*参考链接：[MI5 accuses lawyer of trying to influence politicians on behalf of China](https://www.theguardian.com/uk-news/2022/jan/13/chinese-national-trying-to-improperly-influence-politicians-says-mi5)*
 
-* * *
 
-*素材采编：葛大饼*
+音频处理：喜山必胜Maverick
+发稿：雪梨
 
-*编辑： 青衣青青*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-Jan.jpeg)
 
-*发布：miumiu*
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
