--- a/gnews/43.md
+++ b/gnews/43.md
@@ -1,31 +1,51 @@
 ---
-title: 丹麦情报机构警告来自中共国的间谍威胁正在增加
+title: 飞行员因疫苗强制政策而起诉拜登政府
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858239/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1858344/)
 
-整理编辑：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/01/5-13.jpg)[图片来源](https://www.epochtimes.com/gb/22/1/13/n13502378.htm)
-丹麦星期四（11月13日）警告说，来自中共国、俄罗斯和伊朗等国家的间谍威胁正在增加，包括大国正在争夺资源和海上通道的北极地区。
+#### 翻译：Julia Gao
+校对：枳实
+剪辑/字幕：向上James
 
-丹麦安全情报局（Danish Security and Intelligence Service）反间谍负责人亨里克森（Anders Henriksen）在一份报告中说，“针对丹麦、格陵兰和法罗群岛的外国情报活动的威胁近年来有所增加。”格陵兰和法罗群岛是丹麦王国的主权领地，也是北极理事会的成员，丹麦负责他们的外交和安全事务。
+英汉对照字幕：
 
-报告指出，2019年发生一起伪造信函事件，声称是格陵兰外长写给美国一名参议员的信函，表示将进行独立的公投。
+I too did not want to get the vaccine. I’ve never had a flu shot in my life. Injecting experimental drugs into me? Not something I ever wanted to do.
 
-报告说，“非常可能的是，这封信是俄罗斯情报特工们伪造并在互联网上分享的，希望制造混乱以及丹麦、美国和格陵兰之间的可能冲突。俄罗斯、中国和美国都在争取获得北极地区的自然资源、海上通道、具有军事价值的战略地区，北极的地缘政治重要性正在增加。”
+我也不想打疫苗。我这辈子都没有打过流感疫苗。给我注射实验性药物? 这压根儿就不是我想做的事情。
 
-报告并表示，中共国、俄罗斯和伊朗等外国情报机构正在试图与学生、研究员和公司接触，获取丹麦科技和研究的信息。
+Traveling between the state that I live in Hawaii and California where I have family, two states that have archaic travel restrictions. I decided between the pressure that in my airline that was going to require a mandate vaccine. I went and got the jab.
 
-路透社11月份发现，哥本哈根大学一名华人教授秘密与中共国军方开展基因研究。
+我居住在夏威夷州，而我家人居住在加利福尼亚州。所以我需要在有旅行限制的这两个州之间旅行，再加上我所在的航空公司也有疫苗强制政策，我在这些压力之下做出了决定。我去接种了疫苗。
 
-报告说，“丹麦在国际舞台的积极参与、全球化和国际竞争力的日益提高、社会总体开放、数字化和高水平的科技知识都让丹麦成为外国情报活动的一个有吸引力的目标。”
+I did it 11:30 in the morning at Hawaii. Everything was normal. I went to bed, woke up at 3:30 in the morning with my heart pounding out of my chest. I went to the ER they hooked me up quickly to EKG IVs did blood work quickly determined that I was in atrial fibrillation.
 
-消息来源:
+我是在夏威夷接种的疫苗。上午11点30分接种的。当时一切都正常，我就去睡觉了，早上3点30分突然醒来，感到我的心脏剧烈跳动，似乎要跳出胸膛。我去了急诊室，他们很快给我做了心电图，做了静脉滴注，并很快诊断为房颤。
 
-[丹麦警告来自中国俄罗斯伊朗的间谍威胁正在增加](https://www.voachinese.com/a/denmark-accuse-china-of-espionage-20220113/6395769.html)
+So major cause of stroke as Lee said, there’s a critical phases of flight where this stuff when I certify it to go fly, I have to check off a box before I go fly you lovely people wherever you want to go before I take that multimillionaire plane.
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+正如李所说的，房颤是中风的主要诱因。执行飞行有一个关键阶段：在我飞行之前，当我驾驶着那架价值数百万的飞机，带着你们这些可爱的乘客去目的地之前，我必须要进行自检，对每一个方框进行打勾，以确认我能够飞行。
+
+I checked this box and it says I’m fit to fly. That was before COVID That’s when you knew Yeah, I have food poisoning. I’m cold, have a cold, whatever. Here. You never know when the genies gonna come out of the bottle and smack you down.
+
+我做了检查，结果是我适合飞行。那是在新冠之前（设计的表格）， 你知道， 题目都是些：“是否得了食物中毒？是否感觉很冷？是否感冒了？等等勾选项。但是现在，你永远不知道这些鬼家伙（房颤诱发的中风）什么时候会莫名其妙地钻出来，把你击倒。
+
+I could have stroked out at 100 feet trying to land an airplane with 40 Airplanes lined up next to us. I could have just pushed down on that stick before the person next to me could do anything. We’re in a it’s all over for a lot of people. Not a good scenario.
+
+我可能会突然中风，恰逢驾驶着飞机，在100英尺的高度，试图降落在已经有40架飞机列队停靠的飞机场时发病。我可能在我的副驾驶还没有来得及反应之前就把操纵杆压下去（而导致坠机）。很多人都会因此结束他们的生命。这当然不是一个美妙的设想。
+
+Pete Buda judge and telling you anything about this, the administration is not, the NIH, the CDC, they suppress all this stuff. There’s a number of pilots out there that are fearful to come forward and speak. They’re fearful of retribution. There’s guys that are going to work with crushing pains in their chest in their heads. They’re scared that they’re going to lose their careers because they’re 25 years old. This has got to stop.
+
+Pete Buttigieg（美国运输部长）没有告诉你们这些，美国政府也没有，包括国立卫生研究院，疾病控制与预防中心，他们都压制所有这些信息 (疫苗对飞行员的伤害)。有一些飞行员害怕站出来说真话；他们害怕遭到报复。有些飞行员会强忍着胸口和头部的剧烈疼痛而坚持工作。他们害怕失去他们的职位，因为他们只有25岁！这些情况必须要停止！
+
+发布：枳实
+
+**更多资讯，请关注：****
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
