--- a/gnews/44.md
+++ b/gnews/44.md
@@ -1,29 +1,25 @@
 ---
-title: 日本议员：国会应尽快通过反对中共侵害人权的决议案
+title: 拜登承认对COVID没有联邦解决方案
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1858226/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1858330/)
 
-#### 撰稿：日本东京方舟农场  海星
+翻译：Julia Gao
+校对：精靈藍
+剪辑/字幕：文驰
+编辑：Mttfly
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/13FC17BE-6BCF-4757-A2C5-0524A7EBB0D6.jpeg)（图片来源：路透社）
+美国总统拜登在一场视频会议中说：“没有任何一个联邦方案能在州一级得到解决。那纯粹是拿各州做实验，来验证联邦方案是否可以行得通。”福克斯国家频道主持人汤米·劳伦评论道：“这可能是一个典型的弗洛伊德式错误的案例。拜登承认确实没有联邦解决方案，他确实没有计划解决COVID问题。可就是在不久前他的几条推文被发现，他在大流行病开始时，对唐纳德·特朗普总统没有新冠解决方案而进行了批评。”
 
-1月11 日，日本议员高市早苗在接受BS富士电视台采访时表示，因中共侵害人权问题严重，日本国会应尽快通过反对中共侵害人权的决议案
+视频链接：[Biden admits there is no federal solution for COVID](https://video.foxnews.com/v/6288978896001)
 
-据《产经新闻》报导，自民党议员高市早苗在当日接受媒体采访时表示，她将于预计1月17日召开的通常国会上推进国会尽快通过反对中共侵害新疆或其他地区人权的决议案。
-
-高市议员在节目中强调说，尽管今年是中共国和日本外交正常化50周年，但中共完全没有改变其霸权主义的立场以及严重侵害人权的行为，针对这些问题日本政府不可能不采取任何对应措施。
-
-此前，高市议员就曾在日本临时国会上呼吁国会通过反对中共侵害人权的决议案。当时，茂木敏充干事长指出，该决议案的内容是正确的，但还未到时机，应优先讨论外交抵制北京冬奥会的决议。
-
-*参考链接：[自民・高市氏、対中非難決議「通常国会の頭で」](https://www.sankei.com/article/20220111-MPO2RV3TYJN5PH4T6K5Z2NZA2A/)*
-
-* * *
-
-*素材采编：海星*
-
-*编辑：文顺*
-
-*发布：miumiu*
+*发布：Mttfly*
+**
+更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
