--- a/gnews/48.md
+++ b/gnews/48.md
@@ -1,17 +1,30 @@
 ---
-title: 盖特是改变游戏规则的一个社交平台
+title: 丹麦情报机构警告来自中共国的间谍威胁正在增加
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858179/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858239/)
 
-文编：东京樱花团/樱花传媒
-视频：东京樱花团/中文小视频组
+整理编辑：东京樱花团/peterwong
+![](https://assets.gnews.org/wp-content/uploads/2022/01/5-13.jpg)[图片来源](https://www.epochtimes.com/gb/22/1/13/n13502378.htm)
+丹麦星期四（11月13日）警告说，来自中共国、俄罗斯和伊朗等国家的间谍威胁正在增加，包括大国正在争夺资源和海上通道的北极地区。
 
-1月5日，郭文贵先生在GTV大直播指出：
+丹麦安全情报局（Danish Security and Intelligence Service）反间谍负责人亨里克森（Anders Henriksen）在一份报告中说，“针对丹麦、格陵兰和法罗群岛的外国情报活动的威胁近年来有所增加。”格陵兰和法罗群岛是丹麦王国的主权领地，也是北极理事会的成员，丹麦负责他们的外交和安全事务。
 
-相对于走向死亡的Facebook、Youtube、Zoom、Tiktok…,盖特代表着生、代表着太阳,是可以改变游戏规则的一个社交平台,是和信仰紧密相关的。盖特的使用活跃度高达96%,它让中国人拥有了在世界上从未有过的话语权。盖特G-TV的未来和价值不是用金钱能衡量的,中共每年花几千亿美元,也达不到盖特丁点儿的效果。
+报告指出，2019年发生一起伪造信函事件，声称是格陵兰外长写给美国一名参议员的信函，表示将进行独立的公投。
 
-*编辑：东京樱花团/墨然
-发布：东京樱花团/平安卿卿*
+报告说，“非常可能的是，这封信是俄罗斯情报特工们伪造并在互联网上分享的，希望制造混乱以及丹麦、美国和格陵兰之间的可能冲突。俄罗斯、中国和美国都在争取获得北极地区的自然资源、海上通道、具有军事价值的战略地区，北极的地缘政治重要性正在增加。”
+
+报告并表示，中共国、俄罗斯和伊朗等外国情报机构正在试图与学生、研究员和公司接触，获取丹麦科技和研究的信息。
+
+路透社11月份发现，哥本哈根大学一名华人教授秘密与中共国军方开展基因研究。
+
+报告说，“丹麦在国际舞台的积极参与、全球化和国际竞争力的日益提高、社会总体开放、数字化和高水平的科技知识都让丹麦成为外国情报活动的一个有吸引力的目标。”
+
+消息来源:
+
+[丹麦警告来自中国俄罗斯伊朗的间谍威胁正在增加](https://www.voachinese.com/a/denmark-accuse-china-of-espionage-20220113/6395769.html)
+
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
