--- a/gnews/49.md
+++ b/gnews/49.md
@@ -1,18 +1,30 @@
 ---
-title: GETTR是全球华人能向世界自由发声的唯一平台
+title: 日本议员：国会应尽快通过反对中共侵害人权的决议案
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858177/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1858226/)
 
-文编：东京樱花团/樱花传媒
-视频：东京樱花团/中文小视频组
+#### 撰稿：日本东京方舟农场  海星
 
-1月5日，郭文贵先生在GTV大直播指出：
+![](https://assets.gnews.org/wp-content/uploads/2022/01/13FC17BE-6BCF-4757-A2C5-0524A7EBB0D6.jpeg)（图片来源：路透社）
 
-盖特是全世界的华人,可以用华语自由说话讲故事的平台。盖特是能让外国人明白中共不等于中国人的平台。中共支持的邪恶媒体VICE,已把黄种的整个亚裔推向了西方民主的对立面、推向了白人黑人的对立面,在这千难万险之时,也只有盖特,能让所有的黄皮肤人把真相说清楚。
+1月11 日，日本议员高市早苗在接受BS富士电视台采访时表示，因中共侵害人权问题严重，日本国会应尽快通过反对中共侵害人权的决议案
 
-*编辑：东京樱花团/墨然
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+据《产经新闻》报导，自民党议员高市早苗在当日接受媒体采访时表示，她将于预计1月17日召开的通常国会上推进国会尽快通过反对中共侵害新疆或其他地区人权的决议案。
+
+高市议员在节目中强调说，尽管今年是中共国和日本外交正常化50周年，但中共完全没有改变其霸权主义的立场以及严重侵害人权的行为，针对这些问题日本政府不可能不采取任何对应措施。
+
+此前，高市议员就曾在日本临时国会上呼吁国会通过反对中共侵害人权的决议案。当时，茂木敏充干事长指出，该决议案的内容是正确的，但还未到时机，应优先讨论外交抵制北京冬奥会的决议。
+
+*参考链接：[自民・高市氏、対中非難決議「通常国会の頭で」](https://www.sankei.com/article/20220111-MPO2RV3TYJN5PH4T6K5Z2NZA2A/)*
+
+* * *
+
+*素材采编：海星*
+
+*编辑：文顺*
+
+*发布：miumiu*
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
