--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,46 +1,44 @@
 ---
-title: 中共视昆仑山和喜马拉雅山为天地之神视南普陀为人间道
+title: 加拿大放弃了对卡车司机的疫苗授权
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1858755/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1858819/)
 
-G-TV视频链接：[https://gtv.org/video/id=61e0fb7b87664c47acd469f9](https://gtv.org/video/id=61e0fb7b87664c47acd469f9)
+编译：wenwu
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1072.png)图片来源：reuters.com
+加拿大边境机构周三(12日)表示，加拿大将允许未接种疫苗的加拿大卡车司机从美国入境，推翻了要求所有卡车司机接种中共病毒（Covid-19)疫苗的决定。
 
-**郭文贵先生：**我告诉你，全人类最牛的水，如果佳佳、小王子、小飞象、小飞侠，你们想生宝宝生得好，又没打疫苗，未来先喝点儿帕米尔高原的水，那真是万年的水呀，它是印度洋被挡下来的水，在整个石头里边儿留下来的，和大西洋的水整个未蒸发留下来的，在沉寂之后，从下面再挖掘的水，那真的是万年的水呀！
+加拿大总理贾斯汀·特鲁多（Justin Trudeau）曾面临来自主要反对党和卡车司机游说团体的压力，要求他放弃对卡车司机的疫苗授权，该授权将于周六(15日)生效，他说这可能导致司机短缺，扰乱贸易并推高通货膨胀。
 
-七哥在盘古的时候，是天天用帕米尔高原的水煮饭吃的，所以说七哥不可能是郭3秒，怎么的也得郭3.5秒，因为是帕米尔高原的水，那真的就像今天吃青蒿素的感觉似的。
+加拿大边境服务局（CBSA）表示，抵达美加边境的未接种疫苗或部分接种疫苗的加拿大卡车司机将继续免于抵达前、抵达时和抵达后的测试和检疫要求。
 
-你到新疆以后，你知道新疆的灾难在哪里呀？新疆的大自然里边儿藏的物资和密码，包括昆仑山脉的北侧2577公里，从南到北，就西南到东北。共产党是不可能让出西藏的，是不可能让出新疆的，所以很多人说要搞西藏独立，新疆独立，我可以告诉你除非你把中国全灭了，是不可能让你独立的。
+然而，CBSA发言人说，来自美国的卡车司机仍然需要接种疫苗，否则他们将从1月15日起在边境，被拒绝入境。
 
-这个没有它的水、没有它的山，它的灵都没了。而共产党深为迷信的，它是昆仑山和喜马拉雅山这是它的所谓的阴阳，是它的天地之神。然后它认为人间道就是普陀。普陀是什么？在哪里？就是今天的南普陀山——舟山。
+加拿大政府的一位消息人士说，做出这一决定是为了确保供应链的顺畅。
 
-字幕来源：[2022年1月9日 文贵大直播 全文字版](https://gnews.org/zh-hans/1842354/)
+特鲁多的自由党政府设定了周六的最后期限，要求所有从美国入境加拿大的卡车司机出示疫苗接种证明，作为其对抗中共病毒（COVID-19）的一部分。
 
-编辑整理：Jacques；
+加拿大和美国之间每年有6500亿加元（5110亿美元）的货物贸易，其中三分之二以上是通过公路运输的，卡车运输业是关键。
 
-字幕文件制作：小满；
+加拿大卡车联盟（CTA）估计，政府的疫苗授权可能迫使约1.6万名跨境司机——其中的10%（1600名）——离开岗位。
 
-视频制作及上传：Cindy；
+加拿大疫苗授权是自大流行病开始以来采取的第一个可能限制跨境卡车运输的政策措施。在边境关闭20个月的时候，卡车可以自由越过边境，因为它们被认为是保持供应链开放的关键。
 
-G-News发布：小满；
+供应链的中断使加拿大11月份的总体通货膨胀率达到18年的高点，加拿大银行已经表示，它可能最快在4月份提高利率。
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+位于安大略省的新鲜水果和蔬菜进口商和出口商Bamford Produce的首席执行官Steve Bamford上周告诉路透社，由于卡车司机短缺，将一车水果和蔬菜从加利福尼亚和亚利桑那州运到加拿大的成本，在大流行期间翻了一番。
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+新鲜食品对货运问题很敏感，因为它们过期很快。
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+拜登政府希望拥有100名以上员工的公司的卡车司机接种疫苗或每周接受测试，这一政策已被挑战到最高法院。
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+新闻来源：[reuters.com] [Canada drops vaccine mandate for its truckers after pressure fromindustry](https://www.reuters.com/world/americas/canadian-truckers-stay-exempt-covid-19-vaccine-requirements-2022-01-13/) | 发布时间：2022年01月13日
 
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+* * *
 
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-1.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
