--- a/gnews/50.md
+++ b/gnews/50.md
@@ -1,30 +1,26 @@
 ---
-title: 【中日财经爆】日本麒麟将清空与华润合资公司股份 退出中共国饮料制造业务。
+title: 【中日财经爆】高盛大幅调高今年中共房债违约率预测
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858167/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858225/)
 
-整理编辑：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/01/77.jpg)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fcdn.hk01.com%2Fdi%2Fmedia%2Fimages%2F3128189%2Forg%2Ff4cde0175a5af76aaa1bb555c8497867.JPG%2FdaBrfdL1gGo5w1lCkUDBNcLLBjPOZvoXvOkXyLzpF8g%3Fv%3Dw1920r16_9&amp;imgrefurl=https%3A%2F%2Fwww.hk01.com%2F%25E8%25B2)
-《日经亚洲评论》1月14日援引消息人士透露，日本麒麟控股（Kirin Holdings）计划以约1000亿日圆（8.74亿美元）的价格出售其与中共央企华润集团在中共国成立的软饮料合资企业中的所有股份。
+撰稿：东京樱花团/喜马拉雅的微尘
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2-31.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https://www.goldmansachs.com/worldwide/greater-china/insights/2020-C-REITs-f/800x450.jpg&amp;imgrefurl=https://www.goldmansachs.com/worldwide/greater-china/insights/&amp;tbnid=4eZyQAxl0sFMAM&amp;vet=12ahUKEwiRg8XMrrD1AhVDGKYKHQqzC8QQMygLegUIARC9AQ..i&amp;docid=eKDsUjoZcsvdIM&amp;w=800&amp;h=450&amp;itg=1&amp;q=%E9%AB%98%E7%9B%9B%20%E6%88%BF%E5%9C%B0%E4%BA%A7&amp;ved=2ahUKEwiRg8XMrrD1AhVDGKYKHQqzC8QQMygLegUIARC9AQ)
+1月13日，高盛发表研究报告，预测中共2022年房地产债务违约率将达19%，远高于原先预期的11.5%。
 
-麒麟最早将于下个月将其持有的华润麒麟饮料（China Resources Kirin Beverages）公司40%的股份出售给一家中国基金。此举将成为麒麟海外业务的转折点。麒麟正在对与这家中共国基金的合同进行最后调整，预计这家酿酒商将在其2022年的合并财务报表中记录销售收益。
+报告称，去年底内地房地产企业高收益债出现几宗大规模违约，最近数周虽未见大量支付逾期(违约)情况，但紧张情绪加剧。这反映于债务置换或债务延长方案增加。
 
-麒麟公司打算将其重点转移到利润更高的行业，如精酿啤酒，并远离中共国低迷的软饮料业务。
+考虑信贷紧张加剧及市场压力持续，该行上调今年内房违约预测。报告指出，在基本情境下，料内房高收益债违约率达19%，高于原先预期的11.5%。在悲观情境下更有可能高达31.6%(原先为25.4%)，而在乐观情境料见10.5%(原先为4.3%)。
 
-华润麒麟饮料公司成立于2011年，麒麟持股40%，华润持股60%。麒麟在这家生产和销售茶和咖啡饮料的合资企业中投资了约330亿日圆。在中国，麒麟还通过一家全资的子公司生产其旗舰产品麒麟一番榨啤酒（Ichiban Shibori）。
+高盛表示，未来数个月将有大量内房高收益债到期，料潜在发生更多债务置换或债务延长，以及有更多违约个案发生。该行估算2022年1月余下时间有36亿美元内房债到期，3月有33亿美元，4月另有37亿美元内房债到期。
 
-《日经》认为，与华润合资的终结意味着麒麟将退出软饮料的生产，不过这家日本公司将寻求把其品牌授权给麒麟的前风险合作伙伴。
+该行中国经济师团队分析认为，虽然中共在政策层会有一定放宽，但仍旧不会有重大房地产需求刺激。
 
-根据华润集团网站的介绍，华润的前身是于1938年在香港成立的“联和行”；1948年联和进出口公司改组更名为华润公司；1952年隶属关系由中共中央办公厅转为中央贸易部（现为商务部）；1999年12月，与外经贸部脱钩，列为中央管理；2003年归属国务院国资委直接监管，被列为国有重点骨干企业。
+信息来源：
 
-麒麟控股是一家位于日本的饮品、酒精性饮料以及制药工业公司，拥有麒麟啤酒品牌。其子公司分布于美国、澳大利亚、台湾、韩国、中国大陆、香港以及东南亚地区。
+[高盛上调今年内房债违约率预测至19%](https://finance.sina.com.cn/stock/estate/integration/2022-01-13/doc-ikyakumy0165614.shtml?cref=cj)
 
-消息来源:
-
-[传日本麒麟拟出售与华润合资企业所有股票](https://www.epochtimes.com/gb/22/1/13/n13502836.htm)
-
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
