--- a/gnews/52.md
+++ b/gnews/52.md
@@ -1,25 +1,27 @@
 ---
-title: 首派自卫队出征海湾战争的前日本首相海部去世
+title: 【中日财经爆】中共国就业数据造假 失业数据被掩盖
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858067/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858185/)
 
-撰稿：东京樱花团/待命（文晓）
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2-30.png)（图片源自本文链接）
-1月4日时事通信社消息：出生于名古屋的日本前首相海部俊树于9日去世，享年91岁。
+整理编辑：东京樱花团/peterwong
+![](https://assets.gnews.org/wp-content/uploads/2022/01/65.jpg)[图片来源](http://www.stdaily.com/index/kejixinwen/2021-10/20/content_1227091.shtml)
+中共病毒疫情冲击之下下，中共官方公布的失业率却一直在5%左右稳定不变，但其他替代指标和报告都表明，中共国失业情况比官方数据糟糕得多。分析指出，大陆劳动市场的结构性问题已恶化，苦日子已经来了。
 
-1991年海湾战争之后，他派出海上自卫队扫雷艇到波斯湾扫雷，这是日本自卫队第一次全面的海外部署。在征兵丑闻发生后，人们对政治的不信任感越来越强。为此，未能实现他所设定的政治改革目标，就被迫下台。
+据报导，中共当局公布的2021年12月就业数据，城市失业率为5%，略优于疫情前的水准。但此调查数据只针对城镇户籍人口，事实上农村失业问题比城镇显著；官方数据也未纳入退出劳动力市场超过3个月的失业人数，加上中共国已经对数十万人进行了隔离，而一次隔离数周，不会被计入失业人口。
 
-1989年8月，宇野内阁因妇女丑闻而垮台后，他成为第76任总理。他是河本派的成员，这是一个小派别，但得到了最大派系的竹下派的支持，由于他的清廉形象，任职了约两年零三个月。
+《经济日报》香港特派员李春，在去年12月专栏文章中预测，中共国2022年从事「双零」工作的人数可能超过3亿人。「双零」是指「灵活就业」和「零工经济」，分别对应就业数据表中没有统计进去的就业和兼职或自由职业者构成的自雇主就业。分析认为，中共官方数据仍在竭力掩盖劳动力市场的真实痛苦。
 
-他在学生时代就成为议会秘书，1960年首次从原爱知县第三区当选为众议院议员，此后共当选了16次。
+另外，2年内数百万农民工人数的相对减少，可能会造成数千亿元的收入损失。一些市场人士认为，劳动人口外流的情况比官方数据显示的还严重。其次，经济下滑及疫情冲击下，服务业陷入困境、制造业出现萎缩，中共就业形势不乐观。
 
-信息来源：[海部元首相が死去　湾岸戦争巡り自衛隊初派遣（共同通信） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/08c3266a3e1ced3a258e2cad5d00bcd06a376694)
+经济学家表示，从疲软的消费支出到严格的「清零」控制政策，再到中共对教育和房地产行业的监管打击，中共国的劳动力市场正面临巨大压力，而官方数据掩盖了大陆人失业的真实痛苦，近期讨论失业问题的人愈来愈多，普遍都担心苦日子来了。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
+消息来源:
+
+[中共掩盖失业真相人民喊苦](https://tw.news.yahoo.com/%E4%B8%AD%E5%85%B1%E6%8E%A9%E8%93%8B%E5%A4%B1%E6%A5%AD%E7%9C%9F%E7%9B%B8-%E4%BA%BA%E6%B0%91%E5%96%8A%E8%8B%A6-160000906.html)
+
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
-
-
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
