--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,52 +1,21 @@
 ---
-title: 丑闻缠身的左媒CNN收视率暴跌90%
+title: 用lPS细胞移植治疗脊髓损伤 世界首个临床研究
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1858718/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858817/)
 
-**翻译：Lulumi**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/屏幕截图-2022-01-14-103939.jpg)图片来源:nypost.com
-根据尼尔森收视率显示，杰夫·扎克领导的CNN在1月3日这周的平均收视率只有54.8万，与2021年同一周的近270万收视率相比，有了很大的下降。
+撰稿：东京樱花团/立正道
+![](https://assets.gnews.org/wp-content/uploads/2022/01/7-10.png)图片来源于本文链接
+日本私立庆应大学14日宣布，去年12月进行了首次临床研究，将诱导多能干细胞（iPS细胞）转化为神经元的细胞移植到脊髓损伤患者体内。
 
-去年的收视率受益于左翼媒体对1月6日美国国会大厦袭击事件的报道，导致CNN创下了自特德·特纳1980年创办该新闻机构以来收视率最高的一天。
+这是世界上首次使用iPS细胞治疗脊髓损伤，患者的恢复进展“非常顺利”。未来，将花费一年的时间来研究在康复过程中安全性和运动功能的改善情况。在临床研究中，共有4名患者在受伤后2至4周内，因运动中受伤或交通事故中脊髓神经失去了运动功能或感觉。他们将由iPS细胞制成的脊髓神经元细胞注射到受伤部位，进行细胞移植。此次移植患者的性别、年龄和受伤后的具体时间没有披露。此外，在去年的11月开始，已经将iPS细胞作为免疫细胞，用于癌症的治疗。
 
-但在袭击事件一周年之际，观众转向了CNN的右翼竞争对手福克斯新闻，福克斯新闻对该事件的报道在收视率上名列前茅。
+信息来源：
 
-CNN一直受到一连串丑闻的困扰，最引人注目的是其黄金时段明星主播克里斯·库莫被解雇，因为他被发现秘密协助其陷入困境的哥哥、前纽约州长安德鲁·库莫的性骚扰指控辩护，导致其辞职。
+[脊髄損傷にiPS細胞移植　慶応大、世界初の臨床研究](https://news.yahoo.co.jp/articles/aee1966a7d23177e3b1456db2f409ff4041d6286)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/屏幕截图-2022-01-14-103753.jpg)CNN世界总部，CNN的收视率在新年的第一周就出现下滑。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1064.png)前CNN主播克里斯·库莫
-
-CNN的长期老板扎克上个月因该电视台的低收视率和处理有关网络明星库莫和唐·莱蒙的丑闻而受到抨击。
-
-莱蒙是库莫被解雇前的晚上10点节目主持人，他面临着自己的道德丑闻。这位黄金时段的主播因报道朱西·斯莫利特的审判受到批评，因为这位演员在法庭上作证说，主持人通过短信告知他，芝加哥警方不相信他是种族主义仇视同性恋者袭击的受害者。
-
-莱蒙还被一名汉普顿的酒保起诉，他声称这位同性恋主播，在2018年揉搓自己的生殖器，然后把手指塞到他脸上。
-
-莱蒙否认了该酒保的指控。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1067.png)CNN黄金时段主播唐·莱蒙去年面临自己的丑闻，包括向《帝国》演员朱西·斯莫利特透露警方对其袭击的调查。
-
-据《野兽日报》报道，CNN的收视率下降是在该电视台有史以来收视率第二高的一年之后发生的。尽管有创纪录的一年，但在2021年下半年，网络收视率呈下降趋势。根据尼尔森的数据，虽然CNN在黄金时段晚上8点到11点之间努力抢夺观众，但仍然有83%的同比下降。 在2021年的第一周，它的黄金时段总观众人数为420万，上周只有70.5万。
-
-在今年的第一周，CNN的总观众人数录得同比下降80%。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1069.png)CNN的老板杰夫·扎克在处理这个陷入困境的CNN最近的丑闻方面面临批评。
-
-它还失去了其关键人群中89%的黄金时段观众和91%的18至49岁的观众。
-
-CNN没有回应评论请求。
-
-新闻来源 :[nypost.com][Scandal-ridden CNN sees ratings dive by 90% after 2021 coverage](https://nypost.com/2022/01/12/cnn-sees-ratings-dive-by-90-from-2021-coverage/)
-
-* * *
-
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-1.jpeg)
-
-
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
 
 
  
