--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,23 +1,21 @@
 ---
-title: 西亚足球联赛再次有球员突发倒地
+title: 一项加拿大的研究表明新冠疫苗加强针对 Omicron 变种的 7 天后保护率仅 37%
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1858705/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1858813/)
 
-作者 台湾宝岛农场 Y.M.O
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-180.jpeg)
-在2022年卡塔尔星级联赛赖扬主场战胜沃克拉的比赛中，效力于沃克拉的马里国脚奥斯马内·库利巴利为了防守哈梅斯·罗德里格斯禁区外的吊射回追至本方球门内，不过在皮球飞出横梁后库利巴利却突然倒地，场上众人第一时间以为库利巴利是无接触受伤，但是发现库利巴利在球门内抽搐。就在场上其他人都不知所措时，哈梅斯·罗德里格斯第一个反应过来并且迅速冲上前对库利巴利进行施救，调整了后者的头部姿势，帮助其改善呼吸状况。随后医护人员及时入场救治，成功救回一命。当时赖扬1:0领先沃克拉，但在库利巴利倒下后由于情况的严重性和危险性双方球队均同意停止比赛，并保留剩余时间和比分。过几天双方重新将比赛踢完，赖扬3:0获胜。
+编者：寻文客
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-181.jpeg)
+加拿大安大略省公共卫生部和多伦多大学的研究者对新冠疫苗的有效 性，尤其是新冠疫苗对新冠病毒 Delta 变种和 Omicron 变种的保护率进行了研究，发现接种了两剂新冠疫苗（其中至少一剂是 mRNA 疫苗）的人相 比未接种新冠疫苗的人更容易感染 Omicron 变种病毒，而且新冠疫苗加强 针对 Omicron 变种病毒的保护作用低下（0-6 天内保护率仅 2%，7 天后保 护率为 37%）。研究论文于 1 月 1 日在 medRxiv 上公布。
 
-后来经沃克拉的队医确认，库利巴利在比赛中突发心脏病，如果当时急救不及时世界足坛将会再多出一场悲剧。目前库利巴利已经被送到哈马德医院留院治疗。近一两年足球运动员由于心脏问题被迫下场，以及突然倒地甚至死亡的人数史无前例地激增，维基百科已经停止更新了在比赛中死亡的足球运动员人数。欧洲杯上丹麦国脚埃里克森就出现了类似的状况，好在同样及时进行急救处置才逃过一劫。加盟巴萨的阿奎罗在比赛中因为胸口不适从而进行了详细的检查，最终他被告知职业生涯无法再继续下去，只能选择在33岁的年纪退役，十分让人遗憾。另外包括曼联中卫林德洛夫和那不勒斯中场泽林斯基也在比赛中由于呼吸困难而被换下，世界顶级比赛中都已经出现这么多状况更不用说基数更大的低级别比赛了。
+研究者收集了 2021 年 11 月 22 日（Omicron 变种第一次在加拿大被 发现）到 2021 年 12 月 19 日在安大略省的新冠数据，研究包括了 3,442 例 Omicron 阳性病例、9,201 例 Delta 阳性病例、471,545 例核酸测试为阴性 的对照。这些人在不同时间注射了不同剂次新冠疫苗，通过观察这些人是 否感染、感染什么变种的新冠病毒计算出新冠疫苗的有效性以及新冠疫苗 对于 Delta 变种和 Omicron 变种的保护率。
 
-这还算是比较好的结果，因为他们目前都还活着，即使是今后无法再踢球，在生死面前都变得不值一提，但不是所有的球员都能被保住性命。12月22日阿曼马斯咯特俱乐部后卫哈立德·拉卡迪在赛前热身时突然倒地，最终不幸去世年仅29岁。埃及球员艾哈迈德·阿明、阿尔及利亚球员索菲安·卢卡、克罗地亚球员马林·卡西奇、危地马拉球员马科斯·梅纳尔多也都在由于心脏及呼吸问题不幸去世的名单之列。
+通过以上步骤，研究者得出了两个非常重要的结论：
+• 接种 2 剂新冠疫苗对 Omicron 变种病毒没有保护作用。相反，接种两剂 新冠疫苗会让人更容易感染 Omicron 变种病毒。
+• 在接受第三剂 mRNA 疫苗后 &gt;=7 天，疫苗对 Omicron 的有效性为 37% （95 %CI，19-50%）。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1065.png)图 1: 红色线部分显示 2 剂新冠疫苗对 Omicron 变种的保护率为负数（比 未接种更容易感染 Omicron 变种）；蓝色线部分显示新冠疫苗加强针对 Omicron 变种保护作用低下（0-6 天内保护率仅 2%，&gt;=7 天保护率仅 37%）
+编者评价：通过研究的结论可以明显看出，因为 Omicron 变种病毒的 席卷而鼓吹注射新冠疫苗加强针，和把 Omicron 变种病毒的席卷归咎于 “未接种新冠疫苗的人的责任”的逻辑是完全不成立的。于此同时，新冠疫 苗的副作用不断显现，相关事件越来越多。既然新冠疫苗的有效性和安全 性都无法得到保障，“停止施打新冠疫苗”是我们合理且必要的诉求。
 
-我在叙述哈立德·拉卡迪突然倒地身亡的文章中提到过运动员由于心脏问题离开球场的可能性就应该为0的。即使级别再低但足球运动员的健康检查也比我们普通人要严密得多，如果说不从事特定职业的普通人如果出现心脏问题尚且还算说得通，那就算从胜利的角度来看球队也不可能让有着健康隐患的球员留在场上然后自己面临少一名主力球员的窘境。但是这种违背常理的状况现在就这么发生了，只能说背后的力量隐藏很深且十分庞大。而在这些异常事件停止之前我们也要一遍遍地提出问题，宣传真相。
-
-P.S.倒地的球员为马里国脚奥斯马内·库利巴利，不是那不勒斯的主力后卫卡列杜·库利巴利。
-
-新闻链接
-
-[https://www.dailymail.co.uk/sport/football/article-10396275/James-Rodriguez-performs-life-saving-opponent-Ousmane-Coulibaly-suffers-cardiac-arrest.html](https://www.dailymail.co.uk/sport/football/article-10396275/James-Rodriguez-performs-life-saving-opponent-Ousmane-Coulibaly-suffers-cardiac-arrest.html)
+• 论文来源：[https://doi.org/10.1101/2021.12.30.21268565](https://doi.org/10.1101/2021.12.30.21268565)
 
 * * *
 
