--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,52 +1,67 @@
 ---
-title: “穿西装的精神病人”正逍遥法外！ 为什么？（1/2）
+title: 【樱花深度报道】专家揭露：中国共产党正在推进通过隐秘战术削弱美国的进程（上）
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1858696/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858802/)
 
-翻译： Jenny Ball
+编译：东京樱花团/Hopkins
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1062.png)图片来源:childrenshealthdefense.org
+【摘要】BlackOps Partners首席执行官凯西·弗莱明（Casey Fleming）在文中表示，宣传批判种族理论、“撤资警察”运动、觉醒主义等社会运动，以及盗窃知识产权和贩毒等隐秘战术，被中共用于超限混合战以达到削弱美国的目的。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/67-1.jpg)（图片说明）图为BlackOps Partners首席执行官凯西·弗莱明
+弗莱明说，如今美国与中国和中共处于战争状态，并解释说，“中国只有一个，完全被中共控制，所以你无法区分其中一个。”
 
-在今天的美国，如果你毒杀你的妻子以赚取 150,000 美元的人寿保险金，你可能最终会入狱——但如果你毒杀数十万人，这样，你就可以拿到数百万美元的薪水 ，你可以买一艘新游艇。
+然而，那场战争是一场不受限制的混合战争，也被称为“灰色地带”，即“没有硝烟的战场”，它的重点是尽可能地削弱中共的对手或目标，弗莱明在最近的一次采访中说。
 
-阿尔弗雷德·鲁夫（Alfred Ruf）毒死了他的妻子，这是他骗取人寿保险致富的计划。 格雷戈里·丹尼斯（Gregory“Brent”Dennis）博士也做了同样的谋杀，他正在等待 200 万美元的保险赔付。约书亚·亨萨克（Joshua Hunsucker）毒害了他的妻子，仅得到了 250,000 美元的人寿保险金，因为其中 80,000 美元用于购买了一艘游艇。大卫·佩蒂斯（David L. Pettis）毒害了他的妻子也得到了150,000 美元。
+弗莱明说，中共政权向中国人民宣传，美国是“世界上必须战胜的大恶，中国才能拥有统治世界的命运共同体”。 “他们说我们是黑暗的，我们代表魔鬼。”
 
-我不知道毒杀我父亲和我兄的人的名字，他们上周四都去世了，但我知道那些人在哪里工作，以及他们为什么这样做：就像鲁夫、丹尼斯、亨萨克和佩蒂斯一样，当他们将石棉卖给我父亲的雇主，并让我的兄弟沉迷于烟草时，他们是故意的，他们明知会导致死亡，他们故意那样做的。
+**中共是美国的“敌人”，因为它称美国为敌人。他说**。
 
-石棉（1）行业早在 1890 年代就知道，并在 1940 年代得到明确证实，他们的产品会导致间皮瘤，这导致特别残酷地杀死我父亲的肺癌。
+弗莱明将灰色地带比作中共对付台湾的策略：
 
-（注释1: 石棉纤维吸入人体会沉积在肺部，造成肺部疾病。人如果暴露于石棉粉尘可导致肺癌，胃肠部癌，胸膜或腹膜的间皮癌以及石棉沉着病—石棉肺。国际癌症研究中心已肯定石棉为**致癌**物。）
+“削弱你的敌人……直至投降的地步，最后让对手说，‘好吧，我们不想开战，我们重视我们的人民。我们不想要死亡和毁灭；我们只能跟随中国。’”
 
-**但是即使在今天，他们的高管也在试图逃避责任**：强生公司正在玩破产游戏，以避免为他们的石棉滑石粉引起的癌症买单，甚至没有一个高管丝毫担心会因为所有这些行为造成人们死亡而入狱。
+“[灰色地带]比常规战争更糟糕，因为它正在扼杀经济，正在扼杀我们的战斗能力。”
 
-1994 年，烟草业的最高 CEO 在国会议员面前撒谎，同时，烟草业在我有生之年每年杀死超过 400,000 名美国人。
+弗莱明引用在二战期间太平洋战争中战功显赫的美国海军上将切斯特·尼米兹（Chester Nimitz）的话说，美国拥有世界上最强大的军队，为了击败他们，只有从经济上打垮他们。
 
-和那四个杀妻案一样，都是为了钱，但是比那四个人想象的要多得多的钱。
+弗莱明说，这正是中共一直在做的事情。他说，中共有超过 100 种不同的不受限制的混合作战方法，他解释说，“不受限制”这个词意味着敌人不遵守规则。
 
-那四个杀妻犯都在监狱里了。但今天仍在推广烟草，并使用破产法来避免为石棉死亡买单的决策者们，却仍正在他们的豪宅和游艇上，享受着人们在这种流行病中遭难。
+“我们在交易、做生意等方面遵循法治和国际秩序规则。好吧，你的敌人不会遵循任何这些。他们说：那是你们的法律，事实上，我们要用你们自己的法律给你们戴上手铐。”
 
-**而这只是表面问题。**
+弗莱明说，这些战术在 1999 年由中国人民解放军 (PLA) 的两名大校撰写的《超限战》一书中进行了描述。该书由中共军队解放军出版社出版。
 
-仅仅在过去的几周里，气候变化驱动的天气导致数百名美国人丧生，数千人无家可归，而化石燃料行业的人在 50 年前就知道，由于他们出售产品，才让这种天气会发生。还是为了钱。
+**超限混合战战术**
 
-然后是美国的“健康保险”行业，与世界上任何其他行业不同，每年都有数以万计的美国人因债务（目前超过 1 万亿美元）毁掉他们的生活，或者，在他们生病时禁止向他们提供服务：因为没有保险，他们买不起。
+灰色地带方法之一是知识产权 (IP) 盗窃。开发一种新产品需要多年的研究，并花费数十亿美元。弗莱明说，这些费用是通过向客户销售产品来收回的。
 
-自从我们建国以来，美国的资本主义一直在以“保护穿着西装的精神病患者” 冷酷杀手的方式发挥着作用。但自从大烟草公司在 1990 年代被淘汰以来，情况变得更加糟糕。
+弗莱明说，如果一家中国公司窃取了与美国公司开发的产品相关的知识产权，它不会产生任何开发成本，并且可以立即开始在中国生产该产品。
 
-在 1980 年代，里根放松了对储蓄和贷款行业的管制——可以预见的是，在几年之内，少数高管使自己成为了千万富翁，而美国各地成千上万的家庭被消灭了。司法部介入，并起诉了 1100 名银行家，839 人被定罪，超过 100 人入狱。
+他说，然后它将产品以大约一半的价格出售给美国公司的客户，从而使知识产权所有者破产。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/68.jpg)（图片说明）2018 年 8 月 28 日，连接墨西哥的加利福尼亚州 Tecate 的 La Rumorosa 镇附近的一个秘密实验室里的冰毒膏。（Guillermo Arias/AFP/Getty Images）
+专家说，毒品战是中共用来削弱美国的另一种方法。
 
-当所谓的“互联网泡沫”在世纪之交爆发时，来自安然、世通、奎斯特和泰科等公司的数十名高管被起诉、定罪和监禁。直到 2005 年，我们仍然偶尔将高管送进监狱。
+根据疾病控制和预防中心 (CDC) 的数据，反对芬太尼（Fentanyl）家庭组织进行的计算 (pdf) 显示，最近，芬太尼成为 18 至 45 岁美国人死亡的主要原因。
 
-但是现在不再有高管坐牢了。文章后半部分看为什么。
+“世界芬太尼之都是中国武汉，”弗莱明补充说，中共将制造冰毒药丸和芬太尼药丸的易制毒化学品运往墨西哥贩毒集团。
 
-新闻来源:[childrenshealthdefense.org][‘Psychopaths in Suits’ Are Getting Away With Murder. Why?](https://childrenshealthdefense.org/defender/psychopaths-getting-away-with-murder/?utm_source=salsa&amp;eType=EmailBlastContent&amp;eId=d8800cb1-6ca8-45e1-9766-b37231ff4113)
+“他们 [还] 使用六个贩毒集团——便利的分销网络——将这一切进入北美甚至欧洲。”
 
-* * *
+根据美国国家药物滥用研究所 (NIDA) 的说法，冰毒是甲基苯丙胺的一种形式——一种看起来像玻璃碎片的有效、高度上瘾的兴奋剂。
 
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-1.jpeg)
+NIDA 表示，目前美国大部分甲基苯丙胺是由墨西哥的跨国犯罪组织生产的。
+
+“这种药物可以很容易地在小型秘密实验室中制造，并且使用相对便宜的非处方成分。甲基苯丙胺生产还涉及许多其他非常危险的化学品。这些化学物质的毒性作用在实验室关闭后很长时间仍会留在环境中，给该地区的人们带来广泛的健康问题。”
+
+（未完待续）
+
+作者：Ella Kietlinska and Joshua Philipp
+
+信息来源：
+
+[Chinese Communist Party Advances Agenda To Weaken US Through Stealth Tactics: Expert](https://www.zerohedge.com/markets/chinese-communist-party-advances-agenda-weaken-us-through-stealth-tactics-expert)
+
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
