--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,22 +1,35 @@
 ---
-title: 一定要采法律行动：对媒体攻击一定要反击(一)
+title: 法国阻止诺瓦克·德约科维奇（Novak Djokovic）参加五月法网公开赛
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1872744/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1872769/)
 
-#### 整理：雅典娜速记组
-编辑：陶子
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%80%E5%AE%9A%E8%A6%81%E9%87%87%E6%B3%95%E5%BE%8B%E8%A1%8C%E5%8A%A8%E5%AF%B9%E5%AA%92%E4%BD%93%E6%94%BB%E5%87%BB.001-1.jpeg)
-在外国人眼里边，中国人的长相基本上没什么差别。特别现在你(小斯 基)已经被定义为恐怖分子，攻击你的时候，你们三走在大街上，人家不知道你认谁是大卫，还是小斯基，还是小**SEVEN,**这不是开玩笑的，而且海外华人全部成了恐怖分子。小斯基，你非常有理由注意你的安全，没有必要的情况下，一你不要出去，二你要赶快报案啊。他这个视频被挖出来以后，大家都信了，特别你住在这个华人区域，那你很有可能是要受到攻击的，你真的要注意啊，兄弟，这不是跟你开玩笑。我想告诉你的事情，刚才包括**NICOLE**，你没有一个人到现在没有说出一个最重要的观 点。为什么海外媒体过去**100**年把华人形容成东亚病夫，阳痿什么，中国男人脏乱差是吧？所有这些媒体对华人的攻击，从来没有一个人反击过。 刚才**NICOLE**你已经被定为美国极右分子支持川普，而且你是暴力分子啊，今天你也上镜头了。你真的要注意自己安全，你和小斯基，这不是开半点玩笑的，你们要在任何地方到去了都给警察要报案，先备案，说我这个被这个**ISOBEL**给骗访了以后，什么结果。
+编译： 真北007
+![](https://assets.gnews.org/wp-content/uploads/2022/01/03AB729E-0629-480E-BE17-5450B37F0E69.jpeg)图片来源：网络
+来自NATIONAL POST 一月十八日星期一的新闻报道：
 
-*发布：陶子*
+法国议会周日批准的疫苗通行证将要求人们持有疫苗接种证书才能进入体育场馆等公共场所。
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
-[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+根据法国议会周日批准的一项法律，法网参赛者将被要求接种疫苗，这引发了人们对世界排名第一的诺瓦克·德约科维奇参加大满贯赛事的质疑。
 
+德约科维奇在周末澳大利亚网球公开赛开始前被驱逐出澳大利亚，原因是他没有接种疫苗，而且政府机构不愿接受这位塞尔维亚人因赛事获得的医疗豁免。
+
+法国体育部周一表示，法国新的疫苗法不会豁免。 法律规定必须有疫苗接种证明才能进入公共场所，如体育场馆、餐馆、咖啡馆、电影院和一些公共交通工具。
+
+“规则很简单”，该部表示，“一旦法律颁布，疫苗通行证将应用在已经实施健康通行证的场所”。
+
+**点评：**
+
+**谁说体育不应涉及政治? 当全世界呼吁抵制“大屠杀北京冬奥会”时，中共是怎么说的？此次德约科维奇事件我认为是一件好事，虽然他遭受很多，但值得。它让全世界看到，这就是一纯粹政治事件和较量。虽然现在正义的力量暂时受挫，但邪恶势力的政府也暴露了他们的无知、无能、无耻。一切都是天意，期待着未来的一幕幕大戏！**
+
+原文链接：
+
+[https://nationalpost.com/news/world/france-bars-novak-djokovic-from-french-open-in-may](https://nationalpost.com/news/world/france-bars-novak-djokovic-from-french-open-in-may)
+
+发布：歪桑
+
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2150925F-C440-455E-A2B3-AEC0D3D4A055.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
