--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,33 +1,27 @@
 ---
-title: 中共政府确保对价值数十亿美元的NFT市场的控制权
+title: 为什么接种辉瑞新冠疫苗的弊大于利（六）
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1872420/)
+`喜国公民` [轉載自GNews](https://gnews.org/zh-hans/1872682/)
 
-**编译：七龙珠**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip01-4.png)中国试图通过创建自己的平台来控制本国的 NFT 市场。 （路透社）
-比特币等加密货币的被禁和（非同质化代币）NFT的崛起，促使中共政府使用国营区块链系统来追踪交易。
+翻译&字幕：喜国公民
+视频来自网络
+尽管目前新冠疫苗护照被用来防止或减少新冠病毒的传播，但实际上在辉瑞的新冠疫苗试验中，从未研究过新冠疫苗是否能阻止传播新冠病毒。因此，说新冠疫苗能阻止传播是不恰当的。
 
-中共国将在本月底前创建自己的NFTs（非同质化代币）基础设施，它将不与加密货币挂钩，而是依靠自己的区块链系统。这个区块链系统，不会像最初设想的那样是去中心化和匿名的，而是由国家控制的。
+辉瑞的新冠疫苗试验采用了主观测试。他们没有对所有参与者进行新冠病毒测试。相反，他们指示调查员只测试那些有新冠感染症状的人。因此，这意味着无症状的感染会被完全遗漏。
 
-NFTs也在中共国大放异彩。阿里巴巴、腾讯、百度和小米等中国科技巨头已经创建了自己的NFT，以利用这一趋势，但中国政府对这一系统持怀疑态度，为了避免中共政府的怀疑，他们将其更名为“数字货币”。NFTs一般通过以太坊的区块链进行交易，并使用其加密货币以太坊购买。这些信息区块链是高度安全的去中心化平台，允许其用户之间的互动，同时保持其匿名性。区块链也是其他加密货币的基础，但中共已经在国内禁止了这些虚拟货币，因为它要求其所有的互联网系统验证用户的身份，以便国家在“非法活动”时进行干预。
+这意味着研究中引入了高度的主观性，因为调查员实际上有能力通过决定测试或不测试来左右结果。这种缺乏客观系统的测试实际上使试验的结果不可靠。所有参与者都应该被测试。
 
-**一个非常奇特的区块链**
+该研究中有相当多的数据缺失。根据辉瑞的试验数据，接种组有8个病例，安慰剂组有162个病例。但当你处理如此小数量的病例时，任何变化都可能对结果产生重大影响。
 
-去年年中，中共国宣布推出区块链服务网络（BSN），这是一个在中共政府的支持下，由中共国科技公司和银行组成的财团建立的。这种国家管理的区块链允许公司和个人用户使用国家区块链应用程序，而不必使用私人区块链。
+从辉瑞的试验报告中发现，在接种组中有80名失去跟进的参与者。这比他们的新冠确诊病例多10倍。因此，如果这80人中有相当一部分人对新冠病毒呈阳性，这实际上会极大地改变结果。
 
-现在，据香港媒体《南华早报》报道，中共国政府将为NFT引入一个新的数字基础设施，它被称为分布式数字证书（BSN-DDC）。这个系统使公司或个人更容易创建自己的用户档案或应用程序来管理NFT。然而，只有中共国的人民币将被允许用于交易。
+更糟糕的是，因为还有所谓的疑似但未经证实的病例。这意味着这些人实际上被确认为有新冠病毒的症状，但他们实际上从未被检测过。
 
-与世界其他地方不同的是，中共国科技公司铸造的NFT数字产品不会成为投机和资本外逃的工具，这一条件旨在让中共国监管机构放心，但是现在BSN-DDC要来改变游戏规则，虽然我们不知道他们是否能从NFT提出钱来，但我们知道，无论他们做什么，中共都会关注他们。
+测试的随机性是由调查员决定的，如果他们中哪怕只有一小部分是阳性，也会改变整体结果。事实上，失去随访和疑似未确认的病例更高。而且这里甚至明显高于最后的指标，这意味着这个数据是不可靠的。这项研究不应该被接受。
 
-**新闻来源**：[elconfidencial.com][El gobierno chino se asegura el control del millonario mercado de los NFT](https://www.elconfidencial.com/tecnologia/novaceno/2022-01-14/china-se-asegura-el-control-del-millonario-mercado-de-los-nft_3358621/)
+如果我们假设所有这些失去跟进的参与者都是新冠阳性，并把它们加到经测试证实的病例中，接种组和安慰剂组的总体阳性病例数会多出很多。安慰剂的病例数仍然较多。然而，它们之间的比例差异已经改变，相对风险降低数会下降到只有19%。而辉瑞公司需要有50%的相对风险降低，才有资格获得紧急使用授权。
 
-* * *
-
-***审核：Aries的星
-校对：信心满满
-发布：信心满满***
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-4.jpeg)
+前一篇：[为什么接种辉瑞新冠疫苗的弊大于利（五）](https://gnews.org/zh-hans/1869188/)
 
  
 
