--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,15 +1,15 @@
 ---
-title: 七哥谈世界经济（2022-01-12摘录）
+title: 七哥谈中共“为了你好”的本质（2022-01-12摘录）
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1872357/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1872399/)
 
 文编：Hima
 听写：叮叮
 视频：七哥
 
-来源：郭先生2022-01-12直播09：57：53摘录
+来源：郭先生2022-01-12直播10：17：12摘录
 
-你看这几天，这个纳扎尔巴耶夫出现几次镜头，跟托卡耶夫的感觉，你去看看去，你懂的中亚政治的，这些人、所有的人你了解，世界的油价，世界的气价变成了什么？刚才你们看了世界的经济了，咱还没有说到世界的经济，回到这儿再说世界经济的时候，大家去想想，世界出现那么大事，刚才世界经济给了我们两个答案。长线投资都在离场，大家注意到了吗？最近长线投资都在离场，数字货币领域大额洗钱的正在离场，现在已经是鲨鱼开始往回撤了，大家看着啊，鲨鱼往回撤了，为什么Ray dalio出来要替共产党洗地，共享财富，他绝对是世界上最早知道让什么时候上，什么时候下的人。所谓的“共享财富”就是给西方人打针了，是股票跌下来就是给你分财富呢，跟共产党一样是吧。把马云宰了你就当马云啦，把马化腾和马明哲杀了，你就当马明哲当马化腾了，这就是典型的Ray dalio这个孙子跟共产党唱的同一个调。
+把人关在家里，我还得让你，我还是为了你好，我让你关在家里。我需要你出来的时候，你就出来当警察、当城管，我让你待在家里的时候你就安全了。中国将进入永远的，记住就像西安、郑州轮着来，轮完以后格式化全国都会适应，为了你好待在家里，你们没看清这个本质。西安、郑州、天津事件，大家别忘了西安、郑州和天津几乎是决定共产党生死最关键的，河北、西安、郑州、天津，中国的保中央的部队就在张家口就冬奥会这个地方，山海关、天津，你过了天津你就打过来了嘛。把这些军队已经牢牢地控制在这个地方，然后用河北的护城河工程把这些警察变成了一个又筑成了一道人墙，把人又关在家里，你再敢出来的时候是什么？我毒死你那就合法了，不用天安门弄坦克压死你那么吓人还流血，我还得打扫战场，我还得把天安门那个砖给起了，多累呀，是吧？我放点儿毒。你看看不听我话吧？死了吧？
 
 校对：HimaFaFA
 发布：HimaBoy
