--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,30 +1,27 @@
 ---
-title: 七哥谈中共的核糖核酸检查（2022-01-12摘录）
+title: 七哥谈彭帅视频事件（二）
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1872736/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1872768/)
 
-文编：Hima
-听写：叮叮
-视频：七哥
+#### 整理：雅典娜速记组
+编辑：陶子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%83%E5%93%A5%E8%B0%88%E5%BD%AD%E5%B8%85%E8%A7%86%E9%A2%91%E4%BA%8B%E4%BB%B6%EF%BC%88%E4%BA%8C%EF%BC%89-.jpeg)
 
-来源：郭先生2022-01-12直播10：18：34摘录
+```
+由当时北京市国安局。啊，就是北京市公安局，是相当于小半个安全部，你千万记住安全部编制3000多人，北京市安全局就上千人啊。他是在北京力保安全, 然后第3才轮到上海局，北京市安局的紧急处理小组来处理这个事情。及时的啊。对在微博上进行所有的信息相关链接啊发酵处理马上对彭帅的家人包括什么表亲表弟的全部采取措施。那当然他爸他妈必须的被看起来啊，马上弄起来进行，全面了解之后迅速向中央啊做出了紧急处理。2条方案，第一个这件事情的批政治评估会对共产党的冬奥会带来剧烈的影响，会被所谓的西方反华势力所利用啊。后果不堪想象。
+```
 
-你看看那个核糖核酸检查，如果共产党真的相信核糖核酸检查能治病的话，那你就是天下最愚蠢的人，不但猪会想明白，就是死猪都能想明白。它是一个城还没发现有人得病呢，怎么就把全城的人聚集到一起，竟然等八、九个小时戴着口罩，那口罩而且是不合格的口罩，它不是传染去了吗？这个世界上只有死猪才能相信，说我在西安、我在天津、我在郑州我是真的给你查核糖核酸去了。玩的就是这游戏，最后证明我党能把病毒清到零；第二，让这些人民习惯了待在家里；第三，达到了我宵禁的目的。最重要的是什么？你知道到了西安干什么？西安列出了30个企业，120家所谓管制企业，30个企业就是30个富豪通过这次西安整治、停业、抓捕，下一步把财富全部没收。你记住我今天说的话啊，兄弟姐妹可千万记住七哥今天说的：西安共享财富开始了！30个必须收归的财富、共享的财富，120个要把它停业整顿然后再收归财富。你看着啊，西安的血洗，天津又是，天津大概是35家马上要收归的财富，大概200家必须共享财富的第一阶段，记住今天七哥的说话啊。然后就到江浙去了，然后又到江浙了啊，然后到江浙了，郑州已经开始了，兄弟姐妹们，啥叫共享财富？咋共享你财富啊？抓了马云就共享财富了？抓了马明哲就共享财富了？不是！共享财富是有招儿的。这叫共产主义的运动式的社会财富的招儿。当年抓地主怎么抓的吗？现在有抓地主的吗？大型的秧歌队，宣传队，“嘣嘣嘣，嘣嘣嘣，”人民要翻身当主人，是吧？人民要推掉头顶的三座大山，是吧？谁是你的三座大山呐？是吧？美帝国主义是吧？封建思想，还有地主骑在我们头上剥削我们人民，共产主义，共产党来了是吧？给你带来了未来这就来了！最后把谁呀？最后发现地主是坏蛋，抢你的媳妇，抢你的闺女，我从来没有生活中见过一个坏地主，我听说活着的地主的家人都是好地主。最后要把地主要推翻地主睡地主的老婆闺女就把地主推翻了，最后是什么？大地主共产党来了。今天一模一样，我看到所有战友分析这个的时候，就没有一个人刚才你们做视频的时候我出去接个电话，我就知道你们，我没看啊，我就知道你会做啥样，因为你们非黑即白，这不是这个概念。然后在西方这种斗争当中什么？我让你打台湾你自由去吧，你打台湾你跑着去、争着去；我让你去杀新疆人的时候你发泄你的怒火吧，强奸她们、轮奸她们；然后我给你分享财富的权利，我分财富，我今天要分享风雨中、Renee的财富，我让青青草原去，青青草原说这个七哥直播太好了，我分他俩的钱，分完他俩的我让他俩再去，你再去给我分了草根的，哎哟，你太好了！希特勒跟戈培尔怎么搞起来的？民族仇恨、社会动荡、极度不安、极度恐惧，然后少部分人永远希望着自己成为分享财富和得到权力和分享权力的那部分人。哎呦，希特勒说这个好哇！斯大林怎么弄的？每天都杀人，我都让你成为告密的人，告密的人叫你告完密下一个你就成为被杀的人。共产党现在就让你所有人记住：谁不老实？哪个城市的人不老实？检测核糖核酸，谁不听？在家饿死的，不是我杀的。再不行，这城市大面积感染，这个城市必须奸之、杀之为了14亿人活着。兄弟姐妹们，你们看的太少了！我在去年都告诉了疫苗灾难、疫苗战争、疫苗政治、疫苗经济共产党在开启的。然后在美国已经Ray Dalio都出来要共享财富了，美国也会这么干，欧洲也会这么干！记住我说的话，一定会这么干！让你待在家里边儿，然后有人来共享你的财富，谁都想当共享财富的那个人，然后社会仇恨，然后整个社会财富就开始了、走着看吧！
 
-校对：HimaFaFA
-发布：HimaBoy
-![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
-欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
+第二彭帅的事情说的是事实，而且彭帅很有可能在这个一系列的说出来以后还会有更多的行动。最后重要作出决定啊，不惜一切代价，这原话啊，这都是原话，这是中国不惜代价。不考虑任何后果。就是这彭帅死100回都不拉倒啊，必须将这件事情在冬奥会前彻底的在全世界的评析。然后让各个相关部门马上启动紧急机制。共产党这个紧急机动机制，你一定别小看了，就像潜伏的人啊， 你在VICE, 你在Hpay，是不是啊？你像姚明啊，他是不同的人。对付你小斯基啊，就不用大炮了，是吧。最后呢，够了就不用大炮了。对付郭文贵， 就需要单伟健了，是吧，就这样大炮就来了。
 
-**关注我们**
+*发布：陶子*
 
-Discord 账号
-
-![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
-
-Gettr 账号
-
-![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
+[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
