--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,35 +1,21 @@
 ---
-title: 荷兰和英国建议在冬奥会期间不带电子设备到中共国
+title: 一定要采法律行动：对媒体攻击一定要反击(一)
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1872501/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1872744/)
 
-**编译：七龙珠**
+#### 整理：雅典娜速记组
+编辑：陶子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%80%E5%AE%9A%E8%A6%81%E9%87%87%E6%B3%95%E5%BE%8B%E8%A1%8C%E5%8A%A8%E5%AF%B9%E5%AA%92%E4%BD%93%E6%94%BB%E5%87%BB.001-1.jpeg)
+在外国人眼里边，中国人的长相基本上没什么差别。特别现在你(小斯 基)已经被定义为恐怖分子，攻击你的时候，你们三走在大街上，人家不知道你认谁是大卫，还是小斯基，还是小**SEVEN,**这不是开玩笑的，而且海外华人全部成了恐怖分子。小斯基，你非常有理由注意你的安全，没有必要的情况下，一你不要出去，二你要赶快报案啊。他这个视频被挖出来以后，大家都信了，特别你住在这个华人区域，那你很有可能是要受到攻击的，你真的要注意啊，兄弟，这不是跟你开玩笑。我想告诉你的事情，刚才包括**NICOLE**，你没有一个人到现在没有说出一个最重要的观 点。为什么海外媒体过去**100**年把华人形容成东亚病夫，阳痿什么，中国男人脏乱差是吧？所有这些媒体对华人的攻击，从来没有一个人反击过。 刚才**NICOLE**你已经被定为美国极右分子支持川普，而且你是暴力分子啊，今天你也上镜头了。你真的要注意自己安全，你和小斯基，这不是开半点玩笑的，你们要在任何地方到去了都给警察要报案，先备案，说我这个被这个**ISOBEL**给骗访了以后，什么结果。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip02-4.png)2022 年 1 月 13 日更新于 2022 年 1 月 14 日，
+*发布：陶子*
 
-从各种角度来看，北京2022年冬奥会实在不顺，不管是外交，病毒，还是人生安全等方面已经引起了争议。据荷兰报纸De Volkskrant和英国报纸The Telegraph报道，荷兰和英国都要求他们的奥运运动员不要把手机和电脑带到中共国。
-
-正如荷兰报纸所描述的那样，荷兰奥委会的Geert Slot解释说，“网络安全是为中共国之行进行的风险评估的一部分”，因此，“荷兰队的成员将配备从未使用过的设备，以保护他们的个人数据免受中共国监控”。
-
-**对中共间谍活动的恐惧悄悄渗入奥运精神**
-
-除了荷兰队之外，英国也向他们的运动员提出了类似的建议。冬奥会将于2月在北京举行，英国已警告在中共国期间不要使用个人电子设备。
-
-英国奥林匹克协会（BOA）将给运动员提供新的设备，使他们能够保持联系，不会将他们的个人数据置于危险之中。现阶段还不知道这些智能手机和电脑是否会有任何额外的安全性，同样值得反思的是，如果运动员在这些新设备上使用他们的社交媒体和账户，仍然无法避免潜在的风险。
-
-过去英国奥委会曾向有需要的人提供智能手机和电脑，但更多的是作为一种援助，而不是一种替代。这是第一次明确建议不要携带个人设备旅行。
-
-**新闻来源**：[xataka.com][Países Bajos y Reino Unido piden a sus atletas que no lleven sus móviles u ordenadores a China durante los JJOO de invierno](https://www.xataka.com/privacidad/paises-bajos-reino-unido-piden-a-sus-atletas-que-no-lleven-sus-moviles-u-ordenadores-a-china-durante-jjoo-invierno)
-
-* * *
-
-***审核：Aries的星
-校对：信心满满
-发布：信心满满***
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-4.jpeg)
-
-
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
+[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
