--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,30 +1,29 @@
 ---
-title: 七哥谈格式化管理（2022-01-12摘录）
+title: 中共多地政府要求低风险返乡民众集中隔离并自费食宿
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1872382/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1872526/)
 
-文编：Hima
-听写：叮叮
-视频：七哥
+撰稿：纽约香草山教育部- Noemi
+![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
+当地时间1月17日，“开封一刀切”的微博话题就被顶上墙内热搜。据了解，河南省开封市于今日突然宣布了一条最新的防疫政策，要求来自郑州低风险地区的返封人员也需进行14天的集中隔离并自费食宿。这条“一刀切”式的政策当即引起了大量需要双城生活的民众的强烈抗议。
 
-来源：郭先生2022-01-12直播10:13:46摘录
+然而，开封市政府的这一“霸王条例”却并非个案。近期，中共国内的山西、陕西、河南、广西、黑龙江等多个省份下辖的地方政府都纷纷出台了要求来自低风险地区的返乡人群也必须要进行集中隔离的相关政策，并要求被隔离人员为自己隔离期间产生的一切费用买单。
 
-整个大秦朝它属于宵禁状态，这是它统治的基础。同时宵禁还限制了你的财富和生活方式的流通，作为家庭的成员、社会最重要的DNA，家庭，他是彻底渗透。现在共产党就是商鞅五策当中最最极端的手段。习近平和共产党绝对清楚，如果任由中国老百姓，就这些猪狗，随着时间长，由于有互联网、由于有网络、由于有各种不可控的现代通信技术，它是很危险的。这个猪会发现我跳出这个猪圈去，我可以吃更多的菜园子里的青菜，本属于我，我不需要你喂我，我可以爬到山顶上去，我也可以吹吹风，我也可以在临死前我也甚至猪可以跟狗交配一下子，猪甚至可以跟猴子谈谈恋爱。它甚至可以到水里游游泳、闻闻鱼的味道。猪最后发觉我不是猪，我是一个被披了猪皮的人，我不当猪了！那这种办法、这个病毒疫苗它有多种作用，很多人就无法想象。我在之前不愿意给大家讲，我讲这又说七哥讲这太玄，我尽量避免玄啊。就像我讲的昆仑山脉、喜马拉雅山脉这么多事情，我让你知道共产党他比你都信神、他比你都迷信。然后你现在觉得你深信不疑吧，盘古龙头就证明了共产党绝对不是无神论，是天底下最大的有神论，是吧。瑞士的钱、还有海航王岐山等，所有人告诉你共产党不是无产阶级，是最有产的阶级！那么现在我再告诉你，现在共产党让你绝对不是给你所谓的叫你治疫苗，刚才风雨之中讲得很好，是垃圾，扔到隔壁邻居家，我再给你扔回来，这叫清零。表面上是这样，事实上真正的后面游戏你还没看透。如果用你这个例子比的话是什么？共产党跟你玩儿的就是扔垃圾的游戏。他给你整了个垃圾扔在A家，A家扔B家，B家不一定扔回A家，B家可能扔在C家，也有可能扔到D家去了。这种互相扔垃圾的仇恨结果就需要警察出面调整，最后警察出面儿说 ：由于大家互相扔垃圾，现在开始起垃圾怎么扔由我说了算，而且要收费。这就达到了《商鞅五术》最后的核心目的。就在去年的时候，国安委的咱们一个哥们儿跟我说：“我们正在研究更深层次的利用好疫苗和病毒，让这个社会更容易管理。”王沪宁给中央说，我们要牢牢的抓住这个机会，把整个社会叫做格式化管理。啥叫格式化？大家都是玩儿电脑的，啥叫格式化呀？王沪宁这个老杂毛能说这话，他就是不会电脑他才那么疯狂，他会电脑他就不疯狂了。啥叫格式化？就是商鞅所说的，就是大秦朝秦文帝、秦孝帝说这话，把社会把人关在家里。我还得让你，我还是为了你好，我让你关在家里。
+据悉，当前中共国的返乡人群主要为大学生群体。目前，已有多名被隔离的大学生都对14天隔离期所产生的高昂的隔离费用表示担忧。有学生称，此条政策属实是当地政府在“割韭菜”，但大家对此却无能为力。 (已编辑)
 
-校对：HimaFaFA
-发布：HimaBoy
-![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
-欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
+1[https://www.toutiao.com/a7053334957510427140/?channel=&source=search\_tab https://www.gettr.com/post/possbb4f46 https://www.toutiao.com/w/a1722187358499907/?traffic\_source=&traffic\_source=&in\_ogs=&in\_ogs=&utm\_source=&utm\_source=&source=search\_tab&source=input&utm\_medium=wap\_search&utm\_medium=wap\_search&original\_source=&original\_source=&in\_tfs=&in\_tfs=&channel=&channel=](https://www.toutiao.com/a7053334957510427140/?channel=&amp;source=search_tab%20https://www.gettr.com/post/possbb4f46%20https://www.toutiao.com/w/a1722187358499907/?traffic_source=&amp;traffic_source=&amp;in_ogs=&amp;in_ogs=&amp;utm_source=&amp;utm_source=&amp;source=search_tab&amp;source=input&amp;utm_medium=wap_search&amp;utm_medium=wap_search&amp;original_source=&amp;original_source=&amp;in_tfs=&amp;in_tfs=&amp;channel=&amp;channel=)
 
-**关注我们**
+编辑/校对/发稿：菩提树
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Calendar-2.png)
+**更多资讯，更多关注**
 
-Discord 账号
+[**纽约香草山农场GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
+[**纽约香草山农场GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
 
-Gettr 账号
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
 
-![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
