--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,24 +1,36 @@
 ---
-title: 澳洲昆士兰地区单日新冠确诊超1.5万，恐在学校出现爆发
+title: 荷兰和英国建议在冬奥会期间不带电子设备到中共国
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1872380/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1872501/)
 
-撰稿：Gradient Boost
-![](https://assets.gnews.org/wp-content/uploads/2022/01/011602.jpg)网络图片
-昆士兰于当地时间1月17日记录了 15,122 例新的 CCP病毒感染案例和另外 7 例死亡，这是该州大流行中最致命的一天。
+**编译：七龙珠**
 
-7名不幸离世的死亡病例年龄皆在80岁以上，且均有其它健康问题。媒体称这些死亡案例没有注射过CCP病毒疫苗的加强针，却对他们是否完全两剂CCP病毒接种疫苗只字未提。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip02-4.png)2022 年 1 月 13 日更新于 2022 年 1 月 14 日，
 
-今天发布的最新病例数据来自 30,963 个 PCR 检测和 4576 个报告的快速抗原检测。昆士兰州同时还更新了对活跃病例的定义，使其与澳大利亚其他州和领地保持一致——这一举措使得该州现存病例总数降至 86,953 例。
+从各种角度来看，北京2022年冬奥会实在不顺，不管是外交，病毒，还是人生安全等方面已经引起了争议。据荷兰报纸De Volkskrant和英国报纸The Telegraph报道，荷兰和英国都要求他们的奥运运动员不要把手机和电脑带到中共国。
 
-州卫生部长 Yvette D’Ath 说，有 702 名冠状病毒患者目前需要住院治疗，其中 40 人在重症监护室，15 人需要呼吸机。
+正如荷兰报纸所描述的那样，荷兰奥委会的Geert Slot解释说，“网络安全是为中共国之行进行的风险评估的一部分”，因此，“荷兰队的成员将配备从未使用过的设备，以保护他们的个人数据免受中共国监控”。
 
-首席卫生官Gerrard预计，在下个月昆士兰各地学校重新开学时或将出现“重大的”CCP病毒疫情爆发。该州学校的重新开放目前已推迟两周至 2 月 7 日星期一。Gerrard博士称，虽然预计会有大量学生被感染，但对他们来说总体症状将是轻微的。
+**对中共间谍活动的恐惧悄悄渗入奥运精神**
 
-教育部长Grace表示，接下来的两个学期将不会有任何时间上的延长，依然保持疫情以来的缩减，因为课程预计将会顺利完成。
+除了荷兰队之外，英国也向他们的运动员提出了类似的建议。冬奥会将于2月在北京举行，英国已警告在中共国期间不要使用个人电子设备。
 
-新闻参考链接：[Queensland reports more than 15,000 COVID-19 cases amid warning of school outbreaks](https://www.9news.com.au/national/coronavirus-qld-update-queensland-covid19-cases/366d09e8-6e52-4696-8fc4-274fdfa5fa37)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+英国奥林匹克协会（BOA）将给运动员提供新的设备，使他们能够保持联系，不会将他们的个人数据置于危险之中。现阶段还不知道这些智能手机和电脑是否会有任何额外的安全性，同样值得反思的是，如果运动员在这些新设备上使用他们的社交媒体和账户，仍然无法避免潜在的风险。
+
+过去英国奥委会曾向有需要的人提供智能手机和电脑，但更多的是作为一种援助，而不是一种替代。这是第一次明确建议不要携带个人设备旅行。
+
+**新闻来源**：[xataka.com][Países Bajos y Reino Unido piden a sus atletas que no lleven sus móviles u ordenadores a China durante los JJOO de invierno](https://www.xataka.com/privacidad/paises-bajos-reino-unido-piden-a-sus-atletas-que-no-lleven-sus-moviles-u-ordenadores-a-china-durante-jjoo-invierno)
+
+* * *
+
+***审核：Aries的星
+校对：信心满满
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-4.jpeg)
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
