--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,30 +1,35 @@
 ---
-title: 七哥说“政治上、军事上、经济上、个人利益上这是一个搅战的混局”（2022-01-12摘录）
+title: MV版Hcoin To the Moon上线40天第26次位列澳门iTunes热门MV榜首
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1872373/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1872429/)
 
-文编：Hima
-听写：叮叮
-视频：七哥
+1/17/2021 郭文贵先生的歌曲Hcoin To the Moon的MV版视频上线40天第26次位列澳门iTunes热门音乐视频榜榜首，第33次位列前三名
 
-来源：郭先生2022-01-12直播09：59：19摘录
+* * *
 
-那你在再看看哈萨克斯坦的油和气出那么大事，它油价、气价降了吗？哈萨克斯坦整个国家的油，所有的工人几乎都是最穷的人，你不能想象，你没去过。你上那去过之后发现，为什么中国的石油工人都住着楼房，我们都住在村里面，但那里的石油工人很穷，都是被剥削的，骑着马当油工去，开着老拉达当油工去，还有那个老车都已经没了的车厂。这就是回答你的问题，在这场政治较量之中，中共和俄罗斯在政治上是合作的，对付美国西方，这是永远不变的主题。在经济上，双方各有各的利益，这就像鬣狗去攻击狮子，永远鬣狗不能帮助狮子攻击鬣狗，但鬣狗掏完肛以后，大家抢肉的时候是你死我活。所以说你把我的黄金先给我，这个黄金100吨是王岐山的，人家就不想给。那你先给我吧，你不给我，你不给我这信息就完了啊。这个事儿不是中共搞起来的，这个事儿是它去要黄金是因为知道你有事了，我告诉你情报，我上合组织跟你一起出兵，中国出兵了你知道吗？你们没有一个人报道的，中国是派了1100个人啊，白俄罗斯才派了100个人，中国这1100个人全是雪豹突击队去的，王毅到他说：我这人全都在天上呢，有飞机拉黄金回去，然后帮你来进部队。中国是第一个到的援助部队。托卡耶夫就别提了，托卡耶夫全家人都在海南做生意，都有地，是吧。然后你奥运会肯定来呀，如果托卡耶夫成为冬奥会的大VIP的时候，你能知道这个共产党还有VIP吗？是吧，剩下就是埃及总统啦，沙特王子啦，科威特啦，伊朗啦就这几个鸟地方了，就是拿了钱的，不能不去的嘛，是吧。没什么人了。托卡耶夫一看：哥们儿，你别动，黄金你拉走，援和军队也在这儿，咱是上合组织。俄罗斯一看：嘿，我也是上合组织发起人，你别你一个人去啊，我也得去。它要控制油路，借机干掉乌克兰，同时把上合组织联合出兵，合法性告诉西方：我能在这出兵，我也能到乌克兰去，我能到任何地方。普京这牌打得太牛了，打得太牛了。所以说兄弟，当七哥告诉你玩这个以后，你就明白了，是吧。政治上、军事上、经济上、个人利益上这是一个搅战的混局。就像阿富汗，阿富汗本身是对抗西方，给西方找麻烦，但是在阿富汗里面利益，和俄罗斯绝对是，俄罗斯不高兴了：你别把这些恐怖分子弄到我这里来好不好，我刚刚把车臣，普京起来就是驾着飞机到车臣阿摩耶夫是吧，那个家伙“哐”给干掉了，车臣的极端分子，你别再给我弄过来啊，你再弄回一个车臣来啊？所以说在帕米尔高原死亡之谷，南侧和北侧，你要给我塔吉克斯坦和阿富汗之间我要有一个屏障，所以俄罗斯“咵嚓”把兵压到了中国新疆边境。昆仑山北口，直接放那儿去了。所以说，兄弟，但凡你站在高度上看过昆仑草原，你看过这2500公里，你的高度就不一样了。
+[【PDF 下载】Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record.pdf)[下载](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record.pdf)
 
-校对：HimaFaFA
-发布：HimaBoy
-![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
-欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
+* * *
 
-**关注我们**
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_1.jpg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_5.jpg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_7.jpg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_8.jpg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_9.jpg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_37.jpg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_38.jpg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_61.jpg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_62.jpg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_76.jpg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_82.jpg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_100.jpg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_107.jpg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_118.jpg)
 
-Discord 账号
 
-![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
+[【PDF 下载】Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record.pdf)[下载](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record.pdf)
 
-Gettr 账号
-
-![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
