--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,27 +1,33 @@
 ---
-title: 美国疗养机构的CCP病毒死亡和病例再次出现上升
+title: 中共政府确保对价值数十亿美元的NFT市场的控制权
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1872363/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1872420/)
 
-撰稿：Gradient Boost
-![](https://assets.gnews.org/wp-content/uploads/2022/01/011601.jpg)网络图片
-由于 Omicron 变异毒株造成的爆发式感染，美国疗养院的 CCP病毒感染率再次飙升，死亡人数也出现攀升，导致家庭探访出现新的限制。
+**编译：七龙珠**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip01-4.png)中国试图通过创建自己的平台来控制本国的 NFT 市场。 （路透社）
+比特币等加密货币的被禁和（非同质化代币）NFT的崛起，促使中共政府使用国营区块链系统来追踪交易。
 
-疗养院在早期是这场大流行的致命中心，去年许多疗养院重新对接种过疫苗的人士开放。然而由于疫苗实际上是无效的，尤其无法阻止新变异毒株的迅速传染，这些机构再次受到冲击。
+中共国将在本月底前创建自己的NFTs（非同质化代币）基础设施，它将不与加密货币挂钩，而是依靠自己的区块链系统。这个区块链系统，不会像最初设想的那样是去中心化和匿名的，而是由国家控制的。
 
-根据疾病控制和预防中心的数据，在截至 1 月 9 日的一周内，疗养院报告的居民中约有 32,000 例 COVID-19 病例，这一数字几乎已经接近创纪录的水平，相比一个月前则增加了近七倍。
+NFTs也在中共国大放异彩。阿里巴巴、腾讯、百度和小米等中国科技巨头已经创建了自己的NFT，以利用这一趋势，但中国政府对这一系统持怀疑态度，为了避免中共政府的怀疑，他们将其更名为“数字货币”。NFTs一般通过以太坊的区块链进行交易，并使用其加密货币以太坊购买。这些信息区块链是高度安全的去中心化平台，允许其用户之间的互动，同时保持其匿名性。区块链也是其他加密货币的基础，但中共已经在国内禁止了这些虚拟货币，因为它要求其所有的互联网系统验证用户的身份，以便国家在“非法活动”时进行干预。
 
-同时，疗养院在这一周内总共记录了 645 例与CCP病毒相关的死亡案例，比前期增加了 47%。有人担心，在 Omicron 带来的风波结束之前，死亡人数可能会更高。
+**一个非常奇特的区块链**
 
-疗养院居民的CCP病毒疫苗接种率一直处于高水平的状态：根据疾病预防控制中心的数据，疗养机构中的住户大约 87% 都有完全接种了两剂CCP病毒疫苗，而工作人员中接种两剂CCP病毒疫苗的比率则是83%。
+去年年中，中共国宣布推出区块链服务网络（BSN），这是一个在中共政府的支持下，由中共国科技公司和银行组成的财团建立的。这种国家管理的区块链允许公司和个人用户使用国家区块链应用程序，而不必使用私人区块链。
 
-不过从现实情况来看，疫苗实际上在养老机构并没有发挥任何遏制传播的效果。同样，重症和死亡在一月初期也重新攀升，也不知道疫苗的保护作用究竟去了哪里。
+现在，据香港媒体《南华早报》报道，中共国政府将为NFT引入一个新的数字基础设施，它被称为分布式数字证书（BSN-DDC）。这个系统使公司或个人更容易创建自己的用户档案或应用程序来管理NFT。然而，只有中共国的人民币将被允许用于交易。
 
-疗养机构的官员表示，他们正在通过限制访客进入公共区域和建立社交距离来应对疫情。而访客恐怕无法再进入居民房间进行探视。
+与世界其他地方不同的是，中共国科技公司铸造的NFT数字产品不会成为投机和资本外逃的工具，这一条件旨在让中共国监管机构放心，但是现在BSN-DDC要来改变游戏规则，虽然我们不知道他们是否能从NFT提出钱来，但我们知道，无论他们做什么，中共都会关注他们。
 
-新闻参考链接：[COVID deaths and cases are rising again at US nursing homes](https://apnews.com/article/coronavirus-pandemic-health-pandemics-nursing-homes-centers-for-disease-control-and-prevention-31685a926b0ee4e97e1b314a52b1f41c)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+**新闻来源**：[elconfidencial.com][El gobierno chino se asegura el control del millonario mercado de los NFT](https://www.elconfidencial.com/tecnologia/novaceno/2022-01-14/china-se-asegura-el-control-del-millonario-mercado-de-los-nft_3358621/)
 
+* * *
+
+***审核：Aries的星
+校对：信心满满
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-4.jpeg)
 
  
 
