--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,27 +1,23 @@
 ---
-title: 为什么接种辉瑞新冠疫苗的弊大于利（六）
+title: 七哥谈彭帅视频事件(一)
 ---
-`喜国公民` [轉載自GNews](https://gnews.org/zh-hans/1872682/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1872762/)
 
-翻译&字幕：喜国公民
-视频来自网络
-尽管目前新冠疫苗护照被用来防止或减少新冠病毒的传播，但实际上在辉瑞的新冠疫苗试验中，从未研究过新冠疫苗是否能阻止传播新冠病毒。因此，说新冠疫苗能阻止传播是不恰当的。
+#### 整理：雅典娜速记组
+编辑：陶子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%83%E5%93%A5%E8%B0%88%E5%BD%AD%E5%B8%85%E8%A7%86%E9%A2%91%E4%BA%8B%E4%BB%B6%EF%BC%88%E4%B8%80%EF%BC%89-.jpeg)
+彭帅这个事情出来那个视频我反正也看了，刚才那个里头提到了好多那个要点, 就是彭帅作为一个其实在世界上我也去查过她有几个前任，从2009年开始有很多的这个她都是外籍的，这个coach他的教练，但是所以说他要说他英语不能自己写一个很简短的文章说明问题的话，这个我也不太相信，而且她在那个现场真的是。闪烁其词，好几次听不见。这么这么年轻的一个人。我不相信她有听力问题。 还有一个我觉得最奇怪的就是一个北京人，其实她是湖南人。她跑到上海跟一帮上海人这个姚明啊，王励勤呀，还有另外一个帆船的女运动员，也都是上海 人。一起去看比赛，没有叫一个北京的伙伴或者那个闺蜜去，这个我觉得也是很蹊跷的一件事情，而且最重要的是采访是让新加坡的媒体采访并没有让那你的南华早报呢？你国内的这些所有的其他的媒体，为什么不能采访他?
 
-辉瑞的新冠疫苗试验采用了主观测试。他们没有对所有参与者进行新冠病毒测试。相反，他们指示调查员只测试那些有新冠感染症状的人。因此，这意味着无症状的感染会被完全遗漏。
+对，就反正这个里头猫腻很多，这个一看就是假的，我想请所有的其他的嘉宾发发表一下你们的看法。那等一下啊，小福利发表之前，我先给大家建立一个情报啊，你不再说，嗯，要不然说完以后咱们就就说远了，我先给大家说一下，感谢大家做的这个视频，我现在今天咱们继续吃播以后严肃地谈这个话题呢，就跟今 天的话题非常接近啊，我再次重申啊彭帅的事件，我们现在了解的非常清楚。 这是有国安委员会叫紧急处理小组亲自来处理的案件。这是我今天第一次说。
 
-这意味着研究中引入了高度的主观性，因为调查员实际上有能力通过决定测试或不测试来左右结果。这种缺乏客观系统的测试实际上使试验的结果不可靠。所有参与者都应该被测试。
+*发布：陶子*
 
-该研究中有相当多的数据缺失。根据辉瑞的试验数据，接种组有8个病例，安慰剂组有162个病例。但当你处理如此小数量的病例时，任何变化都可能对结果产生重大影响。
-
-从辉瑞的试验报告中发现，在接种组中有80名失去跟进的参与者。这比他们的新冠确诊病例多10倍。因此，如果这80人中有相当一部分人对新冠病毒呈阳性，这实际上会极大地改变结果。
-
-更糟糕的是，因为还有所谓的疑似但未经证实的病例。这意味着这些人实际上被确认为有新冠病毒的症状，但他们实际上从未被检测过。
-
-测试的随机性是由调查员决定的，如果他们中哪怕只有一小部分是阳性，也会改变整体结果。事实上，失去随访和疑似未确认的病例更高。而且这里甚至明显高于最后的指标，这意味着这个数据是不可靠的。这项研究不应该被接受。
-
-如果我们假设所有这些失去跟进的参与者都是新冠阳性，并把它们加到经测试证实的病例中，接种组和安慰剂组的总体阳性病例数会多出很多。安慰剂的病例数仍然较多。然而，它们之间的比例差异已经改变，相对风险降低数会下降到只有19%。而辉瑞公司需要有50%的相对风险降低，才有资格获得紧急使用授权。
-
-前一篇：[为什么接种辉瑞新冠疫苗的弊大于利（五）](https://gnews.org/zh-hans/1869188/)
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
+[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
