--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,35 +1,31 @@
 ---
-title: DC每日热点0117
+title: 澳法院驳回德约科维奇因未接种疫苗而被迫离境的上诉请求
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1872591/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1872751/)
 
-编辑：楚门门
-![](https://assets.gnews.org/wp-content/uploads/2022/01/F937AA39-D8AA-4156-81EE-70220224B769-scaled.jpeg)
-道琼斯指数 35911.81 ▼0.56%
-纳斯达克指数 14893.75 ▲0.59%
-WTI纽约原油CFD 83.757 ▼0.08%
-布伦特原油CFD 85.765 ▼0.34%
-标普50指数 2,974.37 ▼46.37%
-美元兑人民币 1USD=6.349 RMB
-美元兑港币 1USD=7.791 HKD
-国际黄金 1820.01 美元/盎司
-全球CCP病毒感染人数 329,125,885例
+**撰稿：日本东京方舟农场  海星**
 
-1、白宫：拜登星期五将与岸田文雄视讯会晤 聚焦美日同盟
-2、中共官方数据：去年人口出生率创建国以来最低
-3、日本海岸警卫队：朝鲜发射疑似弹道导弹
-4、乌克兰周日指责俄罗斯涂毁乌政府网站，称这是莫斯科对这个曾经的前苏联共和国发动的“混合战争”的一部分
-5、昂山素季再判4年 缅甸军政府恐遭国际孤立，中共国的举动备受关注
-6、中共国春节前后释放国家战略石油储备为压低全球原油价格助力
-7、乔科维奇签证最终被拒离开澳大利亚 塞尔维亚总统欢迎网球巨星回家
-8、印度将向菲律宾出售布拉莫斯反舰导弹系统以抗衡中共国
-9、达沃斯线上开幕 习近平称欢迎各种资本在中共国合法依规经营
-10、北京第一宗Omicron确诊 疑接触境外邮寄感染
-11、刚果(布)修宪为延紧急状态期
-12、中共国官方公布的2021年数据显示，国内原煤生产继续呈增长趋势，“严格控制煤炭”承诺落空
-13、中华民国前空军副司令张延廷称台湾F16V坠机与共机频繁扰台有关
-14、加拿大保守党吁对中资紫金矿业收购一家加拿大锂矿公司的交易进行国家安全审查
-15、北京对冬奥会实施全球最严苛的要求，例如运动员必须接种疫苗否则面临长期隔离，每天都要进行病毒测试，不参加比赛或训练时要戴口罩
+1月16日，澳大利亚法院驳回了世界知名网球运动员诺瓦克·德约科维奇因未接种疫苗而遭到该国政府取消签证的上诉请求。塞尔维亚人德约科维奇的目标是创纪录的第21个大满贯冠军。
+
+据《产经体育新闻》报导，澳大利亚法院当日驳回了塞尔维亚网球运动员德约科维奇的上诉请求，维持了当地政府的决定，即取消其签证，并强迫他离开澳大利亚。同时，法院规定德约科维奇在未来三年内不得进入澳大利亚，并被禁止参加明年的澳大利亚网球公开赛。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-252.jpg)图片来源：路透社
+
+据悉，听证会结束后，德约科维奇被带到了一个非法移民拘留中心，等待离开澳大利亚的飞机。
+
+该报导指出，德约科维奇于1月5日抵达墨尔本，计划参加1月17日在澳大利亚举行的网球公开赛。然而，该国政府于1月6日取消了他的签证，并声称如果未接种疫苗的德约科维奇留下来，”可能会助长国内的反疫苗情绪”。随后，德约科维奇因不满该决定，将政府告上法庭。
+
+*参考链接：*
+
+[ジョコビッチ、国外退去　全豪テニス出場できず](https://www.sanspo.com/article/20220116-K7ZMDGXRGBKSJBTM7YRNVC7TYE/)
+
+* * *
+
+*素材采编：海星*
+
+*编辑：文顺*
+
+*发布：Ranting*
 
  
 
