--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,29 +1,30 @@
 ---
-title: 中共多地政府要求低风险返乡民众集中隔离并自费食宿
+title: 七哥谈共产党有组织的共享财富（2022-01-12摘录）
 ---
-`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1872526/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1872750/)
 
-撰稿：纽约香草山教育部- Noemi
-![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
-当地时间1月17日，“开封一刀切”的微博话题就被顶上墙内热搜。据了解，河南省开封市于今日突然宣布了一条最新的防疫政策，要求来自郑州低风险地区的返封人员也需进行14天的集中隔离并自费食宿。这条“一刀切”式的政策当即引起了大量需要双城生活的民众的强烈抗议。
+文编：Hima
+听写：叮叮
+视频：七哥
 
-然而，开封市政府的这一“霸王条例”却并非个案。近期，中共国内的山西、陕西、河南、广西、黑龙江等多个省份下辖的地方政府都纷纷出台了要求来自低风险地区的返乡人群也必须要进行集中隔离的相关政策，并要求被隔离人员为自己隔离期间产生的一切费用买单。
+来源：郭先生2022-01-12直播10：23：10摘录
 
-据悉，当前中共国的返乡人群主要为大学生群体。目前，已有多名被隔离的大学生都对14天隔离期所产生的高昂的隔离费用表示担忧。有学生称，此条政策属实是当地政府在“割韭菜”，但大家对此却无能为力。 (已编辑)
+这就是为什么这个Isabel Yeung疯狂在这个时候，共产党是有组织的，然后第一个海外华人，美国这500万也好，1000万也好，还有日本的草根、还有在欧洲，澳大利亚，你们都是要被共享财富，因为你们占据了太多的财富，你就是当年的德国的犹太人，因为你们没有感受这个，你走着看，半年内就快让你感受到。青青草原不会再恨共产党在哈萨克族村做什么，你会恨的是现在正在你身边做什么。我再说下去，我怕你们几个都尿了。
 
-1[https://www.toutiao.com/a7053334957510427140/?channel=&source=search\_tab https://www.gettr.com/post/possbb4f46 https://www.toutiao.com/w/a1722187358499907/?traffic\_source=&traffic\_source=&in\_ogs=&in\_ogs=&utm\_source=&utm\_source=&source=search\_tab&source=input&utm\_medium=wap\_search&utm\_medium=wap\_search&original\_source=&original\_source=&in\_tfs=&in\_tfs=&channel=&channel=](https://www.toutiao.com/a7053334957510427140/?channel=&amp;source=search_tab%20https://www.gettr.com/post/possbb4f46%20https://www.toutiao.com/w/a1722187358499907/?traffic_source=&amp;traffic_source=&amp;in_ogs=&amp;in_ogs=&amp;utm_source=&amp;utm_source=&amp;source=search_tab&amp;source=input&amp;utm_medium=wap_search&amp;utm_medium=wap_search&amp;original_source=&amp;original_source=&amp;in_tfs=&amp;in_tfs=&amp;channel=&amp;channel=)
+校对：HimaFaFA
+发布：HimaBoy
+![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
+欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
 
-编辑/校对/发稿：菩提树
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Calendar-2.png)
-**更多资讯，更多关注**
+**关注我们**
 
-[**纽约香草山农场GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+Discord 账号
 
-[**纽约香草山农场GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
 
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+Gettr 账号
 
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
 
  
 
