--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,30 +1,35 @@
 ---
-title: 七哥谈中共“为了你好”的本质（2022-01-12摘录）
+title: 荷兰和英国建议在冬奥会期间不带电子设备到中共国
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1872399/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1872501/)
 
-文编：Hima
-听写：叮叮
-视频：七哥
+**编译：七龙珠**
 
-来源：郭先生2022-01-12直播10：17：12摘录
+![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip02-4.png)2022 年 1 月 13 日更新于 2022 年 1 月 14 日，
 
-把人关在家里，我还得让你，我还是为了你好，我让你关在家里。我需要你出来的时候，你就出来当警察、当城管，我让你待在家里的时候你就安全了。中国将进入永远的，记住就像西安、郑州轮着来，轮完以后格式化全国都会适应，为了你好待在家里，你们没看清这个本质。西安、郑州、天津事件，大家别忘了西安、郑州和天津几乎是决定共产党生死最关键的，河北、西安、郑州、天津，中国的保中央的部队就在张家口就冬奥会这个地方，山海关、天津，你过了天津你就打过来了嘛。把这些军队已经牢牢地控制在这个地方，然后用河北的护城河工程把这些警察变成了一个又筑成了一道人墙，把人又关在家里，你再敢出来的时候是什么？我毒死你那就合法了，不用天安门弄坦克压死你那么吓人还流血，我还得打扫战场，我还得把天安门那个砖给起了，多累呀，是吧？我放点儿毒。你看看不听我话吧？死了吧？
+从各种角度来看，北京2022年冬奥会实在不顺，不管是外交，病毒，还是人生安全等方面已经引起了争议。据荷兰报纸De Volkskrant和英国报纸The Telegraph报道，荷兰和英国都要求他们的奥运运动员不要把手机和电脑带到中共国。
 
-校对：HimaFaFA
-发布：HimaBoy
-![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
-欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
+正如荷兰报纸所描述的那样，荷兰奥委会的Geert Slot解释说，“网络安全是为中共国之行进行的风险评估的一部分”，因此，“荷兰队的成员将配备从未使用过的设备，以保护他们的个人数据免受中共国监控”。
 
-**关注我们**
+**对中共间谍活动的恐惧悄悄渗入奥运精神**
 
-Discord 账号
+除了荷兰队之外，英国也向他们的运动员提出了类似的建议。冬奥会将于2月在北京举行，英国已警告在中共国期间不要使用个人电子设备。
 
-![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
+英国奥林匹克协会（BOA）将给运动员提供新的设备，使他们能够保持联系，不会将他们的个人数据置于危险之中。现阶段还不知道这些智能手机和电脑是否会有任何额外的安全性，同样值得反思的是，如果运动员在这些新设备上使用他们的社交媒体和账户，仍然无法避免潜在的风险。
 
-Gettr 账号
+过去英国奥委会曾向有需要的人提供智能手机和电脑，但更多的是作为一种援助，而不是一种替代。这是第一次明确建议不要携带个人设备旅行。
 
-![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
+**新闻来源**：[xataka.com][Países Bajos y Reino Unido piden a sus atletas que no lleven sus móviles u ordenadores a China durante los JJOO de invierno](https://www.xataka.com/privacidad/paises-bajos-reino-unido-piden-a-sus-atletas-que-no-lleven-sus-moviles-u-ordenadores-a-china-durante-jjoo-invierno)
+
+* * *
+
+***审核：Aries的星
+校对：信心满满
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-4.jpeg)
+
+
 
  
 
