--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,35 +1,31 @@
 ---
-title: 法国阻止诺瓦克·德约科维奇（Novak Djokovic）参加五月法网公开赛
+title: 扬帆每日速递 2022年1月17日版（2）
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1872769/)
+`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1872807/)
 
-编译： 真北007
-![](https://assets.gnews.org/wp-content/uploads/2022/01/03AB729E-0629-480E-BE17-5450B37F0E69.jpeg)图片来源：网络
-来自NATIONAL POST 一月十八日星期一的新闻报道：
+![](https://assets.gnews.org/wp-content/uploads/2022/01/封面简1.jpg)
+1、1月17日来自香港NOW新闻：取消年销市场令花农血本无归损失惨重，实行人流管制缩短市民办年货时间。食物及卫生局局長陈肇始坚持清零的目标，要市民接种疫苗配合强制检测公告找出传播链，明知不可为而为，港共政府事事与民为敌。
 
-法国议会周日批准的疫苗通行证将要求人们持有疫苗接种证书才能进入体育场馆等公共场所。
+2、尽管研究人员认为中共病毒在物体表面存活时间不长，中共国媒体仍臆想地宣传，1月15日发现首例中共病毒Omicron变种可能通过来自加拿大的受污染邮件进入北京。
 
-根据法国议会周日批准的一项法律，法网参赛者将被要求接种疫苗，这引发了人们对世界排名第一的诺瓦克·德约科维奇参加大满贯赛事的质疑。
+3、川普没能在病毒来源上发挥灭共最佳时机痛失总统宝座，而反对强制疫苗政策使他不失为美国总统受国人爱戴。
 
-德约科维奇在周末澳大利亚网球公开赛开始前被驱逐出澳大利亚，原因是他没有接种疫苗，而且政府机构不愿接受这位塞尔维亚人因赛事获得的医疗豁免。
+4、由于自1月15日起进入加拿大的所有卡车司机都必须出示疫苗护照的加拿大联邦政府行政命令正式生效，但众多卡车司机和支持者于周一清晨开始在交通繁忙的美加边境城市艾默生集会，抗议疫苗护照。
 
-法国体育部周一表示，法国新的疫苗法不会豁免。 法律规定必须有疫苗接种证明才能进入公共场所，如体育场馆、餐馆、咖啡馆、电影院和一些公共交通工具。
+5、据文贵大直播：1月17日是马丁路德金的纪念日（MLK DAY），文贵先生选在今天讲述自己在美国与中共操纵的太平联盟地较量。5年来，文贵先生面临来自中共最可怕的侮辱、羞辱和时间的煎熬以及对国内家人、朋友及员工地迫害，告诉战友华人只有站起来抗争才能获得民主、自由、法治。同时也向世人证明了他灭共的决心。
 
-“规则很简单”，该部表示，“一旦法律颁布，疫苗通行证将应用在已经实施健康通行证的场所”。
+6、据文贵大直播：太平联盟案的四大不寻常：纽约法庭不应该受理；太平联盟及其律师疯狂造假；太盟恶意递交大量文件；无视利益冲突，违背律师职业道德，可以看出中共在美国司法界地渗透之深。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2022-1-17海报2简_page-0001.jpg)
+**加拿大温哥华扬帆农场 海报组**
 
-**点评：**
+素材提供战友：从来多难不兴邦、Revelation熙攘、文敏
 
-**谁说体育不应涉及政治? 当全世界呼吁抵制“大屠杀北京冬奥会”时，中共是怎么说的？此次德约科维奇事件我认为是一件好事，虽然他遭受很多，但值得。它让全世界看到，这就是一纯粹政治事件和较量。虽然现在正义的力量暂时受挫，但邪恶势力的政府也暴露了他们的无知、无能、无耻。一切都是天意，期待着未来的一幕幕大戏！**
+编辑：文敏
 
-原文链接：
+发布：风起云间（文敏）
 
-[https://nationalpost.com/news/world/france-bars-novak-djokovic-from-french-open-in-may](https://nationalpost.com/news/world/france-bars-novak-djokovic-from-french-open-in-may)
+海报图片设计：飞天面、 Shuang
 
-发布：歪桑
-
-更多资讯请关注：
-[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2150925F-C440-455E-A2B3-AEC0D3D4A055.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
