--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,27 +1,30 @@
 ---
-title: 为什么接种辉瑞新冠疫苗的弊大于利（六）
+title: 七哥谈共产党有组织的共享财富（2022-01-12摘录）
 ---
-`喜国公民` [轉載自GNews](https://gnews.org/zh-hans/1872682/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1872750/)
 
-翻译&字幕：喜国公民
-视频来自网络
-尽管目前新冠疫苗护照被用来防止或减少新冠病毒的传播，但实际上在辉瑞的新冠疫苗试验中，从未研究过新冠疫苗是否能阻止传播新冠病毒。因此，说新冠疫苗能阻止传播是不恰当的。
+文编：Hima
+听写：叮叮
+视频：七哥
 
-辉瑞的新冠疫苗试验采用了主观测试。他们没有对所有参与者进行新冠病毒测试。相反，他们指示调查员只测试那些有新冠感染症状的人。因此，这意味着无症状的感染会被完全遗漏。
+来源：郭先生2022-01-12直播10：23：10摘录
 
-这意味着研究中引入了高度的主观性，因为调查员实际上有能力通过决定测试或不测试来左右结果。这种缺乏客观系统的测试实际上使试验的结果不可靠。所有参与者都应该被测试。
+这就是为什么这个Isabel Yeung疯狂在这个时候，共产党是有组织的，然后第一个海外华人，美国这500万也好，1000万也好，还有日本的草根、还有在欧洲，澳大利亚，你们都是要被共享财富，因为你们占据了太多的财富，你就是当年的德国的犹太人，因为你们没有感受这个，你走着看，半年内就快让你感受到。青青草原不会再恨共产党在哈萨克族村做什么，你会恨的是现在正在你身边做什么。我再说下去，我怕你们几个都尿了。
 
-该研究中有相当多的数据缺失。根据辉瑞的试验数据，接种组有8个病例，安慰剂组有162个病例。但当你处理如此小数量的病例时，任何变化都可能对结果产生重大影响。
+校对：HimaFaFA
+发布：HimaBoy
+![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
+欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
 
-从辉瑞的试验报告中发现，在接种组中有80名失去跟进的参与者。这比他们的新冠确诊病例多10倍。因此，如果这80人中有相当一部分人对新冠病毒呈阳性，这实际上会极大地改变结果。
+**关注我们**
 
-更糟糕的是，因为还有所谓的疑似但未经证实的病例。这意味着这些人实际上被确认为有新冠病毒的症状，但他们实际上从未被检测过。
+Discord 账号
 
-测试的随机性是由调查员决定的，如果他们中哪怕只有一小部分是阳性，也会改变整体结果。事实上，失去随访和疑似未确认的病例更高。而且这里甚至明显高于最后的指标，这意味着这个数据是不可靠的。这项研究不应该被接受。
+![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
 
-如果我们假设所有这些失去跟进的参与者都是新冠阳性，并把它们加到经测试证实的病例中，接种组和安慰剂组的总体阳性病例数会多出很多。安慰剂的病例数仍然较多。然而，它们之间的比例差异已经改变，相对风险降低数会下降到只有19%。而辉瑞公司需要有50%的相对风险降低，才有资格获得紧急使用授权。
+Gettr 账号
 
-前一篇：[为什么接种辉瑞新冠疫苗的弊大于利（五）](https://gnews.org/zh-hans/1869188/)
+![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
 
  
 
