--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,35 +1,27 @@
 ---
-title: MV版Hcoin To the Moon上线40天第26次位列澳门iTunes热门MV榜首
+title: 2022.1.17 文贵直播：我有一个梦想
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1872429/)
+`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1872623/)
 
-1/17/2021 郭文贵先生的歌曲Hcoin To the Moon的MV版视频上线40天第26次位列澳门iTunes热门音乐视频榜榜首，第33次位列前三名
+撰稿：Skagen
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图像-14.jpg)
+来源：网络
 
-* * *
+今天是马丁路德金的纪念日(MLK DAY)。他主张以非暴力的公民抗命方法争取非裔美国人的基本权利，而成为美国进步主义的象征。1963年，金在林肯纪念堂前发表了《我有一个梦想》的著名演讲，从而使美国成为了追求自由民主法治的人的天堂和目的地。郭先生称他改变了整个美国民主的进程，是人类黑暗历史中的一盏明灯。
 
-[【PDF 下载】Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record.pdf)[下载](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record.pdf)
+但是，中国能出一个马丁路德金吗？会一开始就用道德把你一切毁掉。在印尼残杀50万华人，共产党第一反应就是这些华人该杀。马丁路德金，能出现在印尼？能有一个有勇气的人坚持五年吗？中国人生生死死一百亿，没有出现马丁路德金的可能。
 
-* * *
+5年前，郭文贵先生带着推翻中共，带给中国法治民主的理想来到美国——这个世界上代表最高标准自由民主法治的国家，就遇上了旷日持久的法律超限战。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_1.jpg)
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_5.jpg)
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_7.jpg)
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_8.jpg)
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_9.jpg)
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_37.jpg)
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_38.jpg)
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_61.jpg)
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_62.jpg)
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_76.jpg)
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_82.jpg)
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_100.jpg)
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_107.jpg)
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record_118.jpg)
+郭先生选择了这个特殊的日子讲述自己在美国和共产党操纵的太盟案子的较量，意义非常深远。法院是美国最高法院，律师是美国顶尖律师。马丁路德金说，最可怕的是侮辱，羞辱，和时间的煎熬。郭先生对此感同身受。
+
+中国人生生死死上百年，从未有一人，在美国，用生命和鲜血，和中共斗争。但是，今天出现了郭文贵先生，他带着我们一起去体验战斗的经历。自由、民主、法治从来不会从天上掉下来，美国也不会施舍給我们华人，只有越来越多的华人站起来抗争，我们才能为自己和后代争取到我们的权利。
+
+来源：
+
+[郭文贵先生2022.1.17直播](https://gtv.org/video/id=61e56ad5a0fd8e5c735add1b)
 
 
-[【PDF 下载】Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record.pdf)[下载](https://assets.gnews.org/wp-content/uploads/2022/01/Monday-17-Jan-2022-Songs-by-Miles-Guo-iTunes-Charts-Ranking-Record.pdf)
-
-By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
