--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,33 +1,35 @@
 ---
-title: 中共政府确保对价值数十亿美元的NFT市场的控制权
+title: DC每日热点0117
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1872420/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1872591/)
 
-**编译：七龙珠**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip01-4.png)中国试图通过创建自己的平台来控制本国的 NFT 市场。 （路透社）
-比特币等加密货币的被禁和（非同质化代币）NFT的崛起，促使中共政府使用国营区块链系统来追踪交易。
+编辑：楚门门
+![](https://assets.gnews.org/wp-content/uploads/2022/01/F937AA39-D8AA-4156-81EE-70220224B769-scaled.jpeg)
+道琼斯指数 35911.81 ▼0.56%
+纳斯达克指数 14893.75 ▲0.59%
+WTI纽约原油CFD 83.757 ▼0.08%
+布伦特原油CFD 85.765 ▼0.34%
+标普50指数 2,974.37 ▼46.37%
+美元兑人民币 1USD=6.349 RMB
+美元兑港币 1USD=7.791 HKD
+国际黄金 1820.01 美元/盎司
+全球CCP病毒感染人数 329,125,885例
 
-中共国将在本月底前创建自己的NFTs（非同质化代币）基础设施，它将不与加密货币挂钩，而是依靠自己的区块链系统。这个区块链系统，不会像最初设想的那样是去中心化和匿名的，而是由国家控制的。
-
-NFTs也在中共国大放异彩。阿里巴巴、腾讯、百度和小米等中国科技巨头已经创建了自己的NFT，以利用这一趋势，但中国政府对这一系统持怀疑态度，为了避免中共政府的怀疑，他们将其更名为“数字货币”。NFTs一般通过以太坊的区块链进行交易，并使用其加密货币以太坊购买。这些信息区块链是高度安全的去中心化平台，允许其用户之间的互动，同时保持其匿名性。区块链也是其他加密货币的基础，但中共已经在国内禁止了这些虚拟货币，因为它要求其所有的互联网系统验证用户的身份，以便国家在“非法活动”时进行干预。
-
-**一个非常奇特的区块链**
-
-去年年中，中共国宣布推出区块链服务网络（BSN），这是一个在中共政府的支持下，由中共国科技公司和银行组成的财团建立的。这种国家管理的区块链允许公司和个人用户使用国家区块链应用程序，而不必使用私人区块链。
-
-现在，据香港媒体《南华早报》报道，中共国政府将为NFT引入一个新的数字基础设施，它被称为分布式数字证书（BSN-DDC）。这个系统使公司或个人更容易创建自己的用户档案或应用程序来管理NFT。然而，只有中共国的人民币将被允许用于交易。
-
-与世界其他地方不同的是，中共国科技公司铸造的NFT数字产品不会成为投机和资本外逃的工具，这一条件旨在让中共国监管机构放心，但是现在BSN-DDC要来改变游戏规则，虽然我们不知道他们是否能从NFT提出钱来，但我们知道，无论他们做什么，中共都会关注他们。
-
-**新闻来源**：[elconfidencial.com][El gobierno chino se asegura el control del millonario mercado de los NFT](https://www.elconfidencial.com/tecnologia/novaceno/2022-01-14/china-se-asegura-el-control-del-millonario-mercado-de-los-nft_3358621/)
-
-* * *
-
-***审核：Aries的星
-校对：信心满满
-发布：信心满满***
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-4.jpeg)
+1、白宫：拜登星期五将与岸田文雄视讯会晤 聚焦美日同盟
+2、中共官方数据：去年人口出生率创建国以来最低
+3、日本海岸警卫队：朝鲜发射疑似弹道导弹
+4、乌克兰周日指责俄罗斯涂毁乌政府网站，称这是莫斯科对这个曾经的前苏联共和国发动的“混合战争”的一部分
+5、昂山素季再判4年 缅甸军政府恐遭国际孤立，中共国的举动备受关注
+6、中共国春节前后释放国家战略石油储备为压低全球原油价格助力
+7、乔科维奇签证最终被拒离开澳大利亚 塞尔维亚总统欢迎网球巨星回家
+8、印度将向菲律宾出售布拉莫斯反舰导弹系统以抗衡中共国
+9、达沃斯线上开幕 习近平称欢迎各种资本在中共国合法依规经营
+10、北京第一宗Omicron确诊 疑接触境外邮寄感染
+11、刚果(布)修宪为延紧急状态期
+12、中共国官方公布的2021年数据显示，国内原煤生产继续呈增长趋势，“严格控制煤炭”承诺落空
+13、中华民国前空军副司令张延廷称台湾F16V坠机与共机频繁扰台有关
+14、加拿大保守党吁对中资紫金矿业收购一家加拿大锂矿公司的交易进行国家安全审查
+15、北京对冬奥会实施全球最严苛的要求，例如运动员必须接种疫苗否则面临长期隔离，每天都要进行病毒测试，不参加比赛或训练时要戴口罩
 
  
 
