--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,22 +1,35 @@
 ---
-title: 一定要采法律行动：对媒体攻击一定要反击(二)
+title: 法国阻止诺瓦克·德约科维奇（Novak Djokovic）参加五月法网公开赛
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1872757/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1872769/)
 
-#### 整理：雅典娜速记组
-编辑：陶子
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%80%E5%AE%9A%E8%A6%81%E9%87%87%E6%B3%95%E5%BE%8B%E8%A1%8C%E5%8A%A8%E5%AF%B9%E5%AA%92%E4%BD%93%E6%94%BB%E5%87%BB.002.jpeg)
-像刚才小斯基说的更吓人了，他编辑和断章取义，然后把小斯基定义为暴力分子，你打人呢，你看那个视频，有没有打人啊，是不是你小斯基打的呀，这更恐怖了。这就像要把**300**年飞飞跟一个上海的叫什么十大妓女 那个电影放在一起，然后十大妓女的照片就出来，飞飞照片就出来后这飞飞就成妓女啦。那人家飞飞以后永远就是这个**300**年飞妓啊，就是很恐怖的。这在媒体上有专业的行规，每句话都要澄清，他没有分割点，那就说话一样，没有点号逗号。这对小斯基的威胁真的是很大的。 昨天到现在我也想说的是因为他没有加上中文字幕，我的英文理解能力也不够，我就简单过了一下以后，我说坏了，这个**NICOLE**还小斯基现场这些抗议的人硬叉叉地跟我们扯在一起，他们生命有巨大的安危问题。小 斯基这不是开玩笑，你不是说你吃不下去饭，你应该很多理由吃不下去饭，而且要注意安防，而且你一定要采取法律行动，否则这个视频越传越广泛，对你威胁越来越大。
+编译： 真北007
+![](https://assets.gnews.org/wp-content/uploads/2022/01/03AB729E-0629-480E-BE17-5450B37F0E69.jpeg)图片来源：网络
+来自NATIONAL POST 一月十八日星期一的新闻报道：
 
-*发布：陶子*
+法国议会周日批准的疫苗通行证将要求人们持有疫苗接种证书才能进入体育场馆等公共场所。
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
-[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+根据法国议会周日批准的一项法律，法网参赛者将被要求接种疫苗，这引发了人们对世界排名第一的诺瓦克·德约科维奇参加大满贯赛事的质疑。
 
+德约科维奇在周末澳大利亚网球公开赛开始前被驱逐出澳大利亚，原因是他没有接种疫苗，而且政府机构不愿接受这位塞尔维亚人因赛事获得的医疗豁免。
+
+法国体育部周一表示，法国新的疫苗法不会豁免。 法律规定必须有疫苗接种证明才能进入公共场所，如体育场馆、餐馆、咖啡馆、电影院和一些公共交通工具。
+
+“规则很简单”，该部表示，“一旦法律颁布，疫苗通行证将应用在已经实施健康通行证的场所”。
+
+**点评：**
+
+**谁说体育不应涉及政治? 当全世界呼吁抵制“大屠杀北京冬奥会”时，中共是怎么说的？此次德约科维奇事件我认为是一件好事，虽然他遭受很多，但值得。它让全世界看到，这就是一纯粹政治事件和较量。虽然现在正义的力量暂时受挫，但邪恶势力的政府也暴露了他们的无知、无能、无耻。一切都是天意，期待着未来的一幕幕大戏！**
+
+原文链接：
+
+[https://nationalpost.com/news/world/france-bars-novak-djokovic-from-french-open-in-may](https://nationalpost.com/news/world/france-bars-novak-djokovic-from-french-open-in-may)
+
+发布：歪桑
+
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2150925F-C440-455E-A2B3-AEC0D3D4A055.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
