--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,18 +1,27 @@
 ---
-title: 扬帆每日速递 2022年1月17日版（1）
+title: 七哥谈彭帅视频事件（二）
 ---
-`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1872756/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1872768/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/封面简1.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/2022-1-17海报1简_page-0001.jpg)
-**加拿大温哥华扬帆农场 海报组**
+#### 整理：雅典娜速记组
+编辑：陶子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%83%E5%93%A5%E8%B0%88%E5%BD%AD%E5%B8%85%E8%A7%86%E9%A2%91%E4%BA%8B%E4%BB%B6%EF%BC%88%E4%BA%8C%EF%BC%89-.jpeg)
 
-素材提供战友：从来多难不兴邦、Revelation熙攘、文敏
+```
+由当时北京市国安局。啊，就是北京市公安局，是相当于小半个安全部，你千万记住安全部编制3000多人，北京市安全局就上千人啊。他是在北京力保安全, 然后第3才轮到上海局，北京市安局的紧急处理小组来处理这个事情。及时的啊。对在微博上进行所有的信息相关链接啊发酵处理马上对彭帅的家人包括什么表亲表弟的全部采取措施。那当然他爸他妈必须的被看起来啊，马上弄起来进行，全面了解之后迅速向中央啊做出了紧急处理。2条方案，第一个这件事情的批政治评估会对共产党的冬奥会带来剧烈的影响，会被所谓的西方反华势力所利用啊。后果不堪想象。
+```
 
-编辑：文敏
 
-发布：风起云间（文敏）
+第二彭帅的事情说的是事实，而且彭帅很有可能在这个一系列的说出来以后还会有更多的行动。最后重要作出决定啊，不惜一切代价，这原话啊，这都是原话，这是中国不惜代价。不考虑任何后果。就是这彭帅死100回都不拉倒啊，必须将这件事情在冬奥会前彻底的在全世界的评析。然后让各个相关部门马上启动紧急机制。共产党这个紧急机动机制，你一定别小看了，就像潜伏的人啊， 你在VICE, 你在Hpay，是不是啊？你像姚明啊，他是不同的人。对付你小斯基啊，就不用大炮了，是吧。最后呢，够了就不用大炮了。对付郭文贵， 就需要单伟健了，是吧，就这样大炮就来了。
 
-海报图片设计：飞天面、 Shuang
+*发布：陶子*
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
+[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
