--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,31 +1,23 @@
 ---
-title: 澳法院驳回德约科维奇因未接种疫苗而被迫离境的上诉请求
+title: 七哥谈彭帅视频事件(一)
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1872751/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1872762/)
 
-**撰稿：日本东京方舟农场  海星**
+#### 整理：雅典娜速记组
+编辑：陶子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%83%E5%93%A5%E8%B0%88%E5%BD%AD%E5%B8%85%E8%A7%86%E9%A2%91%E4%BA%8B%E4%BB%B6%EF%BC%88%E4%B8%80%EF%BC%89-.jpeg)
+彭帅这个事情出来那个视频我反正也看了，刚才那个里头提到了好多那个要点, 就是彭帅作为一个其实在世界上我也去查过她有几个前任，从2009年开始有很多的这个她都是外籍的，这个coach他的教练，但是所以说他要说他英语不能自己写一个很简短的文章说明问题的话，这个我也不太相信，而且她在那个现场真的是。闪烁其词，好几次听不见。这么这么年轻的一个人。我不相信她有听力问题。 还有一个我觉得最奇怪的就是一个北京人，其实她是湖南人。她跑到上海跟一帮上海人这个姚明啊，王励勤呀，还有另外一个帆船的女运动员，也都是上海 人。一起去看比赛，没有叫一个北京的伙伴或者那个闺蜜去，这个我觉得也是很蹊跷的一件事情，而且最重要的是采访是让新加坡的媒体采访并没有让那你的南华早报呢？你国内的这些所有的其他的媒体，为什么不能采访他?
 
-1月16日，澳大利亚法院驳回了世界知名网球运动员诺瓦克·德约科维奇因未接种疫苗而遭到该国政府取消签证的上诉请求。塞尔维亚人德约科维奇的目标是创纪录的第21个大满贯冠军。
+对，就反正这个里头猫腻很多，这个一看就是假的，我想请所有的其他的嘉宾发发表一下你们的看法。那等一下啊，小福利发表之前，我先给大家建立一个情报啊，你不再说，嗯，要不然说完以后咱们就就说远了，我先给大家说一下，感谢大家做的这个视频，我现在今天咱们继续吃播以后严肃地谈这个话题呢，就跟今 天的话题非常接近啊，我再次重申啊彭帅的事件，我们现在了解的非常清楚。 这是有国安委员会叫紧急处理小组亲自来处理的案件。这是我今天第一次说。
 
-据《产经体育新闻》报导，澳大利亚法院当日驳回了塞尔维亚网球运动员德约科维奇的上诉请求，维持了当地政府的决定，即取消其签证，并强迫他离开澳大利亚。同时，法院规定德约科维奇在未来三年内不得进入澳大利亚，并被禁止参加明年的澳大利亚网球公开赛。
+*发布：陶子*
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-252.jpg)图片来源：路透社
-
-据悉，听证会结束后，德约科维奇被带到了一个非法移民拘留中心，等待离开澳大利亚的飞机。
-
-该报导指出，德约科维奇于1月5日抵达墨尔本，计划参加1月17日在澳大利亚举行的网球公开赛。然而，该国政府于1月6日取消了他的签证，并声称如果未接种疫苗的德约科维奇留下来，”可能会助长国内的反疫苗情绪”。随后，德约科维奇因不满该决定，将政府告上法庭。
-
-*参考链接：*
-
-[ジョコビッチ、国外退去　全豪テニス出場できず](https://www.sanspo.com/article/20220116-K7ZMDGXRGBKSJBTM7YRNVC7TYE/)
-
-* * *
-
-*素材采编：海星*
-
-*编辑：文顺*
-
-*发布：Ranting*
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
+[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
