--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,30 +1,21 @@
 ---
-title: 七哥谈共产党有组织的共享财富（2022-01-12摘录）
+title: 一定要采法律行动：对媒体攻击一定要反击(二)
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1872750/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1872757/)
 
-文编：Hima
-听写：叮叮
-视频：七哥
+#### 整理：雅典娜速记组
+编辑：陶子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%80%E5%AE%9A%E8%A6%81%E9%87%87%E6%B3%95%E5%BE%8B%E8%A1%8C%E5%8A%A8%E5%AF%B9%E5%AA%92%E4%BD%93%E6%94%BB%E5%87%BB.002.jpeg)
+像刚才小斯基说的更吓人了，他编辑和断章取义，然后把小斯基定义为暴力分子，你打人呢，你看那个视频，有没有打人啊，是不是你小斯基打的呀，这更恐怖了。这就像要把**300**年飞飞跟一个上海的叫什么十大妓女 那个电影放在一起，然后十大妓女的照片就出来，飞飞照片就出来后这飞飞就成妓女啦。那人家飞飞以后永远就是这个**300**年飞妓啊，就是很恐怖的。这在媒体上有专业的行规，每句话都要澄清，他没有分割点，那就说话一样，没有点号逗号。这对小斯基的威胁真的是很大的。 昨天到现在我也想说的是因为他没有加上中文字幕，我的英文理解能力也不够，我就简单过了一下以后，我说坏了，这个**NICOLE**还小斯基现场这些抗议的人硬叉叉地跟我们扯在一起，他们生命有巨大的安危问题。小 斯基这不是开玩笑，你不是说你吃不下去饭，你应该很多理由吃不下去饭，而且要注意安防，而且你一定要采取法律行动，否则这个视频越传越广泛，对你威胁越来越大。
 
-来源：郭先生2022-01-12直播10：23：10摘录
+*发布：陶子*
 
-这就是为什么这个Isabel Yeung疯狂在这个时候，共产党是有组织的，然后第一个海外华人，美国这500万也好，1000万也好，还有日本的草根、还有在欧洲，澳大利亚，你们都是要被共享财富，因为你们占据了太多的财富，你就是当年的德国的犹太人，因为你们没有感受这个，你走着看，半年内就快让你感受到。青青草原不会再恨共产党在哈萨克族村做什么，你会恨的是现在正在你身边做什么。我再说下去，我怕你们几个都尿了。
-
-校对：HimaFaFA
-发布：HimaBoy
-![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
-欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
-
-**关注我们**
-
-Discord 账号
-
-![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
-
-Gettr 账号
-
-![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
+[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
