--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党对郭文贵先生法律超限战和身心灵打击
+title: 共产党的法律超限战
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1875426/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1875618/)
 
 台灣寶島農場
 
