--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: Gclub Gfashion HCN HDO 生态链已经形成流通
+title: 我们要尊重战友的付出
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879342/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879406/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
