--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,25 +1,32 @@
 ---
-title: 【速报】东京今日确认感染7377例,破历史新高!
+title: 澳网对德约科维奇的“烦扰”表示遗憾 承诺进行审查
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1879248/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1879318/)
 
-撰稿：东京樱花团/待命（文晓）
+编译： Jenny Ball
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/【速报】东京今日确认感染7377例破历史新高.png)（图片源自本文链接）
+![](https://assets.gnews.org/wp-content/uploads/2022/01/屏幕截图-2022-01-19-104432-1.jpg)图片来源:washingtonpost.com
 
-1月19日TBS新闻消息：东京都政府今天宣布，7377人感染了中共病毒(新冠病毒Covid-19)。今日感染人数比上周三的2198人增加了两倍，大幅超过病毒大流行以来的，去年8月13日的最高单日感染人数5908人。
+诺瓦克·德约科维奇（Novak Djokovic）让澳大利亚人远远落在其身后，澳大利亚网球协会也希望继续前进，试图专注于澳网开赛的比赛，但这项运动排名第一的男子球员，因为没有接种冠状病毒疫苗而被驱逐出境，成了头条新闻和评论。
 
-在这些感染者中，3408人接种了两剂疫苗，1836人没有接种疫苗，2133人未提供接种疫苗状况。医院原计划确保病毒感染者使用的6919个床位已被占用1793个。
+该组织的董事会在德约科维奇引起国际关注时一直保持沉默，在周二发表的一份声明中指出，“我们尊重移民部长的决定和澳大利亚联邦法院周末的裁决”，并补充说“开始在全球大流行期间，一场重大的国际体育赛事继续进行，并挑战我们所有人，这对所有利益相关者提出了极高的要求。”
 
-入院感染者中，符合东京都制定的重症标准者10人。有两例死亡。
+董事会及其成员支持该组织的首席执行官兼锦标赛总监克雷格·泰利（Craig Tiley），承认“最近的事件让每个人都分心，我们对所有球员的影响深表遗憾。
 
-信息来源：[【速報】東京都で新たに7377人感染　去年8月13日（5908人）を大幅に上回り過去最多（TBS系（JNN）） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/ed8891b9bb649eb1ea14108e84b506f1b52e6701)
+“总是有教训要学习，我们将审查我们准备和实施的各个方面，为我们的计划提供信息——就像我们每年所做的那样。”
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/二维码.jpg)
+尽管德约科维奇未接种疫苗，失去了他打破与罗杰·费德勒和拉斐尔·纳达尔的平局，争夺职业生涯最多的大满贯男单冠军头衔，但他回到了塞尔维亚受到了热烈欢迎。澳大利亚并不是唯一一个对允许未接种疫苗的旅行者入境有严格规定的国家。大满贯赛程上的下一个是法网，而法国最新的疫苗接种规则，也可能让德约科维奇面临挑战。法网将于 5 月 22 日开始，届时限制可能会放宽。
 
+评论：当人们自顾门前雪时，总是会说：体育与政治无关，但是体育运动本身不是锻炼意志和人格的过程吗？雪崩时每一片雪花都有责任！德约科维奇是在捍卫人的自由权利！上天会眷顾勇敢正义的人们，德约科维奇没有当mRNA试验老鼠，就是上天最大的眷顾！
 
+新闻来源:[washingtonpost.com] [Tennis Australia ‘deeply’ regrets the Novak Djokovic ‘distraction’ as it promises a review](https://www.washingtonpost.com/sports/2022/01/18/novak-djokovic-tennis-australia-statement/?utm_campaign=wp_post_most&amp;utm_medium=email&amp;utm_source=newsletter&amp;wpisrc=nl_most&amp;carta-url=https%3A%2F%2Fs2.washingtonpost.com%2Fcar-ln-tr%2F35ca450%2F61e6f9229d2fda14d7f965dc%2F5e2dde419bbc0f6326309bfd%2F42%2F72%2F61e6f9229d2fda14d7f965dc)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-4.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
