--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,29 +1,33 @@
 ---
-title: 大直播后记：美国之音419断播门幕后密辛
+title: 俄罗斯调动数目不详军队，白宫警告随时入侵乌克兰
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879391/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1879469/)
 
-整理：雅典娜速记组
-编辑：Rianna
+#### 撰稿：彩虹
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/H51Z44@2ZCD5TTIBJ6K.png)图片来源：雅典娜设计组
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-4-6.jpg)图片来源：美联社
+1月18日，《新闻极限》引述《美联社》文章内容，周二，官员们表示，俄罗斯正从该国远东地区派遣数量不详的部队到白俄罗斯进行大型军演，在西方担心计划入侵的情况下，这一部署将进一步加强俄罗斯在乌克兰附近的军事实力。
 
+在紧张局势飙升之际，白宫警告说，俄罗斯可能在“任何时候”攻击其邻国。
 
-郭文贵先生4月19号在美国参加美国之音VOA大直播，孙力军4月18号提了官司，3月份刘彦平见面。 他跟那个刘彦平沟通，就是警告我不要参加VOA。然后，孙立军就一再警告郭文贵，要敢参加VOA,让你在全世界上没有任何生存的机会，会拿走你家族和你的一切的东西，让你睡在马路上。而且明确告知，PAG太平联盟会让郭文贵像疯狗一样在大街上，而且找不到任何生存的地方。这就孙立军的原话，有这么偶然吗？ 418和419，王歧山和海航的事情，郭先生要爆料的时候，他就出来了。 最关键郭文贵那天爆料的当事人王岐山，海航就PAX的合作者和股东。
+周二，美国再次强调其担忧，白宫新闻秘书珍·普萨基(Jen Psaki)将俄罗斯军队进入白俄罗斯的行动描述为“极其危险局势”的一部分。她说：“我们现在处于一个俄罗斯随时可能对乌克兰发动攻击的阶段”。
 
-而2015年宣布要让郭文贵倾家荡产，拿走一切，并把同事家人抓走的就是吴征，又是PAX的最大投资者和合作股东。腾讯的音乐，腾讯音乐百分之百的股东曾经是PAX，而且吴征在里边串通起来，包括这个律师，跟他多次打交道。 Edward Moss在北京、上海都有律师事务所，在北京的银泰，在上海的金融区。这个律师事务所在中国有营业执照，这些律师有多么的夸张，跟马云和阿里巴巴，他原来的叔叔就是跟马云有合作的，跟共产党有合作， 马云又是攻击我们的人。包括这个法官是一个资深的法官，曾经带着律师事务所，就是跟马云上市的代表律师务所，他本人就是参与这个案子。
+而俄罗斯国防部副部长亚历山大·福明（Alexander Fomin）说，与白俄罗斯的联合演习将涉及对外部威胁的联合反应。他说需要到2月9日才能为2022年“盟军决心”（Allied Resolve）演习完成武器和人员的部署，预计演习将于2月10日至20日举行。
 
-今天郭文贵团队面对这个案子的时候，再回头看2017年对郭先生最大的伤害是谁？ 是美国几百年建国历史当中，没有出现过1例，美国司法部被外国机构行贿和腐败的案例。当时就是PAX的投资人，合伙人和海航以及共产党王岐山，还有更多的人。包括PAX在中间就是这个太平联盟全面参与的，还有单伟建。哈根巴森司法部律师行贿副部长级别，在中国驻华盛顿大使馆跟中国大使见面，吴征去游说班农将我遣返，涉及到美国大佬赌场大佬史蒂芬文、艾迪博迪，亲自见孙立军见王岐山的妮克拉姆戴维斯—中国派在美国的双胞胎间谍，跟今天的英国议会间谍是一样的。
+福明没有说有多少部队将参与演习，但提到俄罗斯将在白俄罗斯部署十几架苏-35战斗机和几个防空部队。这一部署将加强已经在乌克兰附近集结的约10万名配备坦克和其他重型武器的俄罗斯军队。
 
-资料来源：郭先生GTV和盖特直播视频。
+在与外国武官的会议上，福明说：“可能会出现这样的情况，即区域部队集团的力量和手段将不足以确保联盟国家的可靠安全，我们必须准备加强它。我们已经与白俄罗斯达成谅解，有必要调动全部军事潜力进行联合防御”。
 
-发布：  tianzhihuan
+对此，白俄罗斯的专制总统亚历山大·卢卡申科（Alexander Lukashenko）则说，联合演习将在白俄罗斯西部边境进行，也将在该国南部与乌克兰接壤的地方进行。
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+面对如此紧张的局势，周二，乌克兰国防部表示，它已经收到来自英国的一批反坦克武器，并指出这些武器将有助于“加强我们的防御能力”,但没有说交付了多少武器。乌克兰官员警告说，俄罗斯可能从各个方向对乌克兰发动攻击，包括从其盟友白俄罗斯。
+
+与此同时，乌克兰国防部还表示，它正在加快组建后备营部队的工作，以便迅速部署13万名新兵，扩大该国24.6万人的军队。来自新组建的国土防御部队的各营可能包括18至60岁的预备役军人。
+
+**新闻来源**
+
+[Russia Moves More Troops Westward Amid Ukraine Tensions](https://www.newsmax.com/newsfront/russia-ukraine/2022/01/18/id/1052916/)
 
  
 
