--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: Gfashion不是为了赚钱为了让 HCN HDO Gclub 赚钱
+title: 喜马拉雅地理位置的重要性
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879367/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879462/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
