--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,36 +1,29 @@
 ---
-title: 春节临近兲朝迎来妓鸣狗盗建裆伟孽妓女时代等冷嘲热讽
+title: 大直播后记：美国之音419断播门幕后密辛
 ---
-`mary202064` [轉載自GNews](https://gnews.org/zh-hans/1879321/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879391/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/央视大裤衩_副本-1.jpg)
-春节气氛将近，近日有网友给大裤衩写对联，
+整理：雅典娜速记组
+编辑：Rianna
 
-上联：戏子、婊子、骗子、聋子、瞎子、傻子、败家子，子子齐聚论发展；
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/H51Z44@2ZCD5TTIBJ6K.png)图片来源：雅典娜设计组
 
-下联：贪官、赃官、淫官、裸官、昏官、庸官、世袭官，官官相护议新政。
 
-一副对联，字字辛辣，精准定位，写出这个红朝的腐败和虚伪，直接打脸这个独裁政权的黑暗和堕落。
+郭文贵先生4月19号在美国参加美国之音VOA大直播，孙力军4月18号提了官司，3月份刘彦平见面。 他跟那个刘彦平沟通，就是警告我不要参加VOA。然后，孙立军就一再警告郭文贵，要敢参加VOA,让你在全世界上没有任何生存的机会，会拿走你家族和你的一切的东西，让你睡在马路上。而且明确告知，PAG太平联盟会让郭文贵像疯狗一样在大街上，而且找不到任何生存的地方。这就孙立军的原话，有这么偶然吗？ 418和419，王歧山和海航的事情，郭先生要爆料的时候，他就出来了。 最关键郭文贵那天爆料的当事人王岐山，海航就PAX的合作者和股东。
 
-更有好事网友，在网上发推求横批，各种精彩的横批纷至沓来，醒脑清神，
+而2015年宣布要让郭文贵倾家荡产，拿走一切，并把同事家人抓走的就是吴征，又是PAX的最大投资者和合作股东。腾讯的音乐，腾讯音乐百分之百的股东曾经是PAX，而且吴征在里边串通起来，包括这个律师，跟他多次打交道。 Edward Moss在北京、上海都有律师事务所，在北京的银泰，在上海的金融区。这个律师事务所在中国有营业执照，这些律师有多么的夸张，跟马云和阿里巴巴，他原来的叔叔就是跟马云有合作的，跟共产党有合作， 马云又是攻击我们的人。包括这个法官是一个资深的法官，曾经带着律师事务所，就是跟马云上市的代表律师务所，他本人就是参与这个案子。
 
-让人大呼过瘾。
+今天郭文贵团队面对这个案子的时候，再回头看2017年对郭先生最大的伤害是谁？ 是美国几百年建国历史当中，没有出现过1例，美国司法部被外国机构行贿和腐败的案例。当时就是PAX的投资人，合伙人和海航以及共产党王岐山，还有更多的人。包括PAX在中间就是这个太平联盟全面参与的，还有单伟建。哈根巴森司法部律师行贿副部长级别，在中国驻华盛顿大使馆跟中国大使见面，吴征去游说班农将我遣返，涉及到美国大佬赌场大佬史蒂芬文、艾迪博迪，亲自见孙立军见王岐山的妮克拉姆戴维斯—中国派在美国的双胞胎间谍，跟今天的英国议会间谍是一样的。
 
-以下是人民群众贡献的闪亮智慧：
+资料来源：郭先生GTV和盖特直播视频。
 
-横批类型一：直接讽刺
+发布：  tianzhihuan
 
-裤衩内外、狼狈为奸、沆瀣一气、魑魅魍魉、蛇鼠一窝、一丘之貉、同流合污、墙国万岁、藏污纳垢、妓鸣狗盗、全是意淫、建裆伟孽、妓女时代、厚颜无耻、祸国殃民、家国万碎、鬼魅横行、助纣为虐、人间百丑、绝世一蹲、粉墨登场、皇帝新衣、乌合之众、CCAV、血腥中共、共产子宫、太监治国、歪理邪说、一派胡言、共产恶政
-
-横批类型二：反讽戏虐
-
-人才济济、天下无敌、天朝盛世、命运共同体、盛世无双、今日中国、大国崛起、为人民服务、中国特色、特色中国。
-
-这些网友贡献的横批，一针见血、字字珠玑，比之于洗脑喉舌、恶魔帮凶央视的言不由衷、满口谎言、指鹿为马、黑白颠倒，文字的质量不知道好多少倍？从这些文字又何尝听不出中国民众苦共已久，对中共发自内心的反感和厌恶？中共民心尽失，难道政权还能长久持续？
-
-作者：华盛顿DC  海阔天空
-
-查看作者更多文章，请点击——[中文简体](https://gnews.org/zh-hans/author/mary202064/)、[中文繁體](https://gnews.org/zh-hant/author/mary202064/)、[English Articles](https://gnews.org/author/mary202064/)
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
