--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,33 +1,24 @@
 ---
-title: 港共政府甩锅病毒给宠物 无差别扑杀行为被强烈谴责
+title: 中共要求外国冬奥会人员安装的手机应用存在安全漏洞
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1879223/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1879302/)
 
-整理编辑：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1486.png)[图片来源](https://news.ltn.com.tw/news/politics/breakingnews/3536877)
-香港一家宠物店日前有仓鼠采检中共病毒（新冠病毒COVID-19）呈阳性反应，港共政府因而决定扑杀数以百计的小动物，19日面临动物保护团体的强烈反弹。
+#### 撰稿：彩虹
 
-跟中共国大陆一样，香港在防范中共病毒疫情上，维持采取严格的“清零”政策，透过追踪接触者、普筛、严格隔离与延长保持社交距离规定等，根绝病毒踪迹。
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-3-10.jpg)图片来源：国会山报
+1月18日，《新闻极限》报道，运动员在中共国参加冬奥会时必须使用强制性手机应用程序，用来报告健康和旅行数据，但多伦多大学网络安全监督机构“公民实验室”对其研究报告显示，该应用程序存在严重的加密漏洞。
 
-然而，最新措施将矛头指向仓鼠等小动物，包括栗鼠、兔子与天竺鼠等；港共当局18日表示，将“采取预防措施”，扑杀这些动物。
+据该网络安全组织称，该应用程序的某些部分将传输中共病毒（COVID-19）测试结果、旅行信息和其他个人数据，但未能验证加密传输中使用的签名，或者根本就没有加密数据。
 
-Little Boss宠物店贩售的仓鼠日前验出对中共病毒Delta变异株呈阳性反应。港共当局“强烈建议”在上月22日后购买仓鼠的民众，交出宠物让当局扑杀。
+据《纽约时报》报道，现在处于计划的最后阶段，中共国通过将冬奥会参与者和中国普通民众分开来控制中共病毒（COVID-19）的传播。这款名为MY2022的应用程序旨在加强活动的预防措施，以便在出现任何疫情时可以追踪联系人。
 
-香港各地的动物爱好者气得跳脚，他们在请愿平台Change.org发起的连署书，在一天之内取得2万3000多个连署；爱护动物协会（Prevention of Cruelty to Animals）也谴责这项决定。
+公民实验室在其报告中说，它在12月3日向北京组委会通报了该应用程序的安全缺陷，但没有收到回应。该应用程序一月份的软件更新并没有修复加密问题，这可能使该应用程序违反了中共国新颁布的个人数据保护法，以及谷歌和苹果在其商店中列出的应用程序所需遵守的隐私政策。
 
-爱护动物协会19日在发给法新社的声明中说：“香港最近宣布将处理2000多只动物，令爱护动物协会感到震惊与关切。我们敦促饲主不要惊慌或弃养宠物。”
+**新闻来源**
 
-港共当局18日说，验出中共病毒阳性的生物据信是自荷兰引进。
+[Watchdog: Winter Olympic Athletes App Has Serious Encryption Flaws](https://www.newsmax.com/us/app-athletes-encryption-flaws-winter-olympics/2022/01/18/id/1052927/)
 
-香港政府食物及卫生局局长陈肇始在记者会上说：国际上，没有证据显示宠物会把中共病毒传给人类，但…为了防范任何传染媒介，将采取预防措施。
-
-港共当局说，在Little Boss宠物店售出的约1000只动物，以及在全港数十家宠物店售出的另1000只动物，全都将遭到扑杀。香港也禁止进口小型哺乳动物。
-
-消息来源：[仓鼠验新冠呈阳性香港下杀鼠令引反弹](https://tw.news.yahoo.com/%E5%80%89%E9%BC%A0%E9%A9%97%E6%96%B0%E5%86%A0%E5%91%88%E9%99%BD%E6%80%A7-%E9%A6%99%E6%B8%AF%E4%B8%8B%E6%AE%BA%E9%BC%A0%E4%BB%A4%E5%A4%A7%E9%87%8F%E3%80%8C%E4%BA%BA%E9%81%93%E6%AF%80%E6%BB%85%E3%80%8D%E5%BC%95%E5%8F%8D%E5%BD%88-072545844.html)
-
-*校对：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
