--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,29 +1,30 @@
 ---
-title: 【中日财经爆】2025年日本偿债成本将超过30万亿日圆
+title: 美国政府基于国家安全原因正在审查阿里巴巴云服务
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1879204/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1879257/)
 
-整理编辑：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1487.png)[图片来源](https://cn.nikkei.com/politicsaeconomy/efinance/44688-2021-05-11-09-47-57.html)
-路透社1月19日报道，日本财务省定于本月晚些时候发布的预测草案显示，如果利率超出预期一个百分点，日本的偿债成本将在2025财年首次超过30万亿日圆(2,615.5亿美元)。
+#### 撰稿：彩虹   
 
-财务省在其为期五年的年度估算中预计，假设利率为1.3%，下一财年的偿债成本为24.3万亿日圆，2025财年将达到28.8万亿日圆。
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-2-17.jpg)图片来源：PanDaily
+1月18日，《新闻极限》引述《路透社》文章，据三位知情人士透露，拜登政府正在审查电子商务巨头阿里巴巴的云业务，以确定它是否对美国国家安全构成风险。
 
-如果利率上升到2.3%，那么预估偿债成本将在2025财年增加至32.5万亿日圆。该草案将提交给众议院预算委员会讨论。假设利率升至3.3%，偿债成本则将达到36.3万亿日圆，教育、国防和公共工程等政策相关领域所需的支出将会吃紧。
+这些人说，调查的重点是该公司如何存储美国客户的数据，包括个人信息和知识产权，以及中共国政府是否可以获得这些数据。其中一位人士说，中共国政府有可能破坏美国用户对其存储在阿里巴巴云上的信息的访问，这也是一个问题。
 
-最新的估计数据将充分体现日本央行强有力的货币宽松政策所带来的好处，该政策有效地为公共债务提供了资金。日本的公共债务规模约为该国五万亿美元经济规模的两倍。
+美国监管机构最终可能会选择迫使该公司采取措施，减少云计算业务带来的风险，或者完全禁止国内外的美国人使用该服务。
 
-尽管债务堆积如山，但由于日本央行的超低利率政策将借贷成本保持在极低水平，日本政府仍可以花费大量的刺激资金。日本多年来的大规模财政刺激措施给农村地区留下了使用率很低的基础设施，同时也带来巨额债务和偿债成本，目前偿债成本占今年创纪录107.6万亿日圆政府预算的四分之一。
+据上述三人中的一人和一位前川普政府官员称，前总统川普的商务部对阿里巴巴的云业务感到担忧，但拜登政府在1月上任后启动了正式审查。
 
-根据预期的3%的名义增长率，2025财年的预算将升至创纪录的111.6万亿日圆。税收收入将达到创纪录的72.1万亿日圆，非税收收入为5.6万亿日圆，而新的政府债务将降至33.9万亿日圆。
+商务部发言人表示，该机构不对”交易审查的存在与否”发表评论，中共国驻华盛顿大使馆也没有对评论请求作出回应。
 
-鉴于过去两年与中共病毒疫情有关的几轮债务发行，偿债成本的增幅将略高于政府支出的增加。
+阿里巴巴拒绝发表评论。但在最近的年度报告中，它确实对在美国的运营提出了类似的担忧，称与阿里巴巴有合同的美国公司“可能被禁止继续与我们做生意，包括履行涉及我们……云服务的协议下的义务”。
 
-消息来源：[利率上升或使日本偿债成本在2025财年首次超过30万亿日圆–预测草案](https://www.reuters.com/article/japandebt-servicing-0119-wedn-idCNKBS2JT04Q)
+报道说，2020年8月，川普政府针对包括阿里巴巴在内的中共国云计算供应商发出警告，“以防止美国公民最敏感的个人信息和我们企业最宝贵的知识产权……被存储和处理在我们的外国对手可以访问的云端系统上”。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+**新闻来源**
+
+[US Examining Alibaba’s Cloud Unit for National Security Risks: Sources](https://www.newsmax.com/newsfront/us-alibaba-cloud-national-security-risk/2022/01/18/id/1052795/)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
