--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,28 +1,33 @@
 ---
-title: CDC因为隐瞒了“V-Safe”新冠疫苗安全跟踪系统的数据而被起诉
+title: 港共政府甩锅病毒给宠物 无差别扑杀行为被强烈谴责
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1879161/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1879223/)
 
-##### 翻译：不要代表我Kari
-校对：枳实
-剪辑|字幕：Biggod
-编辑：Mttfly
+整理编辑：东京樱花团/peterwong
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1486.png)[图片来源](https://news.ltn.com.tw/news/politics/breakingnews/3536877)
+香港一家宠物店日前有仓鼠采检中共病毒（新冠病毒COVID-19）呈阳性反应，港共政府因而决定扑杀数以百计的小动物，19日面临动物保护团体的强烈反弹。
 
-美国联邦政府规定75年后才能解密辉瑞疫苗数据及文件。联邦政府还构建了V-safe系统，旨在跟踪新冠疫苗对人体造成的伤害。新冠疫苗推广者们承诺使疫苗数据公开，他们向公众全面推出这种实验性的疫苗，但却不允许公众获取数据。就在过去的几周，美国疾病控制与预防中心（CDC）因拒绝公开“V-safe”新冠疫苗不良反应数据而被起诉。
+跟中共国大陆一样，香港在防范中共病毒疫情上，维持采取严格的“清零”政策，透过追踪接触者、普筛、严格隔离与延长保持社交距离规定等，根绝病毒踪迹。
 
-视频链接：[ICAN has filed another lawsuit against the CDC, this time for withholding data from the ‘V-Safe’ Covid-19 vaccine safety tracking system.](https://www.bitchute.com/video/s40ElKt1Jn15/)
+然而，最新措施将矛头指向仓鼠等小动物，包括栗鼠、兔子与天竺鼠等；港共当局18日表示，将“采取预防措施”，扑杀这些动物。
 
-*发布：Mttfly*
-**
-更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+Little Boss宠物店贩售的仓鼠日前验出对中共病毒Delta变异株呈阳性反应。港共当局“强烈建议”在上月22日后购买仓鼠的民众，交出宠物让当局扑杀。
 
+香港各地的动物爱好者气得跳脚，他们在请愿平台Change.org发起的连署书，在一天之内取得2万3000多个连署；爱护动物协会（Prevention of Cruelty to Animals）也谴责这项决定。
 
+爱护动物协会19日在发给法新社的声明中说：“香港最近宣布将处理2000多只动物，令爱护动物协会感到震惊与关切。我们敦促饲主不要惊慌或弃养宠物。”
 
+港共当局18日说，验出中共病毒阳性的生物据信是自荷兰引进。
+
+香港政府食物及卫生局局长陈肇始在记者会上说：国际上，没有证据显示宠物会把中共病毒传给人类，但…为了防范任何传染媒介，将采取预防措施。
+
+港共当局说，在Little Boss宠物店售出的约1000只动物，以及在全港数十家宠物店售出的另1000只动物，全都将遭到扑杀。香港也禁止进口小型哺乳动物。
+
+消息来源：[仓鼠验新冠呈阳性香港下杀鼠令引反弹](https://tw.news.yahoo.com/%E5%80%89%E9%BC%A0%E9%A9%97%E6%96%B0%E5%86%A0%E5%91%88%E9%99%BD%E6%80%A7-%E9%A6%99%E6%B8%AF%E4%B8%8B%E6%AE%BA%E9%BC%A0%E4%BB%A4%E5%A4%A7%E9%87%8F%E3%80%8C%E4%BA%BA%E9%81%93%E6%AF%80%E6%BB%85%E3%80%8D%E5%BC%95%E5%8F%8D%E5%BD%88-072545844.html)
+
+*校对：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
