--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,36 +1,27 @@
 ---
-title: 法国Neoen公司在南澳大利亚建设大型风力发电设施
+title: CDC因为隐瞒了“V-Safe”新冠疫苗安全跟踪系统的数据而被起诉
 ---
-`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/1879143/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1879161/)
 
-#### 【雅典娜快讯】，紧贴时代脉搏
+##### 翻译：不要代表我Kari
+校对：枳实
+剪辑|字幕：Biggod
+编辑：Mttfly
 
-整理：Eileen（围剿维尼熊）
-编辑：小红帽
+美国联邦政府规定75年后才能解密辉瑞疫苗数据及文件。联邦政府还构建了V-safe系统，旨在跟踪新冠疫苗对人体造成的伤害。新冠疫苗推广者们承诺使疫苗数据公开，他们向公众全面推出这种实验性的疫苗，但却不允许公众获取数据。就在过去的几周，美国疾病控制与预防中心（CDC）因拒绝公开“V-safe”新冠疫苗不良反应数据而被起诉。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/kuaixun-1.png)图片来源：雅典娜设计组
+视频链接：[ICAN has filed another lawsuit against the CDC, this time for withholding data from the ‘V-Safe’ Covid-19 vaccine safety tracking system.](https://www.bitchute.com/video/s40ElKt1Jn15/)
 
-
-根据《国际新能源网》1月19日报道，由外媒引述，总部位于法国的可再生能源开发商和独立电力生产商(IPP)Neoen公司日前表示，已经开始建设在南澳大利亚中北部地区的Goyder Renewables Zone园区中的装机412MW风力发电设施。
-
-该风力发电设施名为Goyder South Stage 1，将安装由通用电气可再生能源公司制造的75台风力涡轮机。
-
-该园区项目计划安装和部署1200MW风力发电设施、600MW太阳能发电设施和900MW电池储能系统。
-
-南澳大利亚能源和矿业部长Dan VanHolst Pellekaan表示：“Goyder South Stage 1项目开工建设是一个关键的里程碑，这个项目集合了大规模的风力发电设施、太阳能发电设施和电池储能系统，标志着南澳大利亚清洁能源转型的一个重要时刻”。
-
-据悉，Neoen公司与澳大利亚首都领地(ACT)政府签署了一份为期14年的100MW风力发电设施的电力采购协议。Neoen公司目前还在澳大利亚首都领地建设一个100MW/200MWh独立部署电池储能系统(BESS)。
-
-参考链接：[配套储能900MW！Neoen公司在南澳大利亚建大型风光储项目](https://newenergy.in-en.com/html/newenergy-2410882.shtml)
-
-*发布：*tianzhihuan
-
-**更多资讯，请关注：
+*发布：Mttfly*
+**
+更多资讯，请关注：
 **[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
 [澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
+
 
  
 
